Removed filter and regenerated nationalizations

--- a/nationalization/internal/languages/ar.json
+++ b/nationalization/internal/languages/ar.json
@@ -22,8 +22,16 @@
           "Title": "تصنيف:أفلام"
         },
         {
+          "ID": 36304,
+          "Title": "تصنيف:لون"
+        },
+        {
           "ID": 56024,
           "Title": "تصنيف:ترفيه"
+        },
+        {
+          "ID": 58170,
+          "Title": "تصنيف:ألوان"
         },
         {
           "ID": 60610,
@@ -46,6 +54,10 @@
           "Title": "تصنيف:أطعمة ومشروبات"
         },
         {
+          "ID": 528324,
+          "Title": "تصنيف:تمرين"
+        },
+        {
           "ID": 528649,
           "Title": "تصنيف:أغذية"
         },
@@ -54,8 +66,28 @@
           "Title": "تصنيف:أطباق حسب المكون الرئيسي"
         },
         {
+          "ID": 1491328,
+          "Title": "تصنيف:تقنيات طبخ"
+        },
+        {
+          "ID": 1533273,
+          "Title": "تصنيف:منتجات غذائية"
+        },
+        {
+          "ID": 1867233,
+          "Title": "تصنيف:فن الأكل"
+        },
+        {
+          "ID": 2353893,
+          "Title": "تصنيف:رياضات حسب النوع"
+        },
+        {
           "ID": 2353918,
           "Title": "تصنيف:استجمام"
+        },
+        {
+          "ID": 2353922,
+          "Title": "تصنيف:وقت فراغ"
         },
         {
           "ID": 4193143,
@@ -72,12 +104,24 @@
           "Title": "موسوعة"
         },
         {
+          "ID": 7217,
+          "Title": "بيضة (أحياء)"
+        },
+        {
+          "ID": 11918,
+          "Title": "بن"
+        },
+        {
           "ID": 24168,
           "Title": "مكدوس"
         },
         {
           "ID": 27918,
           "Title": "غرين دي"
+        },
+        {
+          "ID": 29885,
+          "Title": "خنزير"
         },
         {
           "ID": 34960,
@@ -96,12 +140,24 @@
           "Title": "جعة"
         },
         {
+          "ID": 49863,
+          "Title": "خنزير بري"
+        },
+        {
           "ID": 51919,
           "Title": "هوغوورتس"
         },
         {
+          "ID": 54677,
+          "Title": "كاكاو (شجرة)"
+        },
+        {
           "ID": 61769,
           "Title": "شوكولاتة"
+        },
+        {
+          "ID": 94882,
+          "Title": "جنس فموي"
         },
         {
           "ID": 100133,
@@ -140,6 +196,10 @@
           "Title": "واقعية (فن)"
         },
         {
+          "ID": 196854,
+          "Title": "بقسماط (كعك)"
+        },
+        {
           "ID": 232992,
           "Title": "شبح"
         },
@@ -160,6 +220,10 @@
           "Title": "بيض (طعام)"
         },
         {
+          "ID": 306729,
+          "Title": "بسطرمة"
+        },
+        {
           "ID": 315204,
           "Title": "أبو الحروف"
         },
@@ -178,6 +242,10 @@
         {
           "ID": 403017,
           "Title": "دلة"
+        },
+        {
+          "ID": 405418,
+          "Title": "يوريه"
         },
         {
           "ID": 416657,
@@ -258,6 +326,10 @@
         {
           "ID": 801483,
           "Title": "واقعية"
+        },
+        {
+          "ID": 816902,
+          "Title": "خنزير أليف"
         },
         {
           "ID": 817128,
@@ -348,6 +420,10 @@
           "Title": "شوكولاتة بيضاء"
         },
         {
+          "ID": 1315225,
+          "Title": "ويكيبيديا الأستورية"
+        },
+        {
           "ID": 1439261,
           "Title": "فيضان النيل"
         },
@@ -358,6 +434,10 @@
         {
           "ID": 1472396,
           "Title": "خبز فنلندي"
+        },
+        {
+          "ID": 1521323,
+          "Title": "مزلجة"
         },
         {
           "ID": 1526060,
@@ -412,6 +492,10 @@
           "Title": "ساكر بنش"
         },
         {
+          "ID": 1864223,
+          "Title": "بن عربي"
+        },
+        {
           "ID": 1916886,
           "Title": "بي جيويلد (لعبة فيديو)"
         },
@@ -428,12 +512,20 @@
           "Title": "فلابي بيرد"
         },
         {
+          "ID": 1954061,
+          "Title": "طاقم موسيقي"
+        },
+        {
           "ID": 2096363,
           "Title": "كيك (فيلم 2014)"
         },
         {
           "ID": 2300920,
           "Title": "بيض القرن"
+        },
+        {
+          "ID": 2346889,
+          "Title": "تارت"
         },
         {
           "ID": 2376397,
@@ -460,6 +552,10 @@
           "Title": "ألموغروت"
         },
         {
+          "ID": 2826131,
+          "Title": "خبز مفرود"
+        },
+        {
           "ID": 2883877,
           "Title": "غرفة الحرب"
         },
@@ -478,6 +574,10 @@
         {
           "ID": 3237264,
           "Title": "سالو (طعام)"
+        },
+        {
+          "ID": 3310771,
+          "Title": "بيكورينو رومانو"
         },
         {
           "ID": 3311935,
@@ -502,6 +602,10 @@
         {
           "ID": 3698450,
           "Title": "خبز الفرن الطيني"
+        },
+        {
+          "ID": 3896107,
+          "Title": "عمل مرجعي"
         },
         {
           "ID": 3925995,
@@ -600,8 +704,16 @@
           "Title": "هرم"
         },
         {
+          "ID": 4255,
+          "Title": "إنسان"
+        },
+        {
           "ID": 5583,
           "Title": "باريس"
+        },
+        {
+          "ID": 7578,
+          "Title": "أستراليا"
         },
         {
           "ID": 8660,
@@ -622,6 +734,10 @@
         {
           "ID": 218869,
           "Title": "كارلسباد (نيومكسيكو)"
+        },
+        {
+          "ID": 270837,
+          "Title": "إنسان عاقل"
         }
       ]
     },
@@ -648,6 +764,10 @@
         {
           "ID": 181352,
           "Title": "تصنيف:اختصاصات طبية"
+        },
+        {
+          "ID": 746994,
+          "Title": "تصنيف:رعاية صحية"
         },
         {
           "ID": 756416,
@@ -692,6 +812,10 @@
         {
           "ID": 1175575,
           "Title": "تصنيف:انتخابات حسب السنة"
+        },
+        {
+          "ID": 1429766,
+          "Title": "تصنيف:تاريخ حسب الموقع"
         },
         {
           "ID": 1483905,
@@ -864,6 +988,10 @@
         {
           "ID": 874191,
           "Title": "تصنيف:حيوانات حسب القارة"
+        },
+        {
+          "ID": 2506687,
+          "Title": "تصنيف:تخصصات علمية"
         }
       ],
       "Articles": [
@@ -904,6 +1032,14 @@
           "Title": "منجا (فاكهة)"
         },
         {
+          "ID": 31347,
+          "Title": "شمام"
+        },
+        {
+          "ID": 32280,
+          "Title": "جهاز تناسلي"
+        },
+        {
           "ID": 35187,
           "Title": "آس (جنس)"
         },
@@ -928,6 +1064,10 @@
           "Title": "خصية"
         },
         {
+          "ID": 65272,
+          "Title": "علم المياه"
+        },
+        {
           "ID": 65461,
           "Title": "برتقال"
         },
@@ -942,6 +1082,10 @@
         {
           "ID": 123646,
           "Title": "نحام وردي"
+        },
+        {
+          "ID": 144865,
+          "Title": "عضو جنسي"
         },
         {
           "ID": 150825,
@@ -988,6 +1132,10 @@
           "Title": "مستعلق"
         },
         {
+          "ID": 718953,
+          "Title": "شليك"
+        },
+        {
           "ID": 769888,
           "Title": "نيجيرية قزمة (عنزة)"
         },
@@ -1008,6 +1156,10 @@
           "Title": "الإسقمري"
         },
         {
+          "ID": 1059160,
+          "Title": "قمح طري"
+        },
+        {
           "ID": 1182114,
           "Title": "قيق"
         },
@@ -1022,6 +1174,14 @@
         {
           "ID": 1303158,
           "Title": "عصبون حركي"
+        },
+        {
+          "ID": 1478205,
+          "Title": "آس"
+        },
+        {
+          "ID": 1515808,
+          "Title": "التوماتيلو"
         },
         {
           "ID": 1521187,
@@ -1052,12 +1212,20 @@
           "Title": "قط كبير"
         },
         {
+          "ID": 1729031,
+          "Title": "أرز أسيوي"
+        },
+        {
           "ID": 1857042,
           "Title": "اسقمري معروف"
         },
         {
           "ID": 1869682,
           "Title": "مانجو شائع"
+        },
+        {
+          "ID": 2280444,
+          "Title": "قضيب (توضيح)"
         },
         {
           "ID": 2647094,
@@ -1084,6 +1252,10 @@
           "Title": "جهاز عضلي هيكلي"
         },
         {
+          "ID": 3547527,
+          "Title": "أناكوندا (توضيح)"
+        },
+        {
           "ID": 3643781,
           "Title": "حثالة (علم النبات)"
         },
@@ -1100,6 +1272,10 @@
           "Title": "أخبل"
         },
         {
+          "ID": 4968559,
+          "Title": "طرخورة"
+        },
+        {
           "ID": 5270290,
           "Title": "حنجوف"
         },
@@ -1114,12 +1290,24 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 8169,
+          "Title": "تصنيف:حياة"
+        },
+        {
           "ID": 36792,
           "Title": "تصنيف:نساء"
         },
         {
+          "ID": 64657,
+          "Title": "تصنيف:شخصية"
+        },
+        {
           "ID": 189709,
           "Title": "تصنيف:ذات"
+        },
+        {
+          "ID": 245571,
+          "Title": "تصنيف:كتب سيرة ذاتية"
         },
         {
           "ID": 364346,
@@ -1138,8 +1326,20 @@
           "Title": "تصنيف:ألقاب النسب"
         },
         {
+          "ID": 1807351,
+          "Title": "تصنيف:أعمال السير الذاتية"
+        },
+        {
+          "ID": 2332638,
+          "Title": "تصنيف:نظريات الشخصية"
+        },
+        {
           "ID": 2614369,
           "Title": "تصنيف:فنانون حسب المجال الإعلامي"
+        },
+        {
+          "ID": 4028260,
+          "Title": "تصنيف:كتاب سيرة"
         }
       ],
       "Articles": [
@@ -1380,6 +1580,10 @@
           "Title": "إيمان"
         },
         {
+          "ID": 42178,
+          "Title": "عقيدة"
+        },
+        {
           "ID": 59524,
           "Title": "جمال"
         },
@@ -1396,6 +1600,10 @@
           "Title": "ثقة (علم الاجتماع)"
         },
         {
+          "ID": 854326,
+          "Title": "اعتقاد"
+        },
+        {
           "ID": 1636405,
           "Title": "واقعة"
         },
@@ -1406,6 +1614,10 @@
         {
           "ID": 2288488,
           "Title": "تأثير دانينغ-كروجر"
+        },
+        {
+          "ID": 3548263,
+          "Title": "البهجة"
         }
       ]
     },
@@ -1472,6 +1684,10 @@
           "Title": "تصنيف:علوم إنسانية"
         },
         {
+          "ID": 20011,
+          "Title": "تصنيف:إنسانيات"
+        },
+        {
           "ID": 22678,
           "Title": "تصنيف:علوم اجتماعية"
         },
@@ -1486,6 +1702,10 @@
         {
           "ID": 1472461,
           "Title": "تصنيف:جامعات وكليات حسب البلد"
+        },
+        {
+          "ID": 1477018,
+          "Title": "تصنيف:منظمات حكومية دولية"
         },
         {
           "ID": 1764630,
@@ -1687,7 +1907,7 @@
         },
         {
           "ID": 349562,
-          "Title": "جامعة ورك"
+          "Title": "جامعة ووريك"
         },
         {
           "ID": 361518,
@@ -2074,6 +2294,10 @@
           "Title": "جامعة لفيف"
         },
         {
+          "ID": 2398304,
+          "Title": "قانون التوكيل (إدارة الممتلكات)"
+        },
+        {
           "ID": 2544003,
           "Title": "جامعة لا تروب"
         },
@@ -2256,6 +2480,10 @@
           "Title": "تصنيف:نقل"
         },
         {
+          "ID": 59781,
+          "Title": "تصنيف:قواعد بيانات"
+        },
+        {
           "ID": 140560,
           "Title": "تصنيف:إلكترونيات"
         },
@@ -2268,12 +2496,20 @@
           "Title": "تصنيف:تقنية عسكرية"
         },
         {
+          "ID": 356828,
+          "Title": "تصنيف:إدارة البيانات"
+        },
+        {
           "ID": 482480,
           "Title": "تصنيف:علم الحاسوب"
         },
         {
           "ID": 565339,
           "Title": "تصنيف:تكنولوجيا حسب النوع"
+        },
+        {
+          "ID": 758124,
+          "Title": "تصنيف:حواسيب"
         },
         {
           "ID": 969575,
