--- a/nationalization/internal/languages/ba.json
+++ b/nationalization/internal/languages/ba.json
@@ -18,6 +18,10 @@
           "Title": "Категория:Сәнғәт"
         },
         {
+          "ID": 3925,
+          "Title": "Категория:Төҫ"
+        },
+        {
           "ID": 4071,
           "Title": "Категория:Аш"
         },
@@ -30,6 +34,10 @@
           "Title": "Категория:Спорт"
         },
         {
+          "ID": 25840,
+          "Title": "Категория:Аҙыҡ-түлек"
+        },
+        {
           "ID": 33717,
           "Title": "Категория:Ял"
         },
@@ -38,12 +46,28 @@
           "Title": "Категория:Уйын-көлкөләр"
         },
         {
+          "ID": 71103,
+          "Title": "Категория:Гастрономия"
+        },
+        {
+          "ID": 71845,
+          "Title": "Категория:Буш ваҡыт"
+        },
+        {
+          "ID": 76750,
+          "Title": "Категория:Спорт төрҙәре"
+        },
+        {
           "ID": 77262,
           "Title": "Категория:Фильмдар"
         },
         {
           "ID": 86249,
           "Title": "Категория:Музыкаль коллективтар"
+        },
+        {
+          "ID": 88718,
+          "Title": "Категория:Төҫтәр"
         },
         {
           "ID": 91303,
@@ -60,6 +84,10 @@
         {
           "ID": 113481,
           "Title": "Категория:Туҡланыу мәҙәниәте"
+        },
+        {
+          "ID": 114396,
+          "Title": "Категория:Аш-һыу әҙерләү технологияһы"
         }
       ],
       "Articles": [
@@ -80,6 +108,10 @@
           "Title": "Икмәк"
         },
         {
+          "ID": 14738,
+          "Title": "Ҡабан"
+        },
+        {
           "ID": 14780,
           "Title": "Өрәк"
         },
@@ -90,6 +122,10 @@
         {
           "ID": 80393,
           "Title": "Һыра"
+        },
+        {
+          "ID": 87336,
+          "Title": "Йорт сусҡаһы"
         },
         {
           "ID": 97148,
@@ -148,6 +184,10 @@
       ],
       "Articles": [
         {
+          "ID": 3638,
+          "Title": "Австралия"
+        },
+        {
           "ID": 57857,
           "Title": "Париж"
         },
@@ -158,6 +198,10 @@
         {
           "ID": 99271,
           "Title": "Пирамида (архитектура)"
+        },
+        {
+          "ID": 109895,
+          "Title": "Кеше"
         }
       ]
     },
@@ -176,6 +220,10 @@
         {
           "ID": 71950,
           "Title": "Категория:Медицинаның клиник бүлектәре"
+        },
+        {
+          "ID": 90139,
+          "Title": "Категория:Һаулыҡ һаҡлау"
         },
         {
           "ID": 90897,
@@ -206,6 +254,10 @@
         {
           "ID": 83956,
           "Title": "Категория:Мәҙәни тормош"
+        },
+        {
+          "ID": 110237,
+          "Title": "Категория:Урынлашыу буйынса тарих"
         }
       ],
       "Articles": [
@@ -296,6 +348,10 @@
           "Title": "Категория:Химик матдәләр"
         },
         {
+          "ID": 76779,
+          "Title": "Категория:Төркөмдәр буйынса фәндәр"
+        },
+        {
           "ID": 84399,
           "Title": "Категория:Ҡитғалар буйынса фауна"
         },
@@ -316,6 +372,10 @@
         {
           "ID": 4085,
           "Title": "Мышы"
+        },
+        {
+          "ID": 15019,
+          "Title": "Ҡайын еләге"
         },
         {
           "ID": 15046,
@@ -350,6 +410,14 @@
           "Title": "Баҡса культуралары"
         },
         {
+          "ID": 83286,
+          "Title": "Репродуктив система"
+        },
+        {
+          "ID": 99165,
+          "Title": "Гидрология"
+        },
+        {
           "ID": 102578,
           "Title": "Дөгө"
         },
@@ -368,6 +436,14 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 3889,
+          "Title": "Категория:Тормош"
+        },
+        {
+          "ID": 25399,
+          "Title": "Категория:Алфавит буйынса шәхестәр"
+        },
+        {
           "ID": 71844,
           "Title": "Категория:Шәхси тормош"
         },
@@ -378,6 +454,10 @@
         {
           "ID": 81279,
           "Title": "Категория:Фамилиялар"
+        },
+        {
+          "ID": 82102,
+          "Title": "Категория:Шәхес"
         },
         {
           "ID": 85824,
@@ -558,6 +638,10 @@
           "Title": "Категория:Феминизм"
         },
         {
+          "ID": 101630,
+          "Title": "Категория:Халыҡ-ара хөкүмәт-ара ойошмалар"
+        },
+        {
           "ID": 124504,
           "Title": "Категория:Закондар"
         }
@@ -634,6 +718,10 @@
       "Title": "Technology and applied sciences",
       "Categories": [
         {
+          "ID": 3231,
+          "Title": "Категория:Компьютер"
+        },
+        {
           "ID": 4103,
           "Title": "Категория:Технология"
         },
@@ -648,6 +736,10 @@
         {
           "ID": 5926,
           "Title": "Категория:Транспорт"
+        },
+        {
+          "ID": 9508,
+          "Title": "Категория:Техника"
         },
         {
           "ID": 71974,
@@ -684,6 +776,14 @@
         {
           "ID": 103038,
           "Title": "Категория:Технология тарихы"
+        },
+        {
+          "ID": 138981,
+          "Title": "Категория:Мәғлүмәт менән идара итеү"
+        },
+        {
+          "ID": 139007,
+          "Title": "Категория:Мәғлүмәттәр базаһы"
         }
       ],
       "Articles": [
