--- a/nationalization/internal/languages/be-x-old.json
+++ b/nationalization/internal/languages/be-x-old.json
@@ -42,8 +42,16 @@
           "Title": "Катэгорыя:Адпачынак"
         },
         {
+          "ID": 36525,
+          "Title": "Катэгорыя:Колер"
+        },
+        {
           "ID": 37415,
           "Title": "Катэгорыя:Ежа"
+        },
+        {
+          "ID": 43846,
+          "Title": "Катэгорыя:Віды спорту"
         },
         {
           "ID": 48147,
@@ -58,6 +66,10 @@
           "Title": "Катэгорыя:Культура харчаваньня"
         },
         {
+          "ID": 137931,
+          "Title": "Катэгорыя:Вольны час"
+        },
+        {
           "ID": 141999,
           "Title": "Катэгорыя:Стравы"
         },
@@ -66,8 +78,16 @@
           "Title": "Катэгорыя:Спэктаклі"
         },
         {
+          "ID": 194697,
+          "Title": "Катэгорыя:Тэхналёгіі прыгатаваньня ежы"
+        },
+        {
           "ID": 194944,
           "Title": "Катэгорыя:Ежа паводле асноўнага складніку"
+        },
+        {
+          "ID": 198544,
+          "Title": "Катэгорыя:Фізычныя практыкаваньні"
         }
       ],
       "Articles": [
@@ -78,6 +98,10 @@
         {
           "ID": 7119,
           "Title": "Бэкон"
+        },
+        {
+          "ID": 7184,
+          "Title": "Рэчаіснасьць"
         },
         {
           "ID": 7200,
@@ -120,6 +144,10 @@
           "Title": "Хлеб"
         },
         {
+          "ID": 72308,
+          "Title": "Сьвіньня"
+        },
+        {
           "ID": 82424,
           "Title": "Сала"
         },
@@ -144,8 +172,28 @@
           "Title": "Така"
         },
         {
+          "ID": 101348,
+          "Title": "Дзікі"
+        },
+        {
+          "ID": 101894,
+          "Title": "Дзік"
+        },
+        {
+          "ID": 102166,
+          "Title": "Какава"
+        },
+        {
           "ID": 103634,
           "Title": "Рок-гурт"
+        },
+        {
+          "ID": 115605,
+          "Title": "Аральны сэкс"
+        },
+        {
+          "ID": 118382,
+          "Title": "Яйка"
         },
         {
           "ID": 125047,
@@ -166,6 +214,10 @@
         {
           "ID": 150207,
           "Title": "Паста"
+        },
+        {
+          "ID": 152731,
+          "Title": "Сані"
         },
         {
           "ID": 162914,
@@ -232,8 +284,16 @@
           "Title": "Парыж"
         },
         {
+          "ID": 20354,
+          "Title": "Чалавек"
+        },
+        {
           "ID": 21012,
           "Title": "М’янма"
+        },
+        {
+          "ID": 25691,
+          "Title": "Аўстралія"
         },
         {
           "ID": 26084,
@@ -274,6 +334,10 @@
           "Title": "Катэгорыя:Гігіена"
         },
         {
+          "ID": 137835,
+          "Title": "Катэгорыя:Ахова здароўя"
+        },
+        {
           "ID": 165269,
           "Title": "Катэгорыя:Навукі пра здароўе"
         },
@@ -294,6 +358,10 @@
         {
           "ID": 43431,
           "Title": "Катэгорыя:Падзеі"
+        },
+        {
+          "ID": 108605,
+          "Title": "Катэгорыя:Гісторыя па геаграфічных адзінках"
         },
         {
           "ID": 108952,
@@ -412,6 +480,10 @@
           "Title": "Катэгорыя:Фаўна па кантынэнтах"
         },
         {
+          "ID": 36185,
+          "Title": "Катэгорыя:Разьдзелы навук"
+        },
+        {
           "ID": 43475,
           "Title": "Катэгорыя:Фізычныя навукі"
         },
@@ -458,6 +530,10 @@
           "Title": "Дыня"
         },
         {
+          "ID": 90541,
+          "Title": "Рэпрадукцыйная сыстэма"
+        },
+        {
           "ID": 90702,
           "Title": "Цягліцы"
         },
@@ -476,6 +552,10 @@
         {
           "ID": 92022,
           "Title": "Яечкі"
+        },
+        {
+          "ID": 97894,
+          "Title": "Суніцы"
         },
         {
           "ID": 101282,
@@ -528,6 +608,10 @@
           "Title": "Катэгорыя:Асобы"
         },
         {
+          "ID": 3759,
+          "Title": "Катэгорыя:Жыцьцё"
+        },
+        {
           "ID": 23594,
           "Title": "Катэгорыя:Жанчыны"
         },
@@ -548,12 +632,28 @@
           "Title": "Катэгорыя:Жанчына"
         },
         {
+          "ID": 43832,
+          "Title": "Катэгорыя:Асоба"
+        },
+        {
           "ID": 49626,
           "Title": "Катэгорыя:Пэрсанажы фільмаў"
         },
         {
           "ID": 160890,
           "Title": "Катэгорыя:Эга"
+        },
+        {
+          "ID": 181159,
+          "Title": "Катэгорыя:Псыхалёгія асабовасьці"
+        },
+        {
+          "ID": 205018,
+          "Title": "Катэгорыя:Біяграфічныя творы"
+        },
+        {
+          "ID": 205019,
+          "Title": "Катэгорыя:Біяграфія"
         }
       ],
       "Articles": [
@@ -784,6 +884,10 @@
         {
           "ID": 51861,
           "Title": "Катэгорыя:Фэмінізм"
+        },
+        {
+          "ID": 153528,
+          "Title": "Катэгорыя:Міжурадавыя арганізацыі"
         }
       ],
       "Articles": [
@@ -894,6 +998,10 @@
         {
           "ID": 183771,
           "Title": "Трэст"
+        },
+        {
+          "ID": 195355,
+          "Title": "Давернае кіраваньне"
         }
       ]
     },
@@ -910,6 +1018,10 @@
           "Title": "Катэгорыя:Транспарт"
         },
         {
+          "ID": 3291,
+          "Title": "Катэгорыя:Кампутар"
+        },
+        {
           "ID": 4345,
           "Title": "Катэгорыя:Дастасоўныя навукі"
         },
@@ -920,6 +1032,10 @@
         {
           "ID": 11425,
           "Title": "Катэгорыя:Электроніка"
+        },
+        {
+          "ID": 29401,
+          "Title": "Катэгорыя:Тэхніка"
         },
         {
           "ID": 29668,
@@ -940,6 +1056,14 @@
         {
           "ID": 138820,
           "Title": "Катэгорыя:Вылічальная тэхніка"
+        },
+        {
+          "ID": 151251,
+          "Title": "Катэгорыя:Кіраваньне зьвесткамі"
+        },
+        {
+          "ID": 152670,
+          "Title": "Катэгорыя:Базы зьвестак"
         },
         {
           "ID": 174645,
