--- a/nationalization/internal/languages/be.json
+++ b/nationalization/internal/languages/be.json
@@ -10,6 +10,10 @@
           "Title": "Катэгорыя:Культура"
         },
         {
+          "ID": 7579,
+          "Title": "Катэгорыя:Віды спорту"
+        },
+        {
           "ID": 7962,
           "Title": "Катэгорыя:Спорт"
         },
@@ -18,8 +22,16 @@
           "Title": "Катэгорыя:Мастацтва"
         },
         {
+          "ID": 17474,
+          "Title": "Катэгорыя:Харчовыя прадукты"
+        },
+        {
           "ID": 17477,
           "Title": "Катэгорыя:Стравы"
+        },
+        {
+          "ID": 24150,
+          "Title": "Катэгорыя:Колер"
         },
         {
           "ID": 48789,
@@ -50,6 +62,10 @@
           "Title": "Катэгорыя:Кухня"
         },
         {
+          "ID": 84537,
+          "Title": "Катэгорыя:Колеры"
+        },
+        {
           "ID": 88201,
           "Title": "Катэгорыя:Ежа і напоі"
         },
@@ -64,6 +80,10 @@
         {
           "ID": 137385,
           "Title": "Катэгорыя:Музычныя калектывы"
+        },
+        {
+          "ID": 158066,
+          "Title": "Катэгорыя:Тэхналогія прыгатавання ежы"
         }
       ],
       "Articles": [
@@ -90,6 +110,10 @@
         {
           "ID": 23828,
           "Title": "Мінет"
+        },
+        {
+          "ID": 23829,
+          "Title": "Аральны секс"
         },
         {
           "ID": 27865,
@@ -120,8 +144,20 @@
           "Title": "Шакалад"
         },
         {
+          "ID": 50477,
+          "Title": "Дзікі"
+        },
+        {
+          "ID": 54932,
+          "Title": "Яйцо"
+        },
+        {
           "ID": 57304,
           "Title": "Белы шакалад"
+        },
+        {
+          "ID": 57495,
+          "Title": "Какава"
         },
         {
           "ID": 57496,
@@ -140,8 +176,16 @@
           "Title": "Така"
         },
         {
+          "ID": 74054,
+          "Title": "Дзік"
+        },
+        {
           "ID": 74057,
           "Title": "Сала"
+        },
+        {
+          "ID": 74058,
+          "Title": "Свойская свіння"
         },
         {
           "ID": 82002,
@@ -156,12 +200,24 @@
           "Title": "Вяндліна"
         },
         {
+          "ID": 108302,
+          "Title": "Рэалізм (жывапіс)"
+        },
+        {
           "ID": 111454,
           "Title": "Соус"
         },
         {
           "ID": 111481,
           "Title": "Хот-дог"
+        },
+        {
+          "ID": 112726,
+          "Title": "Кафейнае дрэва"
+        },
+        {
+          "ID": 113451,
+          "Title": "Даведнік"
         },
         {
           "ID": 121320,
@@ -174,6 +230,10 @@
         {
           "ID": 123542,
           "Title": "Фарш"
+        },
+        {
+          "ID": 128565,
+          "Title": "Рэчаіснасць"
         },
         {
           "ID": 140530,
@@ -196,12 +256,20 @@
           "Title": "Морс"
         },
         {
+          "ID": 163179,
+          "Title": "Сухары"
+        },
+        {
           "ID": 164767,
           "Title": "Печыва"
         },
         {
           "ID": 165165,
           "Title": "Свініна"
+        },
+        {
+          "ID": 167103,
+          "Title": "Галета"
         },
         {
           "ID": 187875,
@@ -238,6 +306,14 @@
         {
           "ID": 344075,
           "Title": "Яблычнае пюрэ"
+        },
+        {
+          "ID": 344095,
+          "Title": "Тарт"
+        },
+        {
+          "ID": 346130,
+          "Title": "Астурлеонская Вікіпедыя"
         },
         {
           "ID": 474289,
@@ -288,12 +364,20 @@
       ],
       "Articles": [
         {
+          "ID": 1393,
+          "Title": "Аўстралія"
+        },
+        {
           "ID": 3196,
           "Title": "Канбера"
         },
         {
           "ID": 3286,
           "Title": "Парыж"
+        },
+        {
+          "ID": 11737,
+          "Title": "Чалавек"
         },
         {
           "ID": 15112,
@@ -308,8 +392,16 @@
           "Title": "Піраміда (збудаванне)"
         },
         {
+          "ID": 46157,
+          "Title": "Чалавек разумны"
+        },
+        {
           "ID": 72498,
           "Title": "Квінсленд"
+        },
+        {
+          "ID": 587984,
+          "Title": "Карлсбад (Нью-Мексіка)"
         }
       ]
     },
@@ -320,6 +412,10 @@
         {
           "ID": 17278,
           "Title": "Катэгорыя:Здароўе"
+        },
+        {
+          "ID": 21500,
+          "Title": "Катэгорыя:Ахова здароўя"
         },
         {
           "ID": 40921,
@@ -366,9 +462,17 @@
         {
           "ID": 160604,
           "Title": "Катэгорыя:Выбары паводле гадоў"
+        },
+        {
+          "ID": 211729,
+          "Title": "Катэгорыя:Гісторыя паводле геаграфічных адзінак"
         }
       ],
       "Articles": [
+        {
+          "ID": 23156,
+          "Title": "Рымская сістэма мер"
+        },
         {
           "ID": 74928,
           "Title": "Землетрасенне ў Японіі (2011)"
@@ -558,16 +662,40 @@
           "Title": "Мускулы"
         },
         {
+          "ID": 69935,
+          "Title": "Рэпрадуктыўная сістэма"
+        },
+        {
           "ID": 77406,
           "Title": "Фламінга"
+        },
+        {
+          "ID": 87000,
+          "Title": "Рэпрадуктыўная сістэма чалавека"
         },
         {
           "ID": 93560,
           "Title": "Corymbia ficifolia"
         },
         {
+          "ID": 101686,
+          "Title": "Суніцы лясныя"
+        },
+        {
+          "ID": 101896,
+          "Title": "Суніцы"
+        },
+        {
           "ID": 102829,
           "Title": "Мірт"
+        },
+        {
+          "ID": 118331,
+          "Title": "Гідралогія"
+        },
+        {
+          "ID": 136526,
+          "Title": "Стаўрыды"
         },
         {
           "ID": 145893,
@@ -580,6 +708,14 @@
         {
           "ID": 163185,
           "Title": "Суспензія"
+        },
+        {
+          "ID": 169541,
+          "Title": "Фізаліс перуанскі"
+        },
+        {
+          "ID": 169545,
+          "Title": "Мексіканскі тамат"
         },
         {
           "ID": 180278,
@@ -620,6 +756,10 @@
           "Title": "Катэгорыя:Жанчына"
         },
         {
+          "ID": 60925,
+          "Title": "Катэгорыя:Жыццё"
+        },
+        {
           "ID": 60926,
           "Title": "Катэгорыя:Побыт"
         },
@@ -630,6 +770,14 @@
         {
           "ID": 70284,
           "Title": "Катэгорыя:Жанчыны"
+        },
+        {
+          "ID": 101273,
+          "Title": "Катэгорыя:Асоба"
+        },
+        {
+          "ID": 154975,
+          "Title": "Катэгорыя:Псіхалогія асобы"
         },
         {
           "ID": 347906,
@@ -1208,6 +1356,10 @@
           "Title": "Універсітэт Глазга"
         },
         {
+          "ID": 567138,
+          "Title": "Давернае кіраванне"
+        },
+        {
           "ID": 575603,
           "Title": "Манітобскі ўніверсітэт"
         },
@@ -1242,8 +1394,16 @@
           "Title": "Катэгорыя:Транспарт"
         },
         {
+          "ID": 8042,
+          "Title": "Катэгорыя:Тэхніка"
+        },
+        {
           "ID": 8149,
           "Title": "Катэгорыя:Электроніка"
+        },
+        {
+          "ID": 14910,
+          "Title": "Катэгорыя:Базы даных"
         },
         {
           "ID": 61391,
@@ -1262,6 +1422,10 @@
           "Title": "Катэгорыя:Прыкладныя навукі"
         },
         {
+          "ID": 70797,
+          "Title": "Катэгорыя:Камп’ютары"
+        },
+        {
           "ID": 91912,
           "Title": "Катэгорыя:Тэхналогіі паводле тыпу"
         },
@@ -1276,6 +1440,10 @@
         {
           "ID": 569503,
           "Title": "Катэгорыя:Лічбавыя вылічэнні"
+        },
+        {
+          "ID": 572059,
+          "Title": "Катэгорыя:Кіраванне данымі"
         }
       ],
       "Articles": [
