--- a/nationalization/internal/languages/bg.json
+++ b/nationalization/internal/languages/bg.json
@@ -18,6 +18,10 @@
           "Title": "Категория:Култура"
         },
         {
+          "ID": 17982,
+          "Title": "Категория:Цветове"
+        },
+        {
           "ID": 19862,
           "Title": "Категория:Хобита"
         },
@@ -46,8 +50,24 @@
           "Title": "Категория:Кухня"
         },
         {
+          "ID": 85630,
+          "Title": "Категория:Видове спорт"
+        },
+        {
+          "ID": 369082,
+          "Title": "Категория:Цвят"
+        },
+        {
           "ID": 491048,
           "Title": "Категория:Изкуство"
+        },
+        {
+          "ID": 606053,
+          "Title": "Категория:Свободно време"
+        },
+        {
+          "ID": 625149,
+          "Title": "Категория:Физически упражнения"
         }
       ],
       "Articles": [
@@ -72,12 +92,20 @@
           "Title": "Лед Цепелин"
         },
         {
+          "ID": 51648,
+          "Title": "Домашна свиня"
+        },
+        {
           "ID": 52191,
           "Title": "Кафе"
         },
         {
           "ID": 65629,
           "Title": "Хляб"
+        },
+        {
+          "ID": 67284,
+          "Title": "Орален секс"
         },
         {
           "ID": 72142,
@@ -136,6 +164,10 @@
           "Title": "Дух (призрак)"
         },
         {
+          "ID": 139215,
+          "Title": "Музикална група"
+        },
+        {
           "ID": 143390,
           "Title": "Аш Кечъм"
         },
@@ -160,6 +192,14 @@
           "Title": "Неси"
         },
         {
+          "ID": 177018,
+          "Title": "Дива свиня"
+        },
+        {
+          "ID": 179275,
+          "Title": "Пастърма"
+        },
+        {
           "ID": 180276,
           "Title": "Кайма"
         },
@@ -178,6 +218,10 @@
         {
           "ID": 212092,
           "Title": "Мордред"
+        },
+        {
+          "ID": 224831,
+          "Title": "Шейна"
         },
         {
           "ID": 249985,
@@ -204,6 +248,10 @@
           "Title": "Реалност"
         },
         {
+          "ID": 305742,
+          "Title": "Яйце (зоология)"
+        },
+        {
           "ID": 310059,
           "Title": "Паста (кулинария)"
         },
@@ -214,6 +262,10 @@
         {
           "ID": 314483,
           "Title": "Sucker Punch: Измислен свят"
+        },
+        {
+          "ID": 335788,
+          "Title": "Какаово дърво"
         },
         {
           "ID": 340249,
@@ -264,6 +316,10 @@
           "Title": "Горещ шоколад"
         },
         {
+          "ID": 451774,
+          "Title": "Уикипедия на астурски език"
+        },
+        {
           "ID": 469805,
           "Title": "Черен хляб"
         },
@@ -282,6 +338,10 @@
         {
           "ID": 621610,
           "Title": "Евровизия 2017"
+        },
+        {
+          "ID": 626729,
+          "Title": "Кафеено дърво"
         },
         {
           "ID": 649393,
@@ -336,8 +396,16 @@
           "Title": "Париж"
         },
         {
+          "ID": 18386,
+          "Title": "Австралия"
+        },
+        {
           "ID": 27021,
           "Title": "Венеция"
+        },
+        {
+          "ID": 48080,
+          "Title": "Човек"
         },
         {
           "ID": 58077,
@@ -354,6 +422,10 @@
         {
           "ID": 192705,
           "Title": "Пирамида (архитектура)"
+        },
+        {
+          "ID": 399850,
+          "Title": "Разумен човек"
         }
       ]
     },
@@ -376,6 +448,10 @@
         {
           "ID": 46668,
           "Title": "Категория:Хигиена"
+        },
+        {
+          "ID": 199044,
+          "Title": "Категория:Здравеопазване"
         },
         {
           "ID": 572900,
@@ -420,6 +496,10 @@
         {
           "ID": 73119,
           "Title": "Атентати от 11 септември 2001 г."
+        },
+        {
+          "ID": 109491,
+          "Title": "Древноримски мерни единици"
         },
         {
           "ID": 219745,
@@ -534,6 +614,10 @@
         {
           "ID": 481779,
           "Title": "Категория:Науки за околната среда"
+        },
+        {
+          "ID": 572901,
+          "Title": "Категория:Научноизследователски области"
         }
       ],
       "Articles": [
@@ -544,6 +628,14 @@
         {
           "ID": 14386,
           "Title": "Пшеница"
+        },
+        {
+          "ID": 15573,
+          "Title": "Зимна пшеница"
+        },
+        {
+          "ID": 17608,
+          "Title": "Ягода"
         },
         {
           "ID": 22528,
@@ -570,6 +662,10 @@
           "Title": "Мастурбация"
         },
         {
+          "ID": 55736,
+          "Title": "Горска ягода"
+        },
+        {
           "ID": 58068,
           "Title": "Анаконди"
         },
@@ -588,6 +684,10 @@
         {
           "ID": 81401,
           "Title": "Кръговрат на водата"
+        },
+        {
+          "ID": 87848,
+          "Title": "Хидрология"
         },
         {
           "ID": 89604,
@@ -654,6 +754,14 @@
           "Title": "Пъпеш"
         },
         {
+          "ID": 238084,
+          "Title": "Полова система"
+        },
+        {
+          "ID": 279793,
+          "Title": "Сафриди"
+        },
+        {
           "ID": 351703,
           "Title": "Календар на маите"
         },
@@ -686,6 +794,10 @@
           "Title": "Pseudacris crucifer"
         },
         {
+          "ID": 570532,
+          "Title": "Индийска скумрия"
+        },
+        {
           "ID": 623474,
           "Title": "Покълване"
         },
@@ -708,6 +820,10 @@
           "Title": "Категория:Личен живот"
         },
         {
+          "ID": 30537,
+          "Title": "Категория:Жив свят"
+        },
+        {
           "ID": 66968,
           "Title": "Категория:Фамилни имена"
         },
@@ -718,6 +834,18 @@
         {
           "ID": 314114,
           "Title": "Категория:Жени"
+        },
+        {
+          "ID": 327271,
+          "Title": "Категория:Биографии"
+        },
+        {
+          "ID": 340410,
+          "Title": "Категория:Биография"
+        },
+        {
+          "ID": 493229,
+          "Title": "Категория:Индивидуалност"
         },
         {
           "ID": 665099,
@@ -926,6 +1054,10 @@
           "Title": "Факт"
         },
         {
+          "ID": 128004,
+          "Title": "Алегрия"
+        },
+        {
           "ID": 161703,
           "Title": "Вяра"
         },
@@ -936,6 +1068,10 @@
         {
           "ID": 173023,
           "Title": "Красота"
+        },
+        {
+          "ID": 179662,
+          "Title": "Радост"
         },
         {
           "ID": 409174,
@@ -1016,6 +1152,10 @@
         {
           "ID": 498660,
           "Title": "Категория:Права"
+        },
+        {
+          "ID": 585338,
+          "Title": "Категория:Междуправителствени организации"
         }
       ],
       "Articles": [
@@ -1322,6 +1462,10 @@
           "Title": "Категория:Приложни науки"
         },
         {
+          "ID": 24931,
+          "Title": "Категория:Техника"
+        },
+        {
           "ID": 27038,
           "Title": "Категория:Електроника"
         },
@@ -1334,6 +1478,10 @@
           "Title": "Категория:Дизайн"
         },
         {
+          "ID": 54625,
+          "Title": "Категория:Компютри"
+        },
+        {
           "ID": 81327,
           "Title": "Категория:Военна техника"
         },
@@ -1342,8 +1490,16 @@
           "Title": "Категория:Военни технологии"
         },
         {
+          "ID": 242479,
+          "Title": "Категория:Бази данни"
+        },
+        {
           "ID": 310547,
           "Title": "Категория:Изчислителна техника"
+        },
+        {
+          "ID": 346738,
+          "Title": "Категория:Управление на данни"
         },
         {
           "ID": 458364,
