--- a/nationalization/internal/languages/bn.json
+++ b/nationalization/internal/languages/bn.json
@@ -30,6 +30,10 @@
           "Title": "বিষয়শ্রেণী:শিল্পকলা"
         },
         {
+          "ID": 34487,
+          "Title": "বিষয়শ্রেণী:রঙ"
+        },
+        {
           "ID": 36045,
           "Title": "বিষয়শ্রেণী:রন্ধনপ্রণালী"
         },
@@ -40,6 +44,18 @@
         {
           "ID": 90481,
           "Title": "বিষয়শ্রেণী:শখ"
+        },
+        {
+          "ID": 272529,
+          "Title": "বিষয়শ্রেণী:অবসর"
+        },
+        {
+          "ID": 285968,
+          "Title": "বিষয়শ্রেণী:ধরন অনুযায়ী ক্রীড়া"
+        },
+        {
+          "ID": 369170,
+          "Title": "বিষয়শ্রেণী:শারীরিক ব্যায়াম"
         },
         {
           "ID": 397194,
@@ -80,6 +96,10 @@
           "Title": "কফি"
         },
         {
+          "ID": 5735,
+          "Title": "দেশি বন শুকর"
+        },
+        {
           "ID": 10371,
           "Title": "বিয়ার"
         },
@@ -96,8 +116,16 @@
           "Title": "চকলেট"
         },
         {
+          "ID": 84066,
+          "Title": "শূকর"
+        },
+        {
           "ID": 84691,
           "Title": "রুটি"
+        },
+        {
+          "ID": 88786,
+          "Title": "ডিম"
         },
         {
           "ID": 88890,
@@ -110,6 +138,10 @@
         {
           "ID": 110153,
           "Title": "হগওয়ার্টস"
+        },
+        {
+          "ID": 111948,
+          "Title": "কোকোয়া"
         },
         {
           "ID": 137723,
@@ -156,6 +188,10 @@
           "Title": "গ্রিন ডে"
         },
         {
+          "ID": 537115,
+          "Title": "আস্তুরিয় উইকিপিডিয়া"
+        },
+        {
           "ID": 539301,
           "Title": "পাস্তা"
         },
@@ -172,8 +208,16 @@
           "Title": "ভাজা নুডুলস"
         },
         {
+          "ID": 571883,
+          "Title": "মুখমৈথুন"
+        },
+        {
           "ID": 574617,
           "Title": "শূকরের মাংস"
+        },
+        {
+          "ID": 626819,
+          "Title": "ব্যান্ড (রক এবং পপ)"
         },
         {
           "ID": 645530,
@@ -204,8 +248,16 @@
       ],
       "Articles": [
         {
+          "ID": 1171,
+          "Title": "অস্ট্রেলিয়া"
+        },
+        {
           "ID": 1296,
           "Title": "ক্যানবেরা"
+        },
+        {
+          "ID": 1525,
+          "Title": "মানুষ"
         },
         {
           "ID": 3550,
@@ -246,12 +298,20 @@
           "Title": "বিষয়শ্রেণী:স্বাস্থ্য বিজ্ঞান"
         },
         {
+          "ID": 492802,
+          "Title": "বিষয়শ্রেণী:চিকিৎসা বিজ্ঞান"
+        },
+        {
           "ID": 533814,
           "Title": "বিষয়শ্রেণী:জেনেটিক রোগ"
         },
         {
           "ID": 667584,
           "Title": "বিষয়শ্রেণী:স্বাস্থ্যসেবা পেশা"
+        },
+        {
+          "ID": 667586,
+          "Title": "বিষয়শ্রেণী:স্বাস্থ্যসেবা"
         },
         {
           "ID": 673860,
@@ -286,6 +346,10 @@
         {
           "ID": 408773,
           "Title": "বিষয়শ্রেণী:ঘটনাবলী"
+        },
+        {
+          "ID": 529297,
+          "Title": "বিষয়শ্রেণী:স্থান অনুযায়ী ইতিহাস"
         }
       ],
       "Articles": [
@@ -394,9 +458,17 @@
         {
           "ID": 667755,
           "Title": "বিষয়শ্রেণী:প্রাকৃতিক বিজ্ঞান"
+        },
+        {
+          "ID": 667756,
+          "Title": "বিষয়শ্রেণী:বিজ্ঞানের শাখা"
         }
       ],
       "Articles": [
+        {
+          "ID": 3732,
+          "Title": "ধান"
+        },
         {
           "ID": 4455,
           "Title": "উট"
@@ -426,12 +498,20 @@
           "Title": "শুক্রাশয়"
         },
         {
+          "ID": 17818,
+          "Title": "প্রজনন তন্ত্র"
+        },
+        {
           "ID": 42262,
           "Title": "ঘুঁটে"
         },
         {
           "ID": 72907,
           "Title": "গম"
+        },
+        {
+          "ID": 82013,
+          "Title": "যৌন অঙ্গ"
         },
         {
           "ID": 83957,
@@ -516,8 +596,20 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 4369,
+          "Title": "বিষয়শ্রেণী:জীবনী"
+        },
+        {
+          "ID": 64400,
+          "Title": "বিষয়শ্রেণী:জীবন"
+        },
+        {
           "ID": 64403,
           "Title": "বিষয়শ্রেণী:ব্যক্তিগত জীবন"
+        },
+        {
+          "ID": 69929,
+          "Title": "বিষয়শ্রেণী:জীবনীগ্রন্থ"
         },
         {
           "ID": 96430,
@@ -530,6 +622,10 @@
         {
           "ID": 503012,
           "Title": "বিষয়শ্রেণী:ব্যক্তি"
+        },
+        {
+          "ID": 605646,
+          "Title": "বিষয়শ্রেণী:জীবনীমূলক কাজ"
         },
         {
           "ID": 667778,
@@ -702,6 +798,10 @@
           "Title": "সুখ"
         },
         {
+          "ID": 41817,
+          "Title": "বিশ্বাস"
+        },
+        {
           "ID": 312317,
           "Title": "বাস্তব সত্য"
         },
@@ -768,6 +868,10 @@
         {
           "ID": 265734,
           "Title": "বিষয়শ্রেণী:নারীবাদ"
+        },
+        {
+          "ID": 402989,
+          "Title": "বিষয়শ্রেণী:কলাবিদ্যা"
         },
         {
           "ID": 660927,
@@ -1049,7 +1153,7 @@
         },
         {
           "ID": 720026,
-          "Title": "অস্ট্রেলিয়া ন্যাশনাল বিশ্ববিদ্যালয়"
+          "Title": "অস্ট্রেলিয়ান ন্যাশনাল ইউনিভার্সিটি"
         }
       ]
     },
@@ -1062,6 +1166,10 @@
           "Title": "বিষয়শ্রেণী:কম্পিউটার বিজ্ঞান"
         },
         {
+          "ID": 7834,
+          "Title": "বিষয়শ্রেণী:কম্পিউটার"
+        },
+        {
           "ID": 10144,
           "Title": "বিষয়শ্রেণী:প্রযুক্তি"
         },
@@ -1072,6 +1180,10 @@
         {
           "ID": 28465,
           "Title": "বিষয়শ্রেণী:পরিবহন"
+        },
+        {
+          "ID": 28736,
+          "Title": "বিষয়শ্রেণী:উপাত্ত ব্যবস্থাপনা"
         },
         {
           "ID": 28738,
@@ -1092,6 +1204,10 @@
         {
           "ID": 93954,
           "Title": "বিষয়শ্রেণী:ধরন অনুযায়ী প্রযুক্তি"
+        },
+        {
+          "ID": 407242,
+          "Title": "বিষয়শ্রেণী:ডেটাবেজ"
         },
         {
           "ID": 596322,
