--- a/nationalization/internal/languages/cs.json
+++ b/nationalization/internal/languages/cs.json
@@ -22,12 +22,28 @@
           "Title": "Kategorie:Sport"
         },
         {
+          "ID": 4664,
+          "Title": "Kategorie:Sporty"
+        },
+        {
+          "ID": 4685,
+          "Title": "Kategorie:Gastronomie"
+        },
+        {
           "ID": 4751,
           "Title": "Kategorie:Záliby"
         },
         {
           "ID": 5305,
           "Title": "Kategorie:Filmy"
+        },
+        {
+          "ID": 6806,
+          "Title": "Kategorie:Barva"
+        },
+        {
+          "ID": 6807,
+          "Title": "Kategorie:Barvy"
         },
         {
           "ID": 9681,
@@ -40,6 +56,10 @@
         {
           "ID": 76188,
           "Title": "Kategorie:Výživa"
+        },
+        {
+          "ID": 270974,
+          "Title": "Kategorie:Příprava jídla"
         },
         {
           "ID": 323645,
@@ -76,6 +96,14 @@
           "Title": "Káva"
         },
         {
+          "ID": 6965,
+          "Title": "Kávovník"
+        },
+        {
+          "ID": 9030,
+          "Title": "Vejce"
+        },
+        {
           "ID": 12546,
           "Title": "Zmrzlina"
         },
@@ -104,12 +132,28 @@
           "Title": "Led Zeppelin"
         },
         {
+          "ID": 29129,
+          "Title": "Orální sex"
+        },
+        {
           "ID": 30364,
           "Title": "Šunka"
         },
         {
+          "ID": 33547,
+          "Title": "Saně"
+        },
+        {
           "ID": 35823,
           "Title": "Pivo plzeňského typu"
+        },
+        {
+          "ID": 70561,
+          "Title": "Hudební soubor"
+        },
+        {
+          "ID": 71168,
+          "Title": "Prase domácí"
         },
         {
           "ID": 96444,
@@ -152,12 +196,24 @@
           "Title": "Felace"
         },
         {
+          "ID": 186347,
+          "Title": "Prase divoké"
+        },
+        {
           "ID": 198567,
           "Title": "Realismus"
         },
         {
+          "ID": 210501,
+          "Title": "Band"
+        },
+        {
           "ID": 215105,
           "Title": "Pizza"
+        },
+        {
+          "ID": 220956,
+          "Title": "Realismus (výtvarné umění)"
         },
         {
           "ID": 241476,
@@ -236,6 +292,14 @@
           "Title": "Skutečnost"
         },
         {
+          "ID": 434045,
+          "Title": "Kávovník arabský"
+        },
+        {
+          "ID": 434099,
+          "Title": "Kakaovník pravý"
+        },
+        {
           "ID": 439424,
           "Title": "Dort"
         },
@@ -256,12 +320,20 @@
           "Title": "Arašídové máslo"
         },
         {
+          "ID": 544993,
+          "Title": "Prase"
+        },
+        {
           "ID": 593619,
           "Title": "Nealkoholické pivo"
         },
         {
           "ID": 599305,
           "Title": "Francouzská kuchyně"
+        },
+        {
+          "ID": 663767,
+          "Title": "Pecorino"
         },
         {
           "ID": 664594,
@@ -296,6 +368,10 @@
           "Title": "Sucker Punch"
         },
         {
+          "ID": 1024548,
+          "Title": "Suchar"
+        },
+        {
           "ID": 1097660,
           "Title": "Flappy Bird"
         },
@@ -306,6 +382,10 @@
         {
           "ID": 1147867,
           "Title": "Válka skladů"
+        },
+        {
+          "ID": 1154943,
+          "Title": "Asturská Wikipedie"
         },
         {
           "ID": 1168710,
@@ -384,8 +464,16 @@
           "Title": "Myanmar"
         },
         {
+          "ID": 6341,
+          "Title": "Austrálie"
+        },
+        {
           "ID": 10104,
           "Title": "Benátky"
+        },
+        {
+          "ID": 12165,
+          "Title": "Člověk moudrý"
         },
         {
           "ID": 37453,
@@ -408,6 +496,10 @@
         {
           "ID": 4636,
           "Title": "Kategorie:Lékařství"
+        },
+        {
+          "ID": 4727,
+          "Title": "Kategorie:Zdravotnictví"
         },
         {
           "ID": 31961,
@@ -464,6 +556,10 @@
         {
           "ID": 139381,
           "Title": "Zpochybňování holokaustu"
+        },
+        {
+          "ID": 332651,
+          "Title": "Římské míry"
         },
         {
           "ID": 573080,
@@ -582,6 +678,10 @@
           "Title": "Oheň"
         },
         {
+          "ID": 11116,
+          "Title": "Klásek"
+        },
+        {
           "ID": 11535,
           "Title": "Pleva"
         },
@@ -610,6 +710,14 @@
           "Title": "Pomeranč"
         },
         {
+          "ID": 31258,
+          "Title": "Hydrologie"
+        },
+        {
+          "ID": 44091,
+          "Title": "Rýže setá"
+        },
+        {
           "ID": 44373,
           "Title": "Masturbace"
         },
@@ -628,6 +736,10 @@
         {
           "ID": 69268,
           "Title": "Varle"
+        },
+        {
+          "ID": 70519,
+          "Title": "Jahodník"
         },
         {
           "ID": 75979,
@@ -660,6 +772,10 @@
         {
           "ID": 182860,
           "Title": "Slíďákovití"
+        },
+        {
+          "ID": 186599,
+          "Title": "Pohlavní orgán"
         },
         {
           "ID": 186846,
@@ -698,6 +814,10 @@
           "Title": "Meloun"
         },
         {
+          "ID": 350482,
+          "Title": "Rozmnožovací soustava"
+        },
+        {
           "ID": 350822,
           "Title": "Rosničkovití"
         },
@@ -726,12 +846,20 @@
           "Title": "Garrulus"
         },
         {
+          "ID": 521468,
+          "Title": "Jahodník obecný"
+        },
+        {
           "ID": 524033,
           "Title": "Klíčení semene"
         },
         {
           "ID": 528231,
           "Title": "Myrta"
+        },
+        {
+          "ID": 528232,
+          "Title": "Myrta obecná"
         },
         {
           "ID": 631359,
@@ -750,12 +878,24 @@
           "Title": "Šácholan liliokvětý"
         },
         {
+          "ID": 859688,
+          "Title": "Tykev velkoplodá"
+        },
+        {
+          "ID": 884887,
+          "Title": "Pšenice setá"
+        },
+        {
           "ID": 918875,
           "Title": "Jahodník velkoplodý"
         },
         {
           "ID": 1137557,
           "Title": "Lepkavá rýže"
+        },
+        {
+          "ID": 1179651,
+          "Title": "Mochyně peruánská"
         },
         {
           "ID": 1208556,
@@ -768,6 +908,10 @@
         {
           "ID": 1224302,
           "Title": "Mangovník indický"
+        },
+        {
+          "ID": 1287232,
+          "Title": "Tomatillo"
         },
         {
           "ID": 1321948,
@@ -800,12 +944,24 @@
           "Title": "Kategorie:Žena"
         },
         {
+          "ID": 63961,
+          "Title": "Kategorie:Život"
+        },
+        {
           "ID": 63984,
           "Title": "Kategorie:Osobní život"
         },
         {
+          "ID": 63987,
+          "Title": "Kategorie:Osobnost"
+        },
+        {
           "ID": 77279,
           "Title": "Kategorie:Příjmení"
+        },
+        {
+          "ID": 187274,
+          "Title": "Kategorie:Biografie"
         },
         {
           "ID": 290343,
@@ -1030,6 +1186,10 @@
           "Title": "Krása"
         },
         {
+          "ID": 387933,
+          "Title": "Radost"
+        },
+        {
           "ID": 403326,
           "Title": "Důvěra"
         },
@@ -1102,8 +1262,16 @@
           "Title": "Kategorie:Zákony"
         },
         {
+          "ID": 683321,
+          "Title": "Kategorie:Mezivládní organizace"
+        },
+        {
           "ID": 1365109,
           "Title": "Kategorie:Společenské vědy"
+        },
+        {
+          "ID": 1365112,
+          "Title": "Kategorie:Humanitní vědy"
         }
       ],
       "Articles": [
@@ -1226,6 +1394,10 @@
         {
           "ID": 388798,
           "Title": "University of Arizona"
+        },
+        {
+          "ID": 403003,
+          "Title": "Trust"
         },
         {
           "ID": 411035,
@@ -1474,6 +1646,14 @@
           "Title": "Kategorie:Internet"
         },
         {
+          "ID": 4485,
+          "Title": "Kategorie:Počítače"
+        },
+        {
+          "ID": 4799,
+          "Title": "Kategorie:Databáze"
+        },
+        {
           "ID": 5636,
           "Title": "Kategorie:Doprava"
         },
@@ -1490,6 +1670,10 @@
           "Title": "Kategorie:Elektronika"
         },
         {
+          "ID": 13594,
+          "Title": "Kategorie:Technika"
+        },
+        {
           "ID": 38933,
           "Title": "Kategorie:Design"
         },
@@ -1504,6 +1688,10 @@
         {
           "ID": 152576,
           "Title": "Kategorie:Vojenská technika"
+        },
+        {
+          "ID": 980613,
+          "Title": "Kategorie:Zpracování dat"
         }
       ],
       "Articles": [
