--- a/nationalization/internal/languages/cy.json
+++ b/nationalization/internal/languages/cy.json
@@ -34,8 +34,28 @@
           "Title": "Categori:Diwylliant"
         },
         {
+          "ID": 13412,
+          "Title": "Categori:Hamdden"
+        },
+        {
+          "ID": 14196,
+          "Title": "Categori:Lliwiau"
+        },
+        {
           "ID": 14579,
           "Title": "Categori:Bandiau"
+        },
+        {
+          "ID": 45617,
+          "Title": "Categori:Ymarfer corff"
+        },
+        {
+          "ID": 70568,
+          "Title": "Categori:Chwaraeon yn ôl math"
+        },
+        {
+          "ID": 82886,
+          "Title": "Categori:Technegau coginio"
         },
         {
           "ID": 124502,
@@ -72,6 +92,10 @@
           "Title": "Cwrw"
         },
         {
+          "ID": 3387,
+          "Title": "Mochyn (dof)"
+        },
+        {
           "ID": 6560,
           "Title": "Teisen"
         },
@@ -96,12 +120,20 @@
           "Title": "Led Zeppelin"
         },
         {
+          "ID": 37065,
+          "Title": "Baedd gwyllt"
+        },
+        {
           "ID": 39568,
           "Title": "Sgt. Pepper's Lonely Hearts Club Band"
         },
         {
           "ID": 40326,
           "Title": "Medrawd"
+        },
+        {
+          "ID": 45484,
+          "Title": "Mochyn"
         },
         {
           "ID": 45830,
@@ -132,12 +164,20 @@
           "Title": "Ysbryd"
         },
         {
+          "ID": 67046,
+          "Title": "Wicipedia Cymraeg"
+        },
+        {
           "ID": 68460,
           "Title": "Realaeth"
         },
         {
           "ID": 74595,
           "Title": "Calsugno"
+        },
+        {
+          "ID": 74803,
+          "Title": "Rhyw geneuol"
         },
         {
           "ID": 79973,
@@ -184,6 +224,10 @@
           "Title": "Pei"
         },
         {
+          "ID": 160340,
+          "Title": "Tarten"
+        },
+        {
           "ID": 167576,
           "Title": "Enllyn"
         },
@@ -204,12 +248,20 @@
           "Title": "Cystadleuaeth Cân Eurovision 2017"
         },
         {
+          "ID": 232742,
+          "Title": "Car llusg"
+        },
+        {
           "ID": 232797,
           "Title": "Ci poeth"
         },
         {
           "ID": 233150,
           "Title": "Briwgig"
+        },
+        {
+          "ID": 233303,
+          "Title": "Bara fflat"
         }
       ]
     },
@@ -240,6 +292,10 @@
           "Title": "Paris"
         },
         {
+          "ID": 3918,
+          "Title": "Awstralia"
+        },
+        {
           "ID": 8611,
           "Title": "Myanmar"
         },
@@ -252,12 +308,20 @@
           "Title": "Queensland"
         },
         {
+          "ID": 25093,
+          "Title": "Bod dynol"
+        },
+        {
           "ID": 25340,
           "Title": "Canberra"
         },
         {
           "ID": 28194,
           "Title": "Pyramid"
+        },
+        {
+          "ID": 46478,
+          "Title": "Homo sapiens"
         },
         {
           "ID": 100738,
@@ -284,6 +348,10 @@
         {
           "ID": 34940,
           "Title": "Categori:Gwyddorau iechyd"
+        },
+        {
+          "ID": 64676,
+          "Title": "Categori:Gofal iechyd"
         },
         {
           "ID": 65407,
@@ -458,6 +526,10 @@
           "Title": "Camel"
         },
         {
+          "ID": 9789,
+          "Title": "Myrtwydd"
+        },
+        {
           "ID": 12459,
           "Title": "Caill"
         },
@@ -474,6 +546,10 @@
           "Title": "Cyhyr"
         },
         {
+          "ID": 27028,
+          "Title": "Hydroleg"
+        },
+        {
           "ID": 45623,
           "Title": "Lemon"
         },
@@ -484,6 +560,14 @@
         {
           "ID": 51910,
           "Title": "System gyhyrol"
+        },
+        {
+          "ID": 52416,
+          "Title": "System atgenhedlu"
+        },
+        {
+          "ID": 52464,
+          "Title": "Organau rhyw"
         },
         {
           "ID": 52588,
@@ -504,6 +588,10 @@
         {
           "ID": 154386,
           "Title": "Sbriwsen Engelmann"
+        },
+        {
+          "ID": 155026,
+          "Title": "Gwsberen Periw"
         },
         {
           "ID": 188398,
@@ -532,12 +620,24 @@
           "Title": "Categori:Bywyd personol"
         },
         {
+          "ID": 25458,
+          "Title": "Categori:Bywyd"
+        },
+        {
           "ID": 26602,
           "Title": "Categori:Merched"
         },
         {
           "ID": 26935,
           "Title": "Categori:Cyfenwau"
+        },
+        {
+          "ID": 28729,
+          "Title": "Categori:Cofiannau"
+        },
+        {
+          "ID": 29422,
+          "Title": "Categori:Personoliaeth"
         },
         {
           "ID": 29423,
@@ -608,6 +708,10 @@
         {
           "ID": 24678,
           "Title": "Johannes Kepler"
+        },
+        {
+          "ID": 37026,
+          "Title": "Y Lindysyn Llwglyd Iawn"
         },
         {
           "ID": 38966,
@@ -726,6 +830,10 @@
           "Title": "Prydferthwch"
         },
         {
+          "ID": 84325,
+          "Title": "Credo"
+        },
+        {
           "ID": 216665,
           "Title": "Hapusrwydd"
         }
@@ -786,12 +894,20 @@
           "Title": "Categori:Hawliau"
         },
         {
+          "ID": 34945,
+          "Title": "Categori:Gwyddorau dynol"
+        },
+        {
           "ID": 45295,
           "Title": "Categori:Cyfraith statudol"
         },
         {
           "ID": 86483,
           "Title": "Categori:Ffeministiaeth"
+        },
+        {
+          "ID": 148583,
+          "Title": "Categori:Sefydliadau rhynglywodraethol"
         }
       ],
       "Articles": [
@@ -998,6 +1114,10 @@
           "Title": "Categori:Rhyngrwyd"
         },
         {
+          "ID": 16027,
+          "Title": "Categori:Rheolaeth data"
+        },
+        {
           "ID": 23027,
           "Title": "Categori:Trydaneg"
         },
@@ -1020,6 +1140,14 @@
         {
           "ID": 220579,
           "Title": "Categori:Rhaglenni ar ddyfeisiau symudol"
+        },
+        {
+          "ID": 220588,
+          "Title": "Categori:Cyfrifiaduron"
+        },
+        {
+          "ID": 233517,
+          "Title": "Categori:Rheoli data"
         }
       ],
       "Articles": [
