--- a/nationalization/internal/languages/de.json
+++ b/nationalization/internal/languages/de.json
@@ -10,6 +10,10 @@
           "Title": "Kategorie:Sport"
         },
         {
+          "ID": 236011,
+          "Title": "Kategorie:Sportart"
+        },
+        {
           "ID": 236624,
           "Title": "Kategorie:Filmtitel"
         },
@@ -30,6 +34,18 @@
           "Title": "Kategorie:Ernährung"
         },
         {
+          "ID": 494641,
+          "Title": "Kategorie:Gastronomie"
+        },
+        {
+          "ID": 594705,
+          "Title": "Kategorie:Farben"
+        },
+        {
+          "ID": 939079,
+          "Title": "Kategorie:Ensemble"
+        },
+        {
           "ID": 1062488,
           "Title": "Kategorie:Urlaub und Erholung"
         },
@@ -42,8 +58,20 @@
           "Title": "Kategorie:Gericht (Essen und Trinken)"
         },
         {
+          "ID": 2145798,
+          "Title": "Kategorie:Freizeit"
+        },
+        {
           "ID": 3056826,
           "Title": "Kategorie:Musikgruppe"
+        },
+        {
+          "ID": 3665910,
+          "Title": "Kategorie:Trainingsübung"
+        },
+        {
+          "ID": 6872598,
+          "Title": "Kategorie:Technologie der Speisenherstellung"
         },
         {
           "ID": 7561558,
@@ -60,8 +88,16 @@
           "Title": "Enzyklopädie"
         },
         {
+          "ID": 3650,
+          "Title": "Nachschlagewerk"
+        },
+        {
           "ID": 4169,
           "Title": "Pilsner Bier"
+        },
+        {
+          "ID": 4596,
+          "Title": "Hausschwein"
         },
         {
           "ID": 10256,
@@ -84,6 +120,14 @@
           "Title": "Zölibat"
         },
         {
+          "ID": 14663,
+          "Title": "Band"
+        },
+        {
+          "ID": 19971,
+          "Title": "Wildschwein"
+        },
+        {
           "ID": 26622,
           "Title": "AC/DC"
         },
@@ -92,12 +136,24 @@
           "Title": "Fellatio"
         },
         {
+          "ID": 29257,
+          "Title": "Oralverkehr"
+        },
+        {
+          "ID": 34022,
+          "Title": "Band (Musik)"
+        },
+        {
           "ID": 36194,
           "Title": "Realismus (Philosophie)"
         },
         {
           "ID": 36783,
           "Title": "Realität"
+        },
+        {
+          "ID": 38627,
+          "Title": "Wirklichkeit"
         },
         {
           "ID": 39326,
@@ -208,8 +264,28 @@
           "Title": "Pasta"
         },
         {
+          "ID": 164975,
+          "Title": "Big Foot"
+        },
+        {
+          "ID": 166984,
+          "Title": "Pastırma"
+        },
+        {
+          "ID": 173256,
+          "Title": "Arabica-Kaffee"
+        },
+        {
+          "ID": 177998,
+          "Title": "Biskuit"
+        },
+        {
           "ID": 178038,
           "Title": "Biskuitmasse"
+        },
+        {
+          "ID": 178390,
+          "Title": "Kakaobaum"
         },
         {
           "ID": 183002,
@@ -218,6 +294,10 @@
         {
           "ID": 183414,
           "Title": "Erdnussbutter"
+        },
+        {
+          "ID": 192758,
+          "Title": "Pecorino (Käse)"
         },
         {
           "ID": 193849,
@@ -236,6 +316,10 @@
           "Title": "Butterkuchen"
         },
         {
+          "ID": 241654,
+          "Title": "Ei"
+        },
+        {
           "ID": 250829,
           "Title": "Vollkornbrot"
         },
@@ -246,6 +330,14 @@
         {
           "ID": 265075,
           "Title": "Vorteig"
+        },
+        {
+          "ID": 271289,
+          "Title": "Fladenbrot"
+        },
+        {
+          "ID": 273328,
+          "Title": "Ginger Ale"
         },
         {
           "ID": 279749,
@@ -290,6 +382,10 @@
         {
           "ID": 470250,
           "Title": "Taco"
+        },
+        {
+          "ID": 482844,
+          "Title": "Hartkeks"
         },
         {
           "ID": 506512,
@@ -360,6 +456,10 @@
           "Title": "Akashi-yaki"
         },
         {
+          "ID": 1170905,
+          "Title": "Regionalismus"
+        },
+        {
           "ID": 1259574,
           "Title": "Pizza Hawaii"
         },
@@ -388,8 +488,20 @@
           "Title": "Bejeweled"
         },
         {
+          "ID": 1627572,
+          "Title": "Yūrei"
+        },
+        {
+          "ID": 1696472,
+          "Title": "Zwieback"
+        },
+        {
           "ID": 1788564,
           "Title": "Neapolitaner-Waffeln"
+        },
+        {
+          "ID": 1944099,
+          "Title": "Sus (Schweine)"
         },
         {
           "ID": 2219962,
@@ -418,6 +530,14 @@
         {
           "ID": 2809638,
           "Title": "Speiseeis"
+        },
+        {
+          "ID": 2817439,
+          "Title": "Tarte"
+        },
+        {
+          "ID": 3057291,
+          "Title": "Azyma"
         },
         {
           "ID": 3220296,
@@ -456,6 +576,10 @@
           "Title": "Kaffee"
         },
         {
+          "ID": 3959412,
+          "Title": "Schlitten"
+        },
+        {
           "ID": 4166142,
           "Title": "Rigatoni con la pajata"
         },
@@ -474,6 +598,10 @@
         {
           "ID": 4610394,
           "Title": "Ginger Beer"
+        },
+        {
+          "ID": 4692551,
+          "Title": "Kaffee (Pflanze)"
         },
         {
           "ID": 4727111,
@@ -664,6 +792,10 @@
       ],
       "Articles": [
         {
+          "ID": 3322,
+          "Title": "Mensch"
+        },
+        {
           "ID": 3474,
           "Title": "Myanmar"
         },
@@ -682,6 +814,10 @@
         {
           "ID": 1033681,
           "Title": "Pyramide (Bauwerk)"
+        },
+        {
+          "ID": 1200964,
+          "Title": "Australien"
         },
         {
           "ID": 1320005,
@@ -704,6 +840,10 @@
         {
           "ID": 240456,
           "Title": "Kategorie:Gesundheit"
+        },
+        {
+          "ID": 299241,
+          "Title": "Kategorie:Gesundheitswesen"
         },
         {
           "ID": 361953,
@@ -750,6 +890,10 @@
           "Title": "Kategorie:Geschichte"
         },
         {
+          "ID": 860469,
+          "Title": "Kategorie:Geschichte nach räumlicher Zuordnung"
+        },
+        {
           "ID": 1855988,
           "Title": "Kategorie:Geschichte nach Staat"
         },
@@ -794,6 +938,10 @@
         {
           "ID": 176739,
           "Title": "Donald Trump"
+        },
+        {
+          "ID": 323769,
+          "Title": "Alte Maße und Gewichte (römische Antike)"
         },
         {
           "ID": 665489,
@@ -916,9 +1064,17 @@
         {
           "ID": 320855,
           "Title": "Kategorie:Katastrophe"
+        },
+        {
+          "ID": 7644668,
+          "Title": "Kategorie:Wissenschaft nach Fachgebiet"
         }
       ],
       "Articles": [
+        {
+          "ID": 2277,
+          "Title": "Hydrologie"
+        },
         {
           "ID": 3305,
           "Title": "Mais"
@@ -942,6 +1098,10 @@
         {
           "ID": 15057,
           "Title": "Muskulatur"
+        },
+        {
+          "ID": 15346,
+          "Title": "Geschlechtsorgan"
         },
         {
           "ID": 17121,
@@ -974,6 +1134,10 @@
         {
           "ID": 54495,
           "Title": "Stütz- und Bewegungsapparat"
+        },
+        {
+          "ID": 59928,
+          "Title": "Erdbeeren"
         },
         {
           "ID": 60216,
@@ -1052,8 +1216,16 @@
           "Title": "Makrele"
         },
         {
+          "ID": 362956,
+          "Title": "Wald-Erdbeere"
+        },
+        {
           "ID": 366901,
           "Title": "Klammeraffen"
+        },
+        {
+          "ID": 369900,
+          "Title": "Cantaloupe-Melone"
         },
         {
           "ID": 396305,
@@ -1064,6 +1236,10 @@
           "Title": "Motoneuron"
         },
         {
+          "ID": 441033,
+          "Title": "Anaconda"
+        },
+        {
           "ID": 443540,
           "Title": "Wolfspinnen"
         },
@@ -1072,12 +1248,28 @@
           "Title": "Mantel (Weichtiere)"
         },
         {
+          "ID": 489397,
+          "Title": "Ährchen"
+        },
+        {
           "ID": 590822,
           "Title": "Kuhdung"
         },
         {
+          "ID": 607186,
+          "Title": "Tomatillo"
+        },
+        {
+          "ID": 668757,
+          "Title": "Weichweizen"
+        },
+        {
           "ID": 948958,
           "Title": "Große Anakonda"
+        },
+        {
+          "ID": 958933,
+          "Title": "Citrus aurantium"
         },
         {
           "ID": 983962,
@@ -1092,12 +1284,20 @@
           "Title": "Engelmann-Fichte"
         },
         {
+          "ID": 1383129,
+          "Title": "Cazzo"
+        },
+        {
           "ID": 1682038,
           "Title": "Melone"
         },
         {
           "ID": 1807679,
           "Title": "Rot (Haarfarbe)"
+        },
+        {
+          "ID": 1885031,
+          "Title": "Kapstachelbeere"
         },
         {
           "ID": 2814609,
@@ -1108,8 +1308,16 @@
           "Title": "Reis"
         },
         {
+          "ID": 3486440,
+          "Title": "Riesen-Kürbis"
+        },
+        {
           "ID": 3601382,
           "Title": "Penis des Menschen"
+        },
+        {
+          "ID": 3763509,
+          "Title": "Indische Makrele"
         },
         {
           "ID": 4437559,
@@ -1174,12 +1382,28 @@
           "Title": "Kategorie:Frau"
         },
         {
+          "ID": 305661,
+          "Title": "Kategorie:Biografie"
+        },
+        {
           "ID": 595902,
           "Title": "Kategorie:Alltagskultur"
         },
         {
+          "ID": 3707673,
+          "Title": "Kategorie:Persönlichkeitstheorie"
+        },
+        {
+          "ID": 5596103,
+          "Title": "Kategorie:Personen"
+        },
+        {
           "ID": 6697147,
           "Title": "Kategorie:Frauen"
+        },
+        {
+          "ID": 8218353,
+          "Title": "Kategorie:Werk über eine Person"
         }
       ],
       "Articles": [
@@ -1316,6 +1540,10 @@
           "Title": "Harry Houdini"
         },
         {
+          "ID": 264518,
+          "Title": "Die kleine Raupe Nimmersatt"
+        },
+        {
           "ID": 267276,
           "Title": "Joseph Smith"
         },
@@ -1432,12 +1660,24 @@
           "Title": "Glaube"
         },
         {
+          "ID": 11549,
+          "Title": "Glauben"
+        },
+        {
           "ID": 46079,
           "Title": "Glück"
         },
         {
           "ID": 74020,
           "Title": "Schönheit"
+        },
+        {
+          "ID": 93813,
+          "Title": "Hit"
+        },
+        {
+          "ID": 104971,
+          "Title": "Freude"
         },
         {
           "ID": 205919,
@@ -1494,6 +1734,10 @@
         {
           "ID": 247242,
           "Title": "Kategorie:Feminismus"
+        },
+        {
+          "ID": 274323,
+          "Title": "Kategorie:Geisteswissenschaft"
         },
         {
           "ID": 527139,
@@ -2290,6 +2534,10 @@
           "Title": "Universität von Jordanien"
         },
         {
+          "ID": 6006149,
+          "Title": "Trust (Recht)"
+        },
+        {
           "ID": 6259542,
           "Title": "Acadia University"
         },
@@ -2396,6 +2644,14 @@
           "Title": "Kategorie:Ingenieurwissenschaft"
         },
         {
+          "ID": 242544,
+          "Title": "Kategorie:Technik"
+        },
+        {
+          "ID": 242546,
+          "Title": "Kategorie:Computer"
+        },
+        {
           "ID": 274174,
           "Title": "Kategorie:Elektronik"
         },
@@ -2426,6 +2682,14 @@
         {
           "ID": 2273788,
           "Title": "Kategorie:Verkehrswesen"
+        },
+        {
+          "ID": 7589376,
+          "Title": "Kategorie:Datenbanken"
+        },
+        {
+          "ID": 7589443,
+          "Title": "Kategorie:Datenbank"
         }
       ],
       "Articles": [
