--- a/nationalization/internal/languages/el.json
+++ b/nationalization/internal/languages/el.json
@@ -6,6 +6,10 @@
       "Title": "Culture and the arts",
       "Categories": [
         {
+          "ID": 5782,
+          "Title": "Κατηγορία:Χρώματα"
+        },
+        {
           "ID": 6147,
           "Title": "Κατηγορία:Αθλητισμός"
         },
@@ -34,8 +38,16 @@
           "Title": "Κατηγορία:Τρόφιμα"
         },
         {
+          "ID": 126907,
+          "Title": "Κατηγορία:Γαστρονομία"
+        },
+        {
           "ID": 223772,
           "Title": "Κατηγορία:Διατροφολογία"
+        },
+        {
+          "ID": 223774,
+          "Title": "Κατηγορία:Τεχνικές μαγειρέματος"
         },
         {
           "ID": 237122,
@@ -50,8 +62,24 @@
           "Title": "Κατηγορία:Ενδιαφέροντα"
         },
         {
+          "ID": 481360,
+          "Title": "Κατηγορία:Σωματική άσκηση"
+        },
+        {
           "ID": 501403,
           "Title": "Κατηγορία:Τρόφιμα ανά κύριο συστατικό"
+        },
+        {
+          "ID": 505363,
+          "Title": "Κατηγορία:Ελεύθερος χρόνος"
+        },
+        {
+          "ID": 520223,
+          "Title": "Κατηγορία:Αθλήματα ανά είδος"
+        },
+        {
+          "ID": 609003,
+          "Title": "Κατηγορία:Χρώμα"
         }
       ],
       "Articles": [
@@ -78,6 +106,10 @@
         {
           "ID": 12654,
           "Title": "Green Day"
+        },
+        {
+          "ID": 14231,
+          "Title": "Αγριόχοιρος"
         },
         {
           "ID": 15604,
@@ -112,6 +144,10 @@
           "Title": "Ρεαλισμός (λογοτεχνία)"
         },
         {
+          "ID": 31912,
+          "Title": "Μουσικό συγκρότημα"
+        },
+        {
           "ID": 33061,
           "Title": "Πίτσα"
         },
@@ -120,8 +156,16 @@
           "Title": "Μόρντρεντ"
         },
         {
+          "ID": 36803,
+          "Title": "Κακαόδεντρο"
+        },
+        {
           "ID": 49806,
           "Title": "Led Zeppelin"
+        },
+        {
+          "ID": 52136,
+          "Title": "Στοματικό σεξ"
         },
         {
           "ID": 53012,
@@ -140,12 +184,28 @@
           "Title": "Τοποθεσίες της σειράς Χάρι Πότερ"
         },
         {
+          "ID": 94390,
+          "Title": "Οικόσιτος χοίρος"
+        },
+        {
           "ID": 104739,
           "Title": "Φάντασμα"
         },
         {
+          "ID": 124905,
+          "Title": "Παστουρμάς"
+        },
+        {
           "ID": 138252,
           "Title": "Παγωτό"
+        },
+        {
+          "ID": 154563,
+          "Title": "Καφεόδεντρο"
+        },
+        {
+          "ID": 174448,
+          "Title": "Αβγό"
         },
         {
           "ID": 186694,
@@ -212,8 +272,24 @@
           "Title": "Ζυμαρικά και φασόλια"
         },
         {
+          "ID": 452728,
+          "Title": "Τζιτζιμπίρα"
+        },
+        {
+          "ID": 466613,
+          "Title": "Πεκορίνο"
+        },
+        {
           "ID": 474761,
           "Title": "Διαγωνισμός Τραγουδιού Eurovision 2017"
+        },
+        {
+          "ID": 494954,
+          "Title": "Φρυγανιά"
+        },
+        {
+          "ID": 509601,
+          "Title": "Αστουριανική Βικιπαίδεια"
         },
         {
           "ID": 511697,
@@ -222,6 +298,10 @@
         {
           "ID": 559170,
           "Title": "Χοτ ντογκ"
+        },
+        {
+          "ID": 585523,
+          "Title": "Τάρτα"
         },
         {
           "ID": 590547,
@@ -238,6 +318,10 @@
         {
           "ID": 601668,
           "Title": "Σιεμιένοτκα"
+        },
+        {
+          "ID": 605785,
+          "Title": "Παξιμάδι"
         }
       ]
     },
@@ -272,8 +356,16 @@
       ],
       "Articles": [
         {
+          "ID": 812,
+          "Title": "Αυστραλία"
+        },
+        {
           "ID": 2671,
           "Title": "Βενετία"
+        },
+        {
+          "ID": 5642,
+          "Title": "Άνθρωπος"
         },
         {
           "ID": 7426,
@@ -326,6 +418,10 @@
           "Title": "Κατηγορία:Γενετικές διαταραχές"
         },
         {
+          "ID": 505405,
+          "Title": "Κατηγορία:Φροντίδα υγείας"
+        },
+        {
           "ID": 516067,
           "Title": "Κατηγορία:Προσωπική φροντίδα"
         }
@@ -342,6 +438,10 @@
         {
           "ID": 62079,
           "Title": "Κατηγορία:Ιστορία ανά χώρα"
+        },
+        {
+          "ID": 470076,
+          "Title": "Κατηγορία:Ιστορία ανά τοποθεσία"
         },
         {
           "ID": 509239,
@@ -444,6 +544,10 @@
           "Title": "Κατηγορία:Ζωολογία"
         },
         {
+          "ID": 14863,
+          "Title": "Κατηγορία:Επιστήμες"
+        },
+        {
           "ID": 21141,
           "Title": "Κατηγορία:Χημικές ενώσεις"
         },
@@ -484,6 +588,10 @@
         {
           "ID": 28253,
           "Title": "Κύκλος του νερού"
+        },
+        {
+          "ID": 31363,
+          "Title": "Γεννητικά όργανα"
         },
         {
           "ID": 31377,
@@ -546,6 +654,10 @@
           "Title": "Καμήλα"
         },
         {
+          "ID": 82863,
+          "Title": "Υδρολογία"
+        },
+        {
           "ID": 89613,
           "Title": "Ανανάς ο εύκομος"
         },
@@ -578,6 +690,14 @@
           "Title": "Ούρο"
         },
         {
+          "ID": 172103,
+          "Title": "Αναπαραγωγικό σύστημα"
+        },
+        {
+          "ID": 223702,
+          "Title": "Χαμοκέρασο"
+        },
+        {
           "ID": 224571,
           "Title": "Φλαμίνγκο"
         },
@@ -600,6 +720,10 @@
         {
           "ID": 398577,
           "Title": "Μοσχολέμονο"
+        },
+        {
+          "ID": 499331,
+          "Title": "Σίτος ο μαλακός"
         },
         {
           "ID": 587475,
@@ -628,6 +752,10 @@
           "Title": "Κατηγορία:Καθημερινή ζωή"
         },
         {
+          "ID": 58791,
+          "Title": "Κατηγορία:Ζωή"
+        },
+        {
           "ID": 59905,
           "Title": "Κατηγορία:Πρόσωπα"
         },
@@ -640,8 +768,20 @@
           "Title": "Κατηγορία:Κινηματογραφικοί χαρακτήρες"
         },
         {
+          "ID": 239709,
+          "Title": "Κατηγορία:Βιογραφίες"
+        },
+        {
+          "ID": 445881,
+          "Title": "Κατηγορία:Προσωπικότητα"
+        },
+        {
           "ID": 494643,
           "Title": "Κατηγορία:Γυναίκες"
+        },
+        {
+          "ID": 497506,
+          "Title": "Κατηγορία:Βιογραφία"
         },
         {
           "ID": 585594,
@@ -856,6 +996,10 @@
         {
           "ID": 593786,
           "Title": "Gaslighting (ψυχολογία)"
+        },
+        {
+          "ID": 612357,
+          "Title": "Χαρά"
         }
       ]
     },
@@ -922,12 +1066,20 @@
           "Title": "Κατηγορία:Ανθρωπιστικές επιστήμες"
         },
         {
+          "ID": 403198,
+          "Title": "Κατηγορία:Διακυβερνητικός Οργανισμός"
+        },
+        {
           "ID": 440286,
           "Title": "Κατηγορία:Νόμοι"
         },
         {
           "ID": 468928,
           "Title": "Κατηγορία:Δικαιώματα"
+        },
+        {
+          "ID": 525657,
+          "Title": "Κατηγορία:Κλασσικές επιστήμες"
         },
         {
           "ID": 558196,
@@ -942,6 +1094,10 @@
         {
           "ID": 5687,
           "Title": "Χιλή"
+        },
+        {
+          "ID": 9100,
+          "Title": "Τραστ"
         },
         {
           "ID": 12719,
@@ -1230,6 +1386,14 @@
           "Title": "Κατηγορία:Ιστορία τεχνολογίας"
         },
         {
+          "ID": 102901,
+          "Title": "Κατηγορία:Ηλεκτρονικός υπολογιστής"
+        },
+        {
+          "ID": 114449,
+          "Title": "Κατηγορία:Βάσεις δεδομένων"
+        },
+        {
           "ID": 126139,
           "Title": "Κατηγορία:Εφαρμοσμένες επιστήμες"
         },
@@ -1248,6 +1412,10 @@
         {
           "ID": 315481,
           "Title": "Κατηγορία:Στρατιωτικός εξοπλισμός"
+        },
+        {
+          "ID": 444292,
+          "Title": "Κατηγορία:Διαχείριση δεδομένων"
         }
       ],
       "Articles": [
