--- a/nationalization/internal/languages/en.json
+++ b/nationalization/internal/languages/en.json
@@ -22,6 +22,10 @@
           "Title": "Category:Culture"
         },
         {
+          "ID": 696668,
+          "Title": "Category:Colors"
+        },
+        {
           "ID": 698271,
           "Title": "Category:Hobbies"
         },
@@ -38,8 +42,20 @@
           "Title": "Category:Recreation"
         },
         {
+          "ID": 757512,
+          "Title": "Category:Cooking techniques"
+        },
+        {
+          "ID": 979606,
+          "Title": "Category:Color"
+        },
+        {
           "ID": 1077074,
           "Title": "Category:Foods"
+        },
+        {
+          "ID": 4225851,
+          "Title": "Category:Leisure"
         },
         {
           "ID": 4610114,
@@ -66,12 +82,36 @@
           "Title": "Category:Food and drink culture"
         },
         {
+          "ID": 23596516,
+          "Title": "Category:Sports by type"
+        },
+        {
           "ID": 23963451,
           "Title": "Category:Food preparation"
         },
         {
+          "ID": 34955640,
+          "Title": "Category:Physical exercise"
+        },
+        {
           "ID": 36308954,
           "Title": "Category:Food"
+        },
+        {
+          "ID": 36812606,
+          "Title": "Category:Food products"
+        },
+        {
+          "ID": 47960709,
+          "Title": "Category:Gastronomy"
+        },
+        {
+          "ID": 48328899,
+          "Title": "Category:Dishes by main ingredient"
+        },
+        {
+          "ID": 50775877,
+          "Title": "Category:Color names"
         }
       ],
       "Articles": [
@@ -88,8 +128,16 @@
           "Title": "Bigfoot"
         },
         {
+          "ID": 4499,
+          "Title": "Band"
+        },
+        {
           "ID": 5163,
           "Title": "The World Factbook"
+        },
+        {
+          "ID": 5930,
+          "Title": "Coffea"
         },
         {
           "ID": 6035,
@@ -172,6 +220,18 @@
           "Title": "Pizza"
         },
         {
+          "ID": 25087,
+          "Title": "Pecorino Romano"
+        },
+        {
+          "ID": 25142,
+          "Title": "Pig"
+        },
+        {
+          "ID": 25727,
+          "Title": "Reference work"
+        },
+        {
           "ID": 29985,
           "Title": "Taco"
         },
@@ -204,12 +264,20 @@
           "Title": "Fortune cookie"
         },
         {
+          "ID": 52255,
+          "Title": "Wild boar"
+        },
+        {
           "ID": 52726,
           "Title": "Green Day"
         },
         {
           "ID": 57572,
           "Title": "Cake"
+        },
+        {
+          "ID": 57947,
+          "Title": "Theobroma cacao"
         },
         {
           "ID": 61937,
@@ -244,6 +312,10 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 153862,
+          "Title": "Sled"
+        },
+        {
           "ID": 157973,
           "Title": "Knäck"
         },
@@ -272,6 +344,10 @@
           "Title": "Hot dog"
         },
         {
+          "ID": 193379,
+          "Title": "Ginger ale"
+        },
+        {
           "ID": 210486,
           "Title": "Fatback"
         },
@@ -296,6 +372,10 @@
           "Title": "Breakthrough (board game)"
         },
         {
+          "ID": 278505,
+          "Title": "Pecorino"
+        },
+        {
           "ID": 289786,
           "Title": "Peanut butter"
         },
@@ -314,6 +394,10 @@
         {
           "ID": 360677,
           "Title": "Purée Mongole"
+        },
+        {
+          "ID": 368393,
+          "Title": "Hardtack"
         },
         {
           "ID": 370599,
@@ -336,12 +420,20 @@
           "Title": "Wedding cake"
         },
         {
+          "ID": 419207,
+          "Title": "Zwieback"
+        },
+        {
           "ID": 426522,
           "Title": "Carbonara"
         },
         {
           "ID": 429272,
           "Title": "Chicken tikka masala"
+        },
+        {
+          "ID": 429277,
+          "Title": "Roti"
         },
         {
           "ID": 455243,
@@ -354,6 +446,10 @@
         {
           "ID": 483473,
           "Title": "Gelato"
+        },
+        {
+          "ID": 484939,
+          "Title": "Egg"
         },
         {
           "ID": 485487,
@@ -408,6 +504,14 @@
           "Title": "WWE Championship"
         },
         {
+          "ID": 640856,
+          "Title": "Yūrei"
+        },
+        {
+          "ID": 642702,
+          "Title": "Tart"
+        },
+        {
           "ID": 667658,
           "Title": "Places in Harry Potter"
         },
@@ -444,8 +548,16 @@
           "Title": "Back bacon"
         },
         {
+          "ID": 1070039,
+          "Title": "Rusk"
+        },
+        {
           "ID": 1088927,
           "Title": "Salmond College"
+        },
+        {
+          "ID": 1092590,
+          "Title": "Coffea arabica"
         },
         {
           "ID": 1112013,
@@ -458,6 +570,10 @@
         {
           "ID": 1217251,
           "Title": "Chocolate liquor"
+        },
+        {
+          "ID": 1226536,
+          "Title": "Pastirma"
         },
         {
           "ID": 1245639,
@@ -584,6 +700,10 @@
           "Title": "Study skills"
         },
         {
+          "ID": 2391490,
+          "Title": "Domestic pig"
+        },
+        {
           "ID": 2446345,
           "Title": "Mix-in"
         },
@@ -592,12 +712,24 @@
           "Title": "Mealie bread"
         },
         {
+          "ID": 2480306,
+          "Title": "Oral sex"
+        },
+        {
+          "ID": 2493459,
+          "Title": "Flatbread"
+        },
+        {
           "ID": 2518568,
           "Title": "Livermush"
         },
         {
           "ID": 2664040,
           "Title": "Crudités"
+        },
+        {
+          "ID": 2669492,
+          "Title": "Saltine cracker"
         },
         {
           "ID": 2696756,
@@ -642,6 +774,10 @@
         {
           "ID": 3217073,
           "Title": "The Slave Dancer"
+        },
+        {
+          "ID": 3392086,
+          "Title": "Bigfoot (disambiguation)"
         },
         {
           "ID": 3441686,
@@ -838,6 +974,10 @@
         {
           "ID": 8245307,
           "Title": "Lanterne (pasta)"
+        },
+        {
+          "ID": 8251905,
+          "Title": "Azymes"
         },
         {
           "ID": 8304016,
@@ -1052,6 +1192,10 @@
           "Title": "Lufu (food)"
         },
         {
+          "ID": 15674759,
+          "Title": "Asturian Wikipedia"
+        },
+        {
           "ID": 15894666,
           "Title": "Paila marina"
         },
@@ -1116,6 +1260,10 @@
           "Title": "Pork"
         },
         {
+          "ID": 20623218,
+          "Title": "Pirog"
+        },
+        {
           "ID": 21244047,
           "Title": "Realism (arts)"
         },
@@ -1164,12 +1312,20 @@
           "Title": "Sai ua"
         },
         {
+          "ID": 23104299,
+          "Title": "Szalonna"
+        },
+        {
           "ID": 23159504,
           "Title": "Outline of chocolate"
         },
         {
           "ID": 23282625,
           "Title": "Dessert salad"
+        },
+        {
+          "ID": 23645769,
+          "Title": "Neo-experimentalism"
         },
         {
           "ID": 23848185,
@@ -1456,6 +1612,10 @@
           "Title": "Oil down"
         },
         {
+          "ID": 36099040,
+          "Title": "Rengginang"
+        },
+        {
           "ID": 36132160,
           "Title": "Colaz"
         },
@@ -1578,6 +1738,10 @@
         {
           "ID": 42759845,
           "Title": "Mors (drink)"
+        },
+        {
+          "ID": 43028857,
+          "Title": "Realism (art movement)"
         },
         {
           "ID": 43710448,
@@ -1732,6 +1896,10 @@
           "Title": "Eurovision Song Contest 2017"
         },
         {
+          "ID": 49844822,
+          "Title": "Band (rock and pop)"
+        },
+        {
           "ID": 49961869,
           "Title": "Bazin (bread)"
         },
@@ -1884,8 +2052,16 @@
           "Title": "Queensland"
         },
         {
+          "ID": 99645,
+          "Title": "Homo sapiens"
+        },
+        {
           "ID": 125888,
           "Title": "Carlsbad, New Mexico"
+        },
+        {
+          "ID": 682482,
+          "Title": "Human"
         },
         {
           "ID": 1091934,
@@ -1894,6 +2070,10 @@
         {
           "ID": 4219805,
           "Title": "Mandalay Hill"
+        },
+        {
+          "ID": 4689264,
+          "Title": "Australia"
         },
         {
           "ID": 6121363,
@@ -1952,6 +2132,10 @@
         {
           "ID": 34742345,
           "Title": "Category:Self-care"
+        },
+        {
+          "ID": 35880954,
+          "Title": "Category:Health care"
         }
       ],
       "Articles": [
@@ -1996,6 +2180,10 @@
         {
           "ID": 5384340,
           "Title": "Category:Observances"
+        },
+        {
+          "ID": 18985014,
+          "Title": "Category:History by location"
         },
         {
           "ID": 27478516,
@@ -2046,6 +2234,10 @@
         {
           "ID": 2237689,
           "Title": "Immigration Restriction Act 1901"
+        },
+        {
+          "ID": 2347026,
+          "Title": "Ancient Roman units of measurement"
         },
         {
           "ID": 2435657,
@@ -2234,6 +2426,10 @@
           "Title": "Category:Physical sciences"
         },
         {
+          "ID": 3981960,
+          "Title": "Category:Scientific disciplines"
+        },
+        {
           "ID": 5200572,
           "Title": "Category:Fauna by continent"
         }
@@ -2252,8 +2448,16 @@
           "Title": "Fire"
         },
         {
+          "ID": 13435,
+          "Title": "Hydrology"
+        },
+        {
           "ID": 20501,
           "Title": "Moose"
+        },
+        {
+          "ID": 29369,
+          "Title": "Sex organ"
         },
         {
           "ID": 36858,
@@ -2272,6 +2476,10 @@
           "Title": "Coca"
         },
         {
+          "ID": 55036,
+          "Title": "Fragaria"
+        },
+        {
           "ID": 56315,
           "Title": "Mango"
         },
@@ -2282,6 +2490,10 @@
         {
           "ID": 67193,
           "Title": "Testicle"
+        },
+        {
+          "ID": 79713,
+          "Title": "Cantaloupe"
         },
         {
           "ID": 145772,
@@ -2420,6 +2632,10 @@
           "Title": "Magnolia liliiflora"
         },
         {
+          "ID": 523380,
+          "Title": "Tomatillo"
+        },
+        {
           "ID": 551920,
           "Title": "Spider monkey"
         },
@@ -2440,6 +2656,10 @@
           "Title": "Atlantic mackerel"
         },
         {
+          "ID": 1008170,
+          "Title": "Oryza sativa"
+        },
+        {
           "ID": 1131010,
           "Title": "Hylidae"
         },
@@ -2450,6 +2670,10 @@
         {
           "ID": 1251593,
           "Title": "Pinus kesiya"
+        },
+        {
+          "ID": 1289893,
+          "Title": "Physalis peruviana"
         },
         {
           "ID": 1438776,
@@ -2476,6 +2700,14 @@
           "Title": "Green anaconda"
         },
         {
+          "ID": 1813394,
+          "Title": "Horse mackerel"
+        },
+        {
+          "ID": 2188079,
+          "Title": "Glass lizard"
+        },
+        {
           "ID": 2343153,
           "Title": "Osmunda claytoniana"
         },
@@ -2484,12 +2716,20 @@
           "Title": "Strawberry"
         },
         {
+          "ID": 2456697,
+          "Title": "Fragaria vesca"
+        },
+        {
           "ID": 2456791,
           "Title": "Fragaria × vescana"
         },
         {
           "ID": 2481476,
           "Title": "Rice hulls"
+        },
+        {
+          "ID": 2539595,
+          "Title": "Spikelet"
         },
         {
           "ID": 2867596,
@@ -2510,6 +2750,10 @@
         {
           "ID": 3087265,
           "Title": "Juniperus thurifera"
+        },
+        {
+          "ID": 3636124,
+          "Title": "Common wheat"
         },
         {
           "ID": 3938382,
@@ -2548,6 +2792,10 @@
           "Title": "White tiger"
         },
         {
+          "ID": 8337927,
+          "Title": "Trachurus"
+        },
+        {
           "ID": 8680788,
           "Title": "Snowburst"
         },
@@ -2558,6 +2806,10 @@
         {
           "ID": 9940234,
           "Title": "Tomato"
+        },
+        {
+          "ID": 11072564,
+          "Title": "Cucurbita maxima"
         },
         {
           "ID": 11415141,
@@ -2588,12 +2840,20 @@
           "Title": "Citrus × sinensis"
         },
         {
+          "ID": 16185074,
+          "Title": "Scomber"
+        },
+        {
           "ID": 16234880,
           "Title": "Tree frog"
         },
         {
           "ID": 17322701,
           "Title": "Penis"
+        },
+        {
+          "ID": 17700147,
+          "Title": "Xôi"
         },
         {
           "ID": 18517162,
@@ -2608,8 +2868,16 @@
           "Title": "Mangifera indica"
         },
         {
+          "ID": 20610136,
+          "Title": "Reproductive system"
+        },
+        {
           "ID": 20656228,
           "Title": "Maize"
+        },
+        {
+          "ID": 21170822,
+          "Title": "Myrtus communis"
         },
         {
           "ID": 21299730,
@@ -2628,6 +2896,14 @@
           "Title": "Muskmelon"
         },
         {
+          "ID": 25232308,
+          "Title": "Indian mackerel"
+        },
+        {
+          "ID": 27329088,
+          "Title": "Anaconda (disambiguation)"
+        },
+        {
           "ID": 32077676,
           "Title": "Food chain"
         },
@@ -2642,6 +2918,10 @@
         {
           "ID": 37799672,
           "Title": "Origanum onites"
+        },
+        {
+          "ID": 41646174,
+          "Title": "Dick (slang)"
         },
         {
           "ID": 41732656,
@@ -2710,8 +2990,40 @@
           "Title": "Category:Self"
         },
         {
+          "ID": 1056420,
+          "Title": "Category:Personality"
+        },
+        {
           "ID": 1891545,
           "Title": "Category:Film characters"
+        },
+        {
+          "ID": 2389032,
+          "Title": "Category:Life"
+        },
+        {
+          "ID": 6277368,
+          "Title": "Category:Biography (genre)"
+        },
+        {
+          "ID": 9550264,
+          "Title": "Category:Biographies (books)"
+        },
+        {
+          "ID": 9869594,
+          "Title": "Category:Biographies"
+        },
+        {
+          "ID": 16182273,
+          "Title": "Category:Personality theories"
+        },
+        {
+          "ID": 34585269,
+          "Title": "Category:Biographical works"
+        },
+        {
+          "ID": 46687935,
+          "Title": "Category:Male biographers"
         }
       ],
       "Articles": [
@@ -2858,6 +3170,10 @@
         {
           "ID": 1515846,
           "Title": "Daniel Hale Williams"
+        },
+        {
+          "ID": 1553175,
+          "Title": "The Very Hungry Caterpillar"
         },
         {
           "ID": 1641514,
@@ -3044,12 +3360,28 @@
           "Title": "Fact"
         },
         {
+          "ID": 102883,
+          "Title": "Belief"
+        },
+        {
           "ID": 169409,
           "Title": "Happiness"
         },
         {
+          "ID": 185918,
+          "Title": "Joy"
+        },
+        {
+          "ID": 262029,
+          "Title": "Hit"
+        },
+        {
           "ID": 850663,
           "Title": "Trust (emotion)"
+        },
+        {
+          "ID": 2136138,
+          "Title": "Alegria"
         },
         {
           "ID": 2288777,
@@ -3066,6 +3398,14 @@
         {
           "ID": 7154403,
           "Title": "Persuasive writing"
+        },
+        {
+          "ID": 8930773,
+          "Title": "Believer"
+        },
+        {
+          "ID": 8930963,
+          "Title": "Belief (disambiguation)"
         },
         {
           "ID": 17644927,
@@ -3154,6 +3494,10 @@
           "Title": "Category:Rights"
         },
         {
+          "ID": 1004110,
+          "Title": "Category:Humanities"
+        },
+        {
           "ID": 1090419,
           "Title": "Category:Human sciences"
         },
@@ -3168,6 +3512,10 @@
         {
           "ID": 2679971,
           "Title": "Category:Universities and colleges by country"
+        },
+        {
+          "ID": 20047203,
+          "Title": "Category:Intergovernmental organizations"
         },
         {
           "ID": 45589272,
@@ -3262,6 +3610,10 @@
         {
           "ID": 30680,
           "Title": "The New York Times"
+        },
+        {
+          "ID": 31043,
+          "Title": "Trust law"
         },
         {
           "ID": 31656,
@@ -4308,6 +4660,10 @@
           "Title": "BP"
         },
         {
+          "ID": 19411728,
+          "Title": "Open-door academic policy"
+        },
+        {
           "ID": 19682699,
           "Title": "Chinese New Year"
         },
@@ -4618,6 +4974,10 @@
           "Title": "Category:Electronics"
         },
         {
+          "ID": 762162,
+          "Title": "Category:Data management"
+        },
+        {
           "ID": 771670,
           "Title": "Category:Military equipment"
         },
@@ -4634,12 +4994,24 @@
           "Title": "Category:Military technology"
         },
         {
+          "ID": 2276471,
+          "Title": "Category:Databases"
+        },
+        {
+          "ID": 4583997,
+          "Title": "Category:Computers"
+        },
+        {
           "ID": 5523119,
           "Title": "Category:Transport"
         },
         {
           "ID": 17200193,
           "Title": "Category:Technology by type"
+        },
+        {
+          "ID": 40423628,
+          "Title": "Category:Database servers"
         },
         {
           "ID": 48783949,
