--- a/nationalization/internal/languages/es.json
+++ b/nationalization/internal/languages/es.json
@@ -38,6 +38,22 @@
           "Title": "Categoría:Películas"
         },
         {
+          "ID": 55401,
+          "Title": "Categoría:Colores"
+        },
+        {
+          "ID": 147644,
+          "Title": "Categoría:Técnicas culinarias"
+        },
+        {
+          "ID": 162887,
+          "Title": "Categoría:Color"
+        },
+        {
+          "ID": 255090,
+          "Title": "Categoría:Deportes"
+        },
+        {
           "ID": 296195,
           "Title": "Categoría:Entretenimiento"
         },
@@ -52,6 +68,14 @@
         {
           "ID": 2132905,
           "Title": "Categoría:Aficiones"
+        },
+        {
+          "ID": 5414856,
+          "Title": "Categoría:Ocio"
+        },
+        {
+          "ID": 6320892,
+          "Title": "Categoría:Ejercicio físico"
         },
         {
           "ID": 6511317,
@@ -72,8 +96,16 @@
           "Title": "Cerveza"
         },
         {
+          "ID": 7223,
+          "Title": "Sexo oral"
+        },
+        {
           "ID": 8884,
           "Title": "Chocolate"
+        },
+        {
+          "ID": 10496,
+          "Title": "Theobroma cacao"
         },
         {
           "ID": 10855,
@@ -106,6 +138,10 @@
         {
           "ID": 37713,
           "Title": "Felación"
+        },
+        {
+          "ID": 46269,
+          "Title": "Sus scrofa"
         },
         {
           "ID": 52021,
@@ -176,6 +212,10 @@
           "Title": "Huevo (alimento)"
         },
         {
+          "ID": 140871,
+          "Title": "Coffea arabica"
+        },
+        {
           "ID": 149071,
           "Title": "Pastel"
         },
@@ -208,6 +248,10 @@
           "Title": "Papas chorreadas"
         },
         {
+          "ID": 219395,
+          "Title": "Wikipedia en asturiano"
+        },
+        {
           "ID": 241672,
           "Title": "Celibato"
         },
@@ -216,8 +260,16 @@
           "Title": "WWE Championship"
         },
         {
+          "ID": 256063,
+          "Title": "Coffea"
+        },
+        {
           "ID": 284419,
           "Title": "Realismo filosófico"
+        },
+        {
+          "ID": 285037,
+          "Title": "Ginger ale"
         },
         {
           "ID": 298700,
@@ -238,6 +290,10 @@
         {
           "ID": 309208,
           "Title": "Cultura de América del Sur"
+        },
+        {
+          "ID": 314728,
+          "Title": "Roti"
         },
         {
           "ID": 321966,
@@ -272,8 +328,24 @@
           "Title": "Carne picada"
         },
         {
+          "ID": 384136,
+          "Title": "Trineo"
+        },
+        {
           "ID": 387711,
           "Title": "Sopa de tomate"
+        },
+        {
+          "ID": 388021,
+          "Title": "Pan ácimo"
+        },
+        {
+          "ID": 405527,
+          "Title": "Tarta"
+        },
+        {
+          "ID": 472784,
+          "Title": "Yūrei"
         },
         {
           "ID": 473536,
@@ -282,6 +354,14 @@
         {
           "ID": 505457,
           "Title": "Galleta de la suerte"
+        },
+        {
+          "ID": 512909,
+          "Title": "Pintura del Realismo"
+        },
+        {
+          "ID": 551868,
+          "Title": "Cocolón"
         },
         {
           "ID": 563323,
@@ -336,12 +416,24 @@
           "Title": "Carbonara"
         },
         {
+          "ID": 768123,
+          "Title": "Pecorino Romano"
+        },
+        {
           "ID": 788425,
           "Title": "Agrupación musical"
         },
         {
+          "ID": 824045,
+          "Title": "Pan plano"
+        },
+        {
           "ID": 831045,
           "Title": "Dinosaur Jr."
+        },
+        {
+          "ID": 836570,
+          "Title": "Sus"
         },
         {
           "ID": 853329,
@@ -356,8 +448,16 @@
           "Title": "Pasta con le sarde"
         },
         {
+          "ID": 949111,
+          "Title": "Pastırma"
+        },
+        {
           "ID": 950945,
           "Title": "Huevo a la escocesa"
+        },
+        {
+          "ID": 990416,
+          "Title": "Sus scrofa domestica"
         },
         {
           "ID": 1004176,
@@ -396,6 +496,10 @@
           "Title": "Limón encurtido"
         },
         {
+          "ID": 1208111,
+          "Title": "Huevo (biología)"
+        },
+        {
           "ID": 1278614,
           "Title": "Knäck"
         },
@@ -418,6 +522,10 @@
         {
           "ID": 1516566,
           "Title": "Pastel de bodas"
+        },
+        {
+          "ID": 1701792,
+          "Title": "Obra de referencia"
         },
         {
           "ID": 1774655,
@@ -444,6 +552,10 @@
           "Title": "Akashiyaki"
         },
         {
+          "ID": 2053557,
+          "Title": "Biscote"
+        },
+        {
           "ID": 2064943,
           "Title": "Cracker (alimento)"
         },
@@ -466,6 +578,10 @@
         {
           "ID": 2299740,
           "Title": "Pan integral"
+        },
+        {
+          "ID": 2394135,
+          "Title": "Hardtack"
         },
         {
           "ID": 2504045,
@@ -612,6 +728,10 @@
           "Title": "Fideos de aceite"
         },
         {
+          "ID": 3712054,
+          "Title": "Galleta de soda"
+        },
+        {
           "ID": 3795040,
           "Title": "Bejeweled 2"
         },
@@ -714,6 +834,10 @@
         {
           "ID": 4275216,
           "Title": "Cerveza de jengibre"
+        },
+        {
+          "ID": 4309651,
+          "Title": "Pecorino"
         },
         {
           "ID": 4344576,
@@ -848,10 +972,6 @@
           "Title": "War Room (película)"
         },
         {
-          "ID": 7050632,
-          "Title": "Cocolón"
-        },
-        {
           "ID": 7101541,
           "Title": "PK (película)"
         },
@@ -928,6 +1048,10 @@
       ],
       "Articles": [
         {
+          "ID": 1426,
+          "Title": "Homo sapiens"
+        },
+        {
           "ID": 7634,
           "Title": "París"
         },
@@ -950,6 +1074,10 @@
         {
           "ID": 1886020,
           "Title": "Pirámide (arquitectura)"
+        },
+        {
+          "ID": 2400700,
+          "Title": "Australia"
         },
         {
           "ID": 4564865,
@@ -1004,6 +1132,10 @@
         {
           "ID": 5070907,
           "Title": "Categoría:Ocupaciones de la salud"
+        },
+        {
+          "ID": 5537485,
+          "Title": "Categoría:Asistencia sanitaria"
         }
       ],
       "Articles": [
@@ -1040,6 +1172,10 @@
         {
           "ID": 4167523,
           "Title": "Categoría:Acontecimientos culturales"
+        },
+        {
+          "ID": 5967630,
+          "Title": "Categoría:Historia por ubicación"
         }
       ],
       "Articles": [
@@ -1050,6 +1186,10 @@
         {
           "ID": 67761,
           "Title": "Guerra de Troya"
+        },
+        {
+          "ID": 83508,
+          "Title": "Medidas y pesos en la Antigua Roma"
         },
         {
           "ID": 717841,
@@ -1178,18 +1318,30 @@
           "Title": "Categoría:Ciencia"
         },
         {
+          "ID": 5064656,
+          "Title": "Categoría:Ramas de la ciencia"
+        },
+        {
           "ID": 5103426,
           "Title": "Categoría:Ciencias ambientales"
         },
         {
           "ID": 5252570,
           "Title": "Categoría:Sustancias químicas"
+        },
+        {
+          "ID": 7057526,
+          "Title": "Categoría:Ciencias"
         }
       ],
       "Articles": [
         {
           "ID": 1200,
           "Title": "Fuego"
+        },
+        {
+          "ID": 1455,
+          "Title": "Hidrología"
         },
         {
           "ID": 8476,
@@ -1240,6 +1392,10 @@
           "Title": "Phoenicopterus"
         },
         {
+          "ID": 34336,
+          "Title": "Oryza sativa"
+        },
+        {
           "ID": 40463,
           "Title": "Triticum"
         },
@@ -1250,6 +1406,10 @@
         {
           "ID": 45106,
           "Title": "Testículo"
+        },
+        {
+          "ID": 70549,
+          "Title": "Fragaria"
         },
         {
           "ID": 73052,
@@ -1270,6 +1430,10 @@
         {
           "ID": 110400,
           "Title": "Alces alces"
+        },
+        {
+          "ID": 118895,
+          "Title": "Aparato genital"
         },
         {
           "ID": 192153,
@@ -1320,6 +1484,10 @@
           "Title": "Ateles"
         },
         {
+          "ID": 338321,
+          "Title": "Fragaria vesca"
+        },
+        {
           "ID": 339545,
           "Title": "Arroz"
         },
@@ -1328,8 +1496,20 @@
           "Title": "Suspensión (química)"
         },
         {
+          "ID": 370500,
+          "Title": "Triticum aestivum"
+        },
+        {
+          "ID": 397582,
+          "Title": "Physalis peruviana"
+        },
+        {
           "ID": 407418,
           "Title": "Cucumis melo"
+        },
+        {
+          "ID": 409938,
+          "Title": "Cucurbita maxima"
         },
         {
           "ID": 430949,
@@ -1346,6 +1526,10 @@
         {
           "ID": 493015,
           "Title": "Myrtus"
+        },
+        {
+          "ID": 493027,
+          "Title": "Myrtus communis"
         },
         {
           "ID": 528243,
@@ -1416,6 +1600,10 @@
           "Title": "Pseudacris crucifer"
         },
         {
+          "ID": 3116403,
+          "Title": "Xôi"
+        },
+        {
           "ID": 4130610,
           "Title": "Picea engelmannii"
         },
@@ -1424,8 +1612,16 @@
           "Title": "Pinus kesiya"
         },
         {
+          "ID": 4176509,
+          "Title": "Rastrelliger kanagurta"
+        },
+        {
           "ID": 4304988,
           "Title": "Vientos preponderantes"
+        },
+        {
+          "ID": 5029819,
+          "Title": "Scomber"
         },
         {
           "ID": 5336630,
@@ -1440,6 +1636,10 @@
           "Title": "Red trófica"
         },
         {
+          "ID": 5657382,
+          "Title": "Anaconda (desambiguación)"
+        },
+        {
           "ID": 6184029,
           "Title": "Glaphyromorphus"
         },
@@ -1450,6 +1650,10 @@
         {
           "ID": 6945500,
           "Title": "Pastel de limón con merengue"
+        },
+        {
+          "ID": 8039354,
+          "Title": "Physalis philadelphica"
         },
         {
           "ID": 8413059,
@@ -1466,6 +1670,10 @@
         {
           "ID": 8618874,
           "Title": "Migración de insectos"
+        },
+        {
+          "ID": 8725935,
+          "Title": "Trachurus"
         }
       ]
     },
@@ -1473,6 +1681,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 51754,
+          "Title": "Categoría:Biografías"
+        },
         {
           "ID": 82033,
           "Title": "Categoría:Mujer"
@@ -1486,8 +1698,24 @@
           "Title": "Categoría:Personajes de cine"
         },
         {
+          "ID": 414903,
+          "Title": "Categoría:Libros biográficos"
+        },
+        {
+          "ID": 1893301,
+          "Title": "Categoría:Biografía"
+        },
+        {
           "ID": 2307044,
           "Title": "Categoría:Ego"
+        },
+        {
+          "ID": 4496858,
+          "Title": "Categoría:Personalidad"
+        },
+        {
+          "ID": 4591556,
+          "Title": "Categoría:Vida"
         },
         {
           "ID": 4591603,
@@ -1496,6 +1724,10 @@
         {
           "ID": 5585938,
           "Title": "Categoría:Personas"
+        },
+        {
+          "ID": 6016726,
+          "Title": "Categoría:Teorías de la personalidad"
         },
         {
           "ID": 7700167,
@@ -1764,12 +1996,28 @@
           "Title": "Belleza"
         },
         {
+          "ID": 87216,
+          "Title": "Creencia"
+        },
+        {
+          "ID": 87879,
+          "Title": "Creencia religiosa"
+        },
+        {
           "ID": 192089,
           "Title": "Hecho (filosofía)"
         },
         {
+          "ID": 282766,
+          "Title": "Alegría (emoción)"
+        },
+        {
           "ID": 1019354,
           "Title": "Efecto Dunning-Kruger"
+        },
+        {
+          "ID": 1423350,
+          "Title": "Hit"
         },
         {
           "ID": 2307040,
@@ -1940,6 +2188,10 @@
         {
           "ID": 90107,
           "Title": "Universidad de Nottingham"
+        },
+        {
+          "ID": 133188,
+          "Title": "Fideicomiso"
         },
         {
           "ID": 147659,
@@ -2676,12 +2928,24 @@
           "Title": "Categoría:Internet"
         },
         {
+          "ID": 129171,
+          "Title": "Categoría:Bases de datos"
+        },
+        {
           "ID": 204842,
           "Title": "Categoría:Historia de la tecnología"
         },
         {
+          "ID": 574895,
+          "Title": "Categoría:Gestión de datos"
+        },
+        {
           "ID": 1332328,
           "Title": "Categoría:Informática aplicada"
+        },
+        {
+          "ID": 1434456,
+          "Title": "Categoría:Computadoras"
         },
         {
           "ID": 4651196,
