--- a/nationalization/internal/languages/fa.json
+++ b/nationalization/internal/languages/fa.json
@@ -30,12 +30,20 @@
           "Title": "رده:گروه‌های موسیقی"
         },
         {
+          "ID": 93012,
+          "Title": "رده:رنگ‌ها"
+        },
+        {
           "ID": 113418,
           "Title": "رده:غذاها"
         },
         {
           "ID": 114865,
           "Title": "رده:فرهنگ"
+        },
+        {
+          "ID": 150940,
+          "Title": "رده:رشته‌های ورزشی"
         },
         {
           "ID": 170915,
@@ -46,20 +54,48 @@
           "Title": "رده:سرگرمی"
         },
         {
+          "ID": 356877,
+          "Title": "رده:تمرین"
+        },
+        {
+          "ID": 395046,
+          "Title": "رده:غذا و نوشابه"
+        },
+        {
           "ID": 412573,
           "Title": "رده:تفریح"
+        },
+        {
+          "ID": 412576,
+          "Title": "رده:اوقات فراغت"
         },
         {
           "ID": 413495,
           "Title": "رده:خوراکی‌ها"
         },
         {
+          "ID": 784127,
+          "Title": "رده:رنگ"
+        },
+        {
           "ID": 1506122,
           "Title": "رده:آماده‌سازی مواد غذایی"
         },
         {
+          "ID": 1613893,
+          "Title": "رده:هنر آشپزی"
+        },
+        {
+          "ID": 1629629,
+          "Title": "رده:خوراک"
+        },
+        {
           "ID": 1806107,
           "Title": "رده:غذا و نوشیدنی"
+        },
+        {
+          "ID": 2593358,
+          "Title": "رده:فنون آشپزی"
         },
         {
           "ID": 2609993,
@@ -74,6 +110,14 @@
         {
           "ID": 594,
           "Title": "ویکی‌پدیا"
+        },
+        {
+          "ID": 905,
+          "Title": "گروه موسیقی (راک و پاپ)"
+        },
+        {
+          "ID": 8941,
+          "Title": "گراز"
         },
         {
           "ID": 9521,
@@ -92,6 +136,10 @@
           "Title": "پوره سیب"
         },
         {
+          "ID": 12092,
+          "Title": "خوک اهلی"
+        },
+        {
           "ID": 13976,
           "Title": "بستنی"
         },
@@ -102,6 +150,10 @@
         {
           "ID": 14295,
           "Title": "واقع‌گرایی (هنر)"
+        },
+        {
+          "ID": 15018,
+          "Title": "تارت"
         },
         {
           "ID": 18259,
@@ -148,8 +200,16 @@
           "Title": "کاخ باکینگهام"
         },
         {
+          "ID": 161308,
+          "Title": "آمیزش جنسی دهانی"
+        },
+        {
           "ID": 178765,
           "Title": "شکلات"
+        },
+        {
+          "ID": 220733,
+          "Title": "سورتمه"
         },
         {
           "ID": 225869,
@@ -204,8 +264,16 @@
           "Title": "واقع‌گرایی"
         },
         {
+          "ID": 440538,
+          "Title": "تخم (زیست‌شناسی)"
+        },
+        {
           "ID": 449061,
           "Title": "کره بادام زمینی"
+        },
+        {
+          "ID": 530285,
+          "Title": "خوک"
         },
         {
           "ID": 535261,
@@ -232,6 +300,14 @@
           "Title": "شکلات داغ"
         },
         {
+          "ID": 780681,
+          "Title": "درخت کاکائو"
+        },
+        {
+          "ID": 795128,
+          "Title": "ویکی‌پدیای آستوری"
+        },
+        {
           "ID": 802756,
           "Title": "یهودا (ترانه)"
         },
@@ -246,6 +322,10 @@
         {
           "ID": 946894,
           "Title": "پای"
+        },
+        {
+          "ID": 947402,
+          "Title": "قهوه عربیکا"
         },
         {
           "ID": 956904,
@@ -266,6 +346,10 @@
         {
           "ID": 1076890,
           "Title": "اتک آو د شو!"
+        },
+        {
+          "ID": 1113870,
+          "Title": "قهوه (گیاه)"
         },
         {
           "ID": 1249525,
@@ -348,6 +432,10 @@
           "Title": "پیتزای شیکاگو"
         },
         {
+          "ID": 2101293,
+          "Title": "کتاب مرجع"
+        },
+        {
           "ID": 2216295,
           "Title": "پای ظرفی"
         },
@@ -416,12 +504,20 @@
           "Title": "مکان‌ها در هری پاتر"
         },
         {
+          "ID": 3530358,
+          "Title": "بیسکویت دریایی"
+        },
+        {
           "ID": 3551952,
           "Title": "واقع‌گرایی (ادبیات)"
         },
         {
           "ID": 3613730,
           "Title": "مسابقه آواز یوروویژن ۲۰۱۷"
+        },
+        {
+          "ID": 3718886,
+          "Title": "نان سوخاری"
         },
         {
           "ID": 3745446,
@@ -446,6 +542,10 @@
         {
           "ID": 3949583,
           "Title": "قابل"
+        },
+        {
+          "ID": 3958863,
+          "Title": "پاگنده (ابهام‌زدایی)"
         },
         {
           "ID": 4239161,
@@ -502,6 +602,10 @@
         {
           "ID": 4817020,
           "Title": "تخم مرغ صدساله"
+        },
+        {
+          "ID": 4854831,
+          "Title": "تبتل"
         }
       ]
     },
@@ -540,6 +644,10 @@
       ],
       "Articles": [
         {
+          "ID": 7055,
+          "Title": "استرالیا"
+        },
+        {
           "ID": 7283,
           "Title": "میانمار"
         },
@@ -556,6 +664,10 @@
           "Title": "پاریس"
         },
         {
+          "ID": 39653,
+          "Title": "انسان"
+        },
+        {
           "ID": 114041,
           "Title": "کوئینزلند"
         },
@@ -566,6 +678,10 @@
         {
           "ID": 862074,
           "Title": "هرم"
+        },
+        {
+          "ID": 3535826,
+          "Title": "انسان خردمند"
         },
         {
           "ID": 4495983,
@@ -608,6 +724,10 @@
         {
           "ID": 916629,
           "Title": "رده:سلامت"
+        },
+        {
+          "ID": 4854674,
+          "Title": "رده:مراقبت سلامت"
         }
       ],
       "Articles": [
@@ -632,6 +752,10 @@
         {
           "ID": 364928,
           "Title": "رده:تاریخ بر پایه کشور"
+        },
+        {
+          "ID": 450937,
+          "Title": "رده:تاریخ بر پایه مکان"
         },
         {
           "ID": 702856,
@@ -782,6 +906,10 @@
           "Title": "رده:طبیعت"
         },
         {
+          "ID": 265313,
+          "Title": "رده:رشته‌های علمی"
+        },
+        {
           "ID": 290665,
           "Title": "رده:ترکیب‌های شیمیایی"
         },
@@ -820,12 +948,28 @@
           "Title": "آتش"
         },
         {
+          "ID": 32791,
+          "Title": "گرمک"
+        },
+        {
+          "ID": 38484,
+          "Title": "اندام جنسی"
+        },
+        {
           "ID": 43675,
           "Title": "آلت مردی"
         },
         {
           "ID": 53146,
           "Title": "سوسپانسیون"
+        },
+        {
+          "ID": 59504,
+          "Title": "دستگاه تناسلی"
+        },
+        {
+          "ID": 61640,
+          "Title": "آب‌شناسی"
         },
         {
           "ID": 88138,
@@ -876,6 +1020,10 @@
           "Title": "قورباغه‌های درختی"
         },
         {
+          "ID": 225056,
+          "Title": "طلال"
+        },
+        {
           "ID": 241830,
           "Title": "دستگاه ماهیچه‌ای"
         },
@@ -900,12 +1048,20 @@
           "Title": "خودارضایی"
         },
         {
+          "ID": 429273,
+          "Title": "گندم معمولی"
+        },
+        {
           "ID": 444127,
           "Title": "ادرار"
         },
         {
           "ID": 523700,
           "Title": "جوانه زدن"
+        },
+        {
+          "ID": 532765,
+          "Title": "توت‌فرنگی (سرده)"
         },
         {
           "ID": 534416,
@@ -980,8 +1136,16 @@
           "Title": "لیموی شیراز"
         },
         {
+          "ID": 2613747,
+          "Title": "توت طلایی"
+        },
+        {
           "ID": 2632017,
           "Title": "پاشلک شال‌گردنی"
+        },
+        {
+          "ID": 2790444,
+          "Title": "توت‌فرنگی وحشی"
         },
         {
           "ID": 2796587,
@@ -996,20 +1160,48 @@
           "Title": "اریگانوم اونیتس"
         },
         {
+          "ID": 3352656,
+          "Title": "زبردم‌ها"
+        },
+        {
+          "ID": 3374142,
+          "Title": "کیر"
+        },
+        {
           "ID": 3517210,
           "Title": "درختان مرکبات"
+        },
+        {
+          "ID": 3604117,
+          "Title": "کدوی تنبل"
         },
         {
           "ID": 3638741,
           "Title": "انبه (گیاه)"
         },
         {
+          "ID": 3642317,
+          "Title": "برنج (گیاه)"
+        },
+        {
           "ID": 3661294,
           "Title": "گندم"
         },
         {
+          "ID": 3847001,
+          "Title": "خط‌خطی‌ها"
+        },
+        {
           "ID": 3919733,
           "Title": "کوکر اسپانیل"
+        },
+        {
+          "ID": 3920960,
+          "Title": "مورد"
+        },
+        {
+          "ID": 3958564,
+          "Title": "آناکوندا (ابهام‌زدایی)"
         },
         {
           "ID": 3963718,
@@ -1030,6 +1222,10 @@
         {
           "ID": 4781817,
           "Title": "گاه‌شماری مایا"
+        },
+        {
+          "ID": 4842340,
+          "Title": "سنبلچه"
         },
         {
           "ID": 4843650,
@@ -1058,6 +1254,10 @@
           "Title": "رده:زنان"
         },
         {
+          "ID": 175428,
+          "Title": "رده:زندگی‌نامه‌ها"
+        },
+        {
           "ID": 204413,
           "Title": "رده:نام‌های خانوادگی"
         },
@@ -1070,8 +1270,32 @@
           "Title": "رده:خود"
         },
         {
+          "ID": 266290,
+          "Title": "رده:زندگی"
+        },
+        {
           "ID": 716982,
           "Title": "رده:هنرمندان بر پایه رسانه"
+        },
+        {
+          "ID": 885434,
+          "Title": "رده:شخصیت"
+        },
+        {
+          "ID": 885435,
+          "Title": "رده:نظریه‌های شخصیت"
+        },
+        {
+          "ID": 2437972,
+          "Title": "رده:آثار زندگی‌نامه‌ای"
+        },
+        {
+          "ID": 3578411,
+          "Title": "رده:زندگی‌نامه‌ای (کتاب‌ها)"
+        },
+        {
+          "ID": 4537606,
+          "Title": "رده:زندگی‌نامه‌نویسان مرد"
         }
       ],
       "Articles": [
@@ -1308,6 +1532,18 @@
           "Title": "خوشحالی"
         },
         {
+          "ID": 1106464,
+          "Title": "باور"
+        },
+        {
+          "ID": 1106466,
+          "Title": "اعتقاد (ابهام‌زدایی)"
+        },
+        {
+          "ID": 1691048,
+          "Title": "باور دینی"
+        },
+        {
           "ID": 3234293,
           "Title": "اثر دانینگ-کروگر"
         },
@@ -1368,6 +1604,10 @@
           "Title": "رده:سازمان‌های بین‌المللی"
         },
         {
+          "ID": 25515,
+          "Title": "رده:علوم انسانی"
+        },
+        {
           "ID": 53633,
           "Title": "رده:حقوق"
         },
@@ -1386,6 +1626,10 @@
         {
           "ID": 740882,
           "Title": "رده:قانون"
+        },
+        {
+          "ID": 1254957,
+          "Title": "رده:سازمان‌های میان‌دولتی"
         },
         {
           "ID": 1814110,
@@ -1838,6 +2082,10 @@
           "Title": "دانشگاه منچستر"
         },
         {
+          "ID": 731321,
+          "Title": "تراست (حقوق)"
+        },
+        {
           "ID": 731323,
           "Title": "تراست"
         },
@@ -2104,6 +2352,10 @@
           "Title": "رده:الکترونیک"
         },
         {
+          "ID": 12206,
+          "Title": "رده:رایانه"
+        },
+        {
           "ID": 15602,
           "Title": "رده:اینترنت"
         },
@@ -2122,6 +2374,14 @@
         {
           "ID": 51172,
           "Title": "رده:فناوری"
+        },
+        {
+          "ID": 61308,
+          "Title": "رده:مدیریت داده‌ها"
+        },
+        {
+          "ID": 121763,
+          "Title": "رده:پایگاه داده‌ها"
         },
         {
           "ID": 151769,
