--- a/nationalization/internal/languages/fi.json
+++ b/nationalization/internal/languages/fi.json
@@ -22,12 +22,24 @@
           "Title": "Luokka:Kulttuuri"
         },
         {
+          "ID": 21082,
+          "Title": "Luokka:Värit"
+        },
+        {
           "ID": 21513,
           "Title": "Luokka:Harrastukset"
         },
         {
           "ID": 23298,
           "Title": "Luokka:Ruoka"
+        },
+        {
+          "ID": 24388,
+          "Title": "Luokka:Vapaa-aika"
+        },
+        {
+          "ID": 25173,
+          "Title": "Luokka:Liikunta"
         },
         {
           "ID": 25308,
@@ -54,6 +66,14 @@
           "Title": "Luokka:Ruokakulttuuri"
         },
         {
+          "ID": 210636,
+          "Title": "Luokka:Ruoanlaittotekniikat"
+        },
+        {
+          "ID": 965253,
+          "Title": "Luokka:Urheilulajit"
+        },
+        {
           "ID": 1277298,
           "Title": "Luokka:Virkistys"
         }
@@ -68,12 +88,20 @@
           "Title": "Buckinghamin palatsi"
         },
         {
+          "ID": 5557,
+          "Title": "Villisika"
+        },
+        {
           "ID": 7379,
           "Title": "Tylypahka"
         },
         {
           "ID": 8030,
           "Title": "Kahvi"
+        },
+        {
+          "ID": 9304,
+          "Title": "Arabiankahvi"
         },
         {
           "ID": 9347,
@@ -84,8 +112,16 @@
           "Title": "Leipä"
         },
         {
+          "ID": 14265,
+          "Title": "Suuseksi"
+        },
+        {
           "ID": 15661,
           "Title": "Pilsner"
+        },
+        {
+          "ID": 15941,
+          "Title": "Sika"
         },
         {
           "ID": 17555,
@@ -98,6 +134,10 @@
         {
           "ID": 24553,
           "Title": "Suklaa"
+        },
+        {
+          "ID": 25243,
+          "Title": "Yhtye"
         },
         {
           "ID": 27529,
@@ -128,6 +168,10 @@
           "Title": "Pasta"
         },
         {
+          "ID": 34049,
+          "Title": "Muna"
+        },
+        {
           "ID": 53981,
           "Title": "Mordred"
         },
@@ -156,6 +200,10 @@
           "Title": "Isojalka"
         },
         {
+          "ID": 114191,
+          "Title": "Kaakaopuu"
+        },
+        {
           "ID": 136080,
           "Title": "Keksi"
         },
@@ -174,6 +222,10 @@
         {
           "ID": 171587,
           "Title": "Bière de Garde"
+        },
+        {
+          "ID": 200854,
+          "Title": "Reki"
         },
         {
           "ID": 219571,
@@ -232,6 +284,14 @@
           "Title": "Wikipedia"
         },
         {
+          "ID": 394426,
+          "Title": "Hakuteos"
+        },
+        {
+          "ID": 407764,
+          "Title": "Pecorino"
+        },
+        {
           "ID": 411069,
           "Title": "Suklaapatukka"
         },
@@ -284,6 +344,14 @@
           "Title": "Bejeweled 2"
         },
         {
+          "ID": 673561,
+          "Title": "Ginger ale"
+        },
+        {
+          "ID": 702127,
+          "Title": "Laivakorppu"
+        },
+        {
           "ID": 705938,
           "Title": "Pizza"
         },
@@ -300,8 +368,16 @@
           "Title": "Kaakaojuoma"
         },
         {
+          "ID": 858727,
+          "Title": "Torttu"
+        },
+        {
           "ID": 865987,
           "Title": "Angry Birds (videopeli)"
+        },
+        {
+          "ID": 897557,
+          "Title": "Roti"
         },
         {
           "ID": 922866,
@@ -326,6 +402,14 @@
         {
           "ID": 970625,
           "Title": "The Wanted"
+        },
+        {
+          "ID": 1006998,
+          "Title": "Siat (suku)"
+        },
+        {
+          "ID": 1016286,
+          "Title": "Kahvipensaat"
         },
         {
           "ID": 1030805,
@@ -366,6 +450,10 @@
         {
           "ID": 1332321,
           "Title": "Onnenkeksi"
+        },
+        {
+          "ID": 1364827,
+          "Title": "Ohutleipä"
         },
         {
           "ID": 1370378,
@@ -416,6 +504,14 @@
       ],
       "Articles": [
         {
+          "ID": 85,
+          "Title": "Australia"
+        },
+        {
+          "ID": 381,
+          "Title": "Ihminen"
+        },
+        {
           "ID": 960,
           "Title": "Pariisi"
         },
@@ -448,6 +544,10 @@
         {
           "ID": 19814,
           "Title": "Luokka:Lääketiede"
+        },
+        {
+          "ID": 25163,
+          "Title": "Luokka:Terveydenhoito"
         },
         {
           "ID": 40378,
@@ -534,6 +634,10 @@
         {
           "ID": 691261,
           "Title": "Tasankointiaanit"
+        },
+        {
+          "ID": 793917,
+          "Title": "Roomalainen maili"
         },
         {
           "ID": 815031,
@@ -652,6 +756,14 @@
           "Title": "Tuli"
         },
         {
+          "ID": 12904,
+          "Title": "Vehnä"
+        },
+        {
+          "ID": 14276,
+          "Title": "Sukupuolielin"
+        },
+        {
           "ID": 17662,
           "Title": "Siitin"
         },
@@ -670,6 +782,10 @@
         {
           "ID": 27178,
           "Title": "Sitruuna"
+        },
+        {
+          "ID": 27624,
+          "Title": "Mansikat"
         },
         {
           "ID": 28893,
@@ -700,6 +816,14 @@
           "Title": "Puutarhamansikka"
         },
         {
+          "ID": 43826,
+          "Title": "Hydrologia"
+        },
+        {
+          "ID": 46498,
+          "Title": "Karviaiskoiso"
+        },
+        {
           "ID": 49793,
           "Title": "Veden kiertokulku"
         },
@@ -710,6 +834,10 @@
         {
           "ID": 55328,
           "Title": "Rewantiikeri"
+        },
+        {
+          "ID": 66416,
+          "Title": "Ahomansikka"
         },
         {
           "ID": 67372,
@@ -752,8 +880,16 @@
           "Title": "Flamingot"
         },
         {
+          "ID": 177616,
+          "Title": "Lisääntymiselimistö"
+        },
+        {
           "ID": 185723,
           "Title": "Makrilli"
+        },
+        {
+          "ID": 198695,
+          "Title": "Myrtti"
         },
         {
           "ID": 202762,
@@ -800,6 +936,10 @@
           "Title": "Viheranakonda"
         },
         {
+          "ID": 737646,
+          "Title": "Tomatillo"
+        },
+        {
           "ID": 770409,
           "Title": "Ruskosuulat"
         },
@@ -822,6 +962,10 @@
         {
           "ID": 992530,
           "Title": "Merijuolavehnä"
+        },
+        {
+          "ID": 1169400,
+          "Title": "Jättikurpitsa"
         },
         {
           "ID": 1264430,
@@ -858,12 +1002,24 @@
           "Title": "Luokka:Elokuvahahmot"
         },
         {
+          "ID": 209692,
+          "Title": "Luokka:Elämä"
+        },
+        {
           "ID": 232057,
           "Title": "Luokka:Sukunimet"
         },
         {
+          "ID": 273018,
+          "Title": "Luokka:Elämäkerrat ja muistelmat"
+        },
+        {
           "ID": 286985,
           "Title": "Luokka:Nainen"
+        },
+        {
+          "ID": 561231,
+          "Title": "Luokka:Persoonallisuuspsykologia"
         }
       ],
       "Articles": [
@@ -1084,6 +1240,10 @@
       ],
       "Articles": [
         {
+          "ID": 65794,
+          "Title": "Ilo"
+        },
+        {
           "ID": 79267,
           "Title": "Usko"
         },
@@ -1098,6 +1258,10 @@
         {
           "ID": 279083,
           "Title": "Tosiasia"
+        },
+        {
+          "ID": 412824,
+          "Title": "Uskomus"
         },
         {
           "ID": 469794,
@@ -1490,6 +1654,10 @@
           "Title": "Torinon yliopisto"
         },
         {
+          "ID": 715512,
+          "Title": "Trusti (oikeustiede)"
+        },
+        {
           "ID": 720124,
           "Title": "Open University"
         },
@@ -1682,6 +1850,10 @@
           "Title": "Jawaharlal Nehrun yliopisto"
         },
         {
+          "ID": 1491363,
+          "Title": "Trusti"
+        },
+        {
           "ID": 1491364,
           "Title": "Trusti (taloustiede)"
         },
@@ -1716,6 +1888,14 @@
           "Title": "Luokka:Internet"
         },
         {
+          "ID": 26714,
+          "Title": "Luokka:Tekniikka"
+        },
+        {
+          "ID": 29399,
+          "Title": "Luokka:Tietokoneet"
+        },
+        {
           "ID": 32411,
           "Title": "Luokka:Muotoilu"
         },
@@ -1734,6 +1914,10 @@
         {
           "ID": 234229,
           "Title": "Luokka:Tekniikan historia"
+        },
+        {
+          "ID": 788172,
+          "Title": "Luokka:Tiedonhallinta"
         }
       ],
       "Articles": [
