--- a/nationalization/internal/languages/he.json
+++ b/nationalization/internal/languages/he.json
@@ -18,6 +18,10 @@
           "Title": "קטגוריה:סרטים"
         },
         {
+          "ID": 22792,
+          "Title": "קטגוריה:פנאי"
+        },
+        {
           "ID": 23164,
           "Title": "קטגוריה:ספורט"
         },
@@ -34,6 +38,18 @@
           "Title": "קטגוריה:מאכלים"
         },
         {
+          "ID": 34205,
+          "Title": "קטגוריה:שיטות בישול"
+        },
+        {
+          "ID": 37470,
+          "Title": "קטגוריה:צבעים"
+        },
+        {
+          "ID": 46919,
+          "Title": "קטגוריה:ענפי ספורט"
+        },
+        {
           "ID": 56687,
           "Title": "קטגוריה:מטבחים"
         },
@@ -44,6 +60,14 @@
         {
           "ID": 106380,
           "Title": "קטגוריה:בידור"
+        },
+        {
+          "ID": 302085,
+          "Title": "קטגוריה:כושר גופני"
+        },
+        {
+          "ID": 386753,
+          "Title": "קטגוריה:להקות"
         },
         {
           "ID": 448041,
@@ -80,6 +104,14 @@
           "Title": "קפה"
         },
         {
+          "ID": 21208,
+          "Title": "חזיר בר"
+        },
+        {
+          "ID": 21236,
+          "Title": "חזיר (סוג)"
+        },
+        {
           "ID": 21687,
           "Title": "לד זפלין"
         },
@@ -94,6 +126,14 @@
         {
           "ID": 25500,
           "Title": "בירה"
+        },
+        {
+          "ID": 31160,
+          "Title": "ביצה"
+        },
+        {
+          "ID": 34588,
+          "Title": "קקאו (עץ)"
         },
         {
           "ID": 37972,
@@ -148,8 +188,16 @@
           "Title": "עוגייה"
         },
         {
+          "ID": 100558,
+          "Title": "טארט"
+        },
+        {
           "ID": 106974,
           "Title": "רוטב"
+        },
+        {
+          "ID": 107367,
+          "Title": "פקורינו"
         },
         {
           "ID": 128196,
@@ -172,6 +220,10 @@
           "Title": "ויקיפדיה"
         },
         {
+          "ID": 199154,
+          "Title": "קפה (צמח)"
+        },
+        {
           "ID": 202184,
           "Title": "חמאת בוטנים"
         },
@@ -180,8 +232,16 @@
           "Title": "שוקולד לבן"
         },
         {
+          "ID": 230916,
+          "Title": "מזחלת"
+        },
+        {
           "ID": 233854,
           "Title": "שוקו"
+        },
+        {
+          "ID": 287653,
+          "Title": "מין אוראלי"
         },
         {
           "ID": 326695,
@@ -280,6 +340,10 @@
           "Title": "הארי פוטר - מונחים"
         },
         {
+          "ID": 677664,
+          "Title": "יוריי"
+        },
+        {
           "ID": 678809,
           "Title": "סאלו (מאכל)"
         },
@@ -292,8 +356,16 @@
           "Title": "ריאליזם"
         },
         {
+          "ID": 720658,
+          "Title": "קפה ערביקה"
+        },
+        {
           "ID": 729552,
           "Title": "לחם סודה"
+        },
+        {
+          "ID": 737652,
+          "Title": "חזיר הבית"
         },
         {
           "ID": 778802,
@@ -352,6 +424,10 @@
           "Title": "עוגת שכבות"
         },
         {
+          "ID": 1161049,
+          "Title": "ג'ינג'ר אייל"
+        },
+        {
           "ID": 1182531,
           "Title": "Flappy Bird"
         },
@@ -362,6 +438,10 @@
         {
           "ID": 1228254,
           "Title": "Angry Birds (משחק וידאו)"
+        },
+        {
+          "ID": 1242256,
+          "Title": "בנד"
         },
         {
           "ID": 1244899,
@@ -402,6 +482,10 @@
         {
           "ID": 1504650,
           "Title": "אש קטצ'אם"
+        },
+        {
+          "ID": 1511179,
+          "Title": "ספר יעץ"
         },
         {
           "ID": 1545671,
@@ -456,6 +540,10 @@
       ],
       "Articles": [
         {
+          "ID": 2699,
+          "Title": "אוסטרליה"
+        },
+        {
           "ID": 5682,
           "Title": "פירמידה (מבנה)"
         },
@@ -474,6 +562,10 @@
         {
           "ID": 74106,
           "Title": "קווינסלנד"
+        },
+        {
+          "ID": 697376,
+          "Title": "אדם"
         },
         {
           "ID": 709359,
@@ -534,6 +626,10 @@
         {
           "ID": 1431193,
           "Title": "קטגוריה:בחירות לפי שנים"
+        },
+        {
+          "ID": 1541482,
+          "Title": "קטגוריה:היסטוריה לפי מיקום"
         }
       ],
       "Articles": [
@@ -656,6 +752,10 @@
           "Title": "קטגוריה:תרכובות"
         },
         {
+          "ID": 902166,
+          "Title": "קטגוריה:תחומי מחקר מדעיים"
+        },
+        {
           "ID": 1284201,
           "Title": "קטגוריה:בעלי חיים לפי יבשת"
         }
@@ -718,6 +818,10 @@
           "Title": "מערכת השרירים"
         },
         {
+          "ID": 35499,
+          "Title": "מערכת הרבייה"
+        },
+        {
           "ID": 37556,
           "Title": "אייל קורא"
         },
@@ -738,6 +842,10 @@
           "Title": "לימון"
         },
         {
+          "ID": 120223,
+          "Title": "תות שדה"
+        },
+        {
           "ID": 138319,
           "Title": "מחזור המים"
         },
@@ -748,6 +856,10 @@
         {
           "ID": 168097,
           "Title": "אננס"
+        },
+        {
+          "ID": 189775,
+          "Title": "הידרולוגיה"
         },
         {
           "ID": 207096,
@@ -802,6 +914,14 @@
           "Title": "אשך"
         },
         {
+          "ID": 706165,
+          "Title": "אנקונדה (פירושונים)"
+        },
+        {
+          "ID": 745768,
+          "Title": "שלפח"
+        },
+        {
           "ID": 759133,
           "Title": "מקרל"
         },
@@ -826,6 +946,10 @@
           "Title": "אשוחית אנגלמן"
         },
         {
+          "ID": 1407123,
+          "Title": "טרכון (דג)"
+        },
+        {
           "ID": 1419967,
           "Title": "סולה (סוג)"
         },
@@ -836,6 +960,10 @@
         {
           "ID": 1451742,
           "Title": "קוף עכביש"
+        },
+        {
+          "ID": 1616709,
+          "Title": "חיטת הלחם"
         }
       ]
     },
@@ -854,6 +982,18 @@
         {
           "ID": 181879,
           "Title": "קטגוריה:דמויות קולנועיות"
+        },
+        {
+          "ID": 210126,
+          "Title": "קטגוריה:ספרים ביוגרפיים"
+        },
+        {
+          "ID": 287930,
+          "Title": "קטגוריה:פסיכולוגיה של האישיות"
+        },
+        {
+          "ID": 338114,
+          "Title": "קטגוריה:ביוגרפיות"
         },
         {
           "ID": 356264,
@@ -1034,6 +1174,10 @@
           "Title": "שלדון קופר"
         },
         {
+          "ID": 1026610,
+          "Title": "הזחל הרעב"
+        },
+        {
           "ID": 1029098,
           "Title": "אוליב אן ברנס"
         },
@@ -1074,8 +1218,16 @@
       ],
       "Articles": [
         {
+          "ID": 739,
+          "Title": "אמונה"
+        },
+        {
           "ID": 9873,
           "Title": "אמון"
+        },
+        {
+          "ID": 87305,
+          "Title": "שמחה"
         },
         {
           "ID": 95416,
@@ -1092,6 +1244,10 @@
         {
           "ID": 826766,
           "Title": "אפקט דאנינג-קרוגר"
+        },
+        {
+          "ID": 1452588,
+          "Title": "אמונה (פירושונים)"
         }
       ]
     },
@@ -1156,6 +1312,10 @@
         {
           "ID": 1060666,
           "Title": "קטגוריה:אוניברסיטאות ומכללות לפי מדינה"
+        },
+        {
+          "ID": 1531970,
+          "Title": "קטגוריה:ארגונים בין-ממשלתיים"
         },
         {
           "ID": 1592502,
@@ -1464,6 +1624,10 @@
           "Title": "אוניברסיטה ציבורית"
         },
         {
+          "ID": 835726,
+          "Title": "דיני נאמנות"
+        },
+        {
           "ID": 844600,
           "Title": "אוניברסיטת מינסוטה"
         },
@@ -1594,6 +1758,10 @@
           "Title": "קטגוריה:מדעי המחשב"
         },
         {
+          "ID": 19237,
+          "Title": "קטגוריה:מחשבים"
+        },
+        {
           "ID": 21728,
           "Title": "קטגוריה:טכנולוגיה"
         },
@@ -1620,6 +1788,10 @@
         {
           "ID": 126656,
           "Title": "קטגוריה:טכנולוגיה צבאית"
+        },
+        {
+          "ID": 271601,
+          "Title": "קטגוריה:בסיסי נתונים"
         },
         {
           "ID": 281954,
