--- a/nationalization/internal/languages/hi.json
+++ b/nationalization/internal/languages/hi.json
@@ -26,6 +26,10 @@
           "Title": "श्रेणी:खेल"
         },
         {
+          "ID": 8865,
+          "Title": "श्रेणी:रंग"
+        },
+        {
           "ID": 46700,
           "Title": "श्रेणी:पोषण"
         },
@@ -34,8 +38,16 @@
           "Title": "श्रेणी:भोजन"
         },
         {
+          "ID": 695846,
+          "Title": "श्रेणी:प्रकारानुसार खेल"
+        },
+        {
           "ID": 711085,
           "Title": "श्रेणी:फ़िल्में"
+        },
+        {
+          "ID": 717127,
+          "Title": "श्रेणी:अवकाश"
         },
         {
           "ID": 718346,
@@ -48,6 +60,10 @@
         {
           "ID": 718354,
           "Title": "श्रेणी:खानपान की संस्कृति"
+        },
+        {
+          "ID": 719482,
+          "Title": "श्रेणी:शारीरिक व्यायाम"
         },
         {
           "ID": 722379,
@@ -72,6 +88,10 @@
           "Title": "वास्तविकता"
         },
         {
+          "ID": 20081,
+          "Title": "रोटी"
+        },
+        {
           "ID": 23367,
           "Title": "पिज़्ज़ा"
         },
@@ -80,8 +100,24 @@
           "Title": "कॉफ़ी"
         },
         {
+          "ID": 40377,
+          "Title": "मुखाभिगम"
+        },
+        {
           "ID": 51176,
           "Title": "डबलरोटी"
+        },
+        {
+          "ID": 62481,
+          "Title": "अण्डा"
+        },
+        {
+          "ID": 81500,
+          "Title": "अस्तुरियाई विकिपीडिया"
+        },
+        {
+          "ID": 100350,
+          "Title": "जंगली सुअर"
         },
         {
           "ID": 102687,
@@ -94,6 +130,10 @@
         {
           "ID": 162776,
           "Title": "फेलाशियो"
+        },
+        {
+          "ID": 171468,
+          "Title": "सूअर"
         },
         {
           "ID": 179753,
@@ -244,6 +284,10 @@
       ],
       "Articles": [
         {
+          "ID": 814,
+          "Title": "ऑस्ट्रेलिया"
+        },
+        {
           "ID": 2293,
           "Title": "कैनबरा"
         },
@@ -266,6 +310,10 @@
         {
           "ID": 51254,
           "Title": "पिरामिड आकार"
+        },
+        {
+          "ID": 854635,
+          "Title": "होमो सेपियन्स"
         }
       ]
     },
@@ -288,6 +336,10 @@
         {
           "ID": 509559,
           "Title": "श्रेणी:स्वास्थ्य सेवा व्यवसाय"
+        },
+        {
+          "ID": 509563,
+          "Title": "श्रेणी:स्वास्थ्य सेवा"
         },
         {
           "ID": 656155,
@@ -320,6 +372,10 @@
           "Title": "श्रेणी:घटनाएँ"
         },
         {
+          "ID": 721831,
+          "Title": "श्रेणी:स्थानानुसार इतिहास"
+        },
+        {
           "ID": 740717,
           "Title": "श्रेणी:रीति पालन"
         },
@@ -332,6 +388,10 @@
         {
           "ID": 27686,
           "Title": "ट्रॉय का युद्ध"
+        },
+        {
+          "ID": 43409,
+          "Title": "प्राचीन रोमन भार एवं मापन"
         },
         {
           "ID": 211397,
@@ -460,6 +520,10 @@
           "Title": "श्रेणी:आपदाएँ"
         },
         {
+          "ID": 475292,
+          "Title": "श्रेणी:विषयानुसार विज्ञान"
+        },
+        {
           "ID": 493288,
           "Title": "श्रेणी:महाद्वीप के अनुसार प्राणी"
         },
@@ -510,6 +574,14 @@
           "Title": "मूत्र"
         },
         {
+          "ID": 19816,
+          "Title": "ख़रबूज़ा"
+        },
+        {
+          "ID": 25440,
+          "Title": "धान"
+        },
+        {
           "ID": 35278,
           "Title": "फूल गोभी"
         },
@@ -536,6 +608,18 @@
         {
           "ID": 99340,
           "Title": "आग"
+        },
+        {
+          "ID": 99458,
+          "Title": "प्रजनन तंत्र"
+        },
+        {
+          "ID": 99487,
+          "Title": "जलविज्ञान"
+        },
+        {
+          "ID": 164554,
+          "Title": "यौन अंग"
         },
         {
           "ID": 166825,
@@ -574,6 +658,10 @@
           "Title": "खाद्य शृंखला"
         },
         {
+          "ID": 557819,
+          "Title": "रसभरी"
+        },
+        {
           "ID": 650381,
           "Title": "अंकुरण क्रिया"
         },
@@ -600,6 +688,10 @@
           "Title": "श्रेणी:व्यक्तिगत जीवन"
         },
         {
+          "ID": 5080,
+          "Title": "श्रेणी:व्यक्तित्व"
+        },
+        {
           "ID": 72223,
           "Title": "श्रेणी:लोग"
         },
@@ -612,12 +704,28 @@
           "Title": "श्रेणी:उपनाम"
         },
         {
+          "ID": 475299,
+          "Title": "श्रेणी:जीवन"
+        },
+        {
           "ID": 492672,
           "Title": "श्रेणी:निजी जीवन"
         },
         {
           "ID": 492674,
           "Title": "श्रेणी:स्वयं"
+        },
+        {
+          "ID": 724057,
+          "Title": "श्रेणी:जीवनीक कृतियाँ"
+        },
+        {
+          "ID": 724058,
+          "Title": "श्रेणी:जीवनी (शैली)"
+        },
+        {
+          "ID": 724060,
+          "Title": "श्रेणी:जीवनियाँ (पुस्तकें)"
         }
       ],
       "Articles": [
@@ -852,6 +960,10 @@
         {
           "ID": 475290,
           "Title": "श्रेणी:सामाजिक विज्ञान"
+        },
+        {
+          "ID": 529224,
+          "Title": "श्रेणी:मानविकी"
         },
         {
           "ID": 765539,
@@ -1130,6 +1242,10 @@
       "Title": "Technology and applied sciences",
       "Categories": [
         {
+          "ID": 3563,
+          "Title": "श्रेणी:तकनीक"
+        },
+        {
           "ID": 10846,
           "Title": "श्रेणी:इलेक्ट्रॉनिक्स"
         },
@@ -1144,6 +1260,10 @@
         {
           "ID": 36269,
           "Title": "श्रेणी:प्रौद्योगिकी"
+        },
+        {
+          "ID": 166803,
+          "Title": "श्रेणी:कंप्यूटर"
         },
         {
           "ID": 181218,
@@ -1176,6 +1296,14 @@
         {
           "ID": 706547,
           "Title": "श्रेणी:कम्प्यूटर विज्ञान"
+        },
+        {
+          "ID": 728645,
+          "Title": "श्रेणी:डाटा प्रबन्धन"
+        },
+        {
+          "ID": 732839,
+          "Title": "श्रेणी:डेटाबेस"
         },
         {
           "ID": 798492,
