--- a/nationalization/internal/languages/hy.json
+++ b/nationalization/internal/languages/hy.json
@@ -38,8 +38,16 @@
           "Title": "Կատեգորիա:Ժամանց"
         },
         {
+          "ID": 17079,
+          "Title": "Կատեգորիա:Մարզաձևեր"
+        },
+        {
           "ID": 28455,
           "Title": "Կատեգորիա:Ուտեստ և ըմպելիք"
+        },
+        {
+          "ID": 82149,
+          "Title": "Կատեգորիա:Գույներ"
         },
         {
           "ID": 97910,
@@ -56,6 +64,18 @@
         {
           "ID": 471142,
           "Title": "Կատեգորիա:Ուտեստներ"
+        },
+        {
+          "ID": 494286,
+          "Title": "Կատեգորիա:Սննդագիտություն"
+        },
+        {
+          "ID": 736016,
+          "Title": "Կատեգորիա:Ազատ ժամանց"
+        },
+        {
+          "ID": 844962,
+          "Title": "Կատեգորիա:Ֆիզկուլտուրա"
         },
         {
           "ID": 849411,
@@ -100,6 +120,10 @@
           "Title": "Ազդրապուխտ"
         },
         {
+          "ID": 45509,
+          "Title": "Բաստուրմա"
+        },
+        {
           "ID": 51174,
           "Title": "Բուքինգհեմյան պալատ"
         },
@@ -122,6 +146,14 @@
         {
           "ID": 79241,
           "Title": "Պիցցա"
+        },
+        {
+          "ID": 79338,
+          "Title": "Պեկորինո"
+        },
+        {
+          "ID": 91431,
+          "Title": "Տնային խոզ"
         },
         {
           "ID": 96220,
@@ -148,6 +180,14 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 410651,
+          "Title": "Սուրճ Արաբիկա"
+        },
+        {
+          "ID": 411021,
+          "Title": "Կակաո"
+        },
+        {
           "ID": 451023,
           "Title": "WWE աշխարհի չեմպիոնատ"
         },
@@ -160,8 +200,16 @@
           "Title": "Տոմատի սոուս"
         },
         {
+          "ID": 462630,
+          "Title": "Սրճենի"
+        },
+        {
           "ID": 466545,
           "Title": "Լեդ Զեփելին"
+        },
+        {
+          "ID": 468411,
+          "Title": "Վարազ"
         },
         {
           "ID": 471493,
@@ -170,6 +218,10 @@
         {
           "ID": 471743,
           "Title": "Ձվածեղ"
+        },
+        {
+          "ID": 471770,
+          "Title": "Ձու"
         },
         {
           "ID": 477501,
@@ -248,12 +300,20 @@
           "Title": "Տաք շոկոլադ (կակաո)"
         },
         {
+          "ID": 753746,
+          "Title": "Ռեալիզմ (կերպարվեստ)"
+        },
+        {
           "ID": 765110,
           "Title": "Եվրատեսիլ 2018 երգի մրցույթ"
         },
         {
           "ID": 824338,
           "Title": "Մորդրեդ"
+        },
+        {
+          "ID": 844047,
+          "Title": "Պեկորինո Ռոմանո"
         },
         {
           "ID": 864074,
@@ -270,6 +330,10 @@
         {
           "ID": 887718,
           "Title": "Թթխմոր"
+        },
+        {
+          "ID": 891579,
+          "Title": "Չորահաց"
         },
         {
           "ID": 894322,
@@ -316,6 +380,10 @@
       ],
       "Articles": [
         {
+          "ID": 1394,
+          "Title": "Ավստրալիա"
+        },
+        {
           "ID": 1550,
           "Title": "Մյանմա"
         },
@@ -330,6 +398,10 @@
         {
           "ID": 2445,
           "Title": "Վենետիկ"
+        },
+        {
+          "ID": 4650,
+          "Title": "Մարդ բանական"
         },
         {
           "ID": 94132,
@@ -352,6 +424,10 @@
         {
           "ID": 15383,
           "Title": "Կատեգորիա:Առողջություն"
+        },
+        {
+          "ID": 17661,
+          "Title": "Կատեգորիա:Առողջապահություն"
         },
         {
           "ID": 19914,
@@ -394,6 +470,10 @@
         {
           "ID": 431358,
           "Title": "Կատեգորիա:Պատմություն ըստ երկրի"
+        },
+        {
+          "ID": 609161,
+          "Title": "Կատեգորիա:Պատմություն ըստ տեղադրության"
         },
         {
           "ID": 863687,
@@ -504,6 +584,10 @@
           "Title": "Կատեգորիա:Բնական գիտություններ"
         },
         {
+          "ID": 7688,
+          "Title": "Կատեգորիա:Գիտական դիսցիպլինաներ"
+        },
+        {
           "ID": 8116,
           "Title": "Կատեգորիա:Կենդանաբանություն"
         },
@@ -582,12 +666,28 @@
           "Title": "Մկաններ"
         },
         {
+          "ID": 434229,
+          "Title": "Կանտալուպ"
+        },
+        {
           "ID": 435417,
           "Title": "Ցորեն"
         },
         {
+          "ID": 451544,
+          "Title": "Ջրաբանություն"
+        },
+        {
           "ID": 453801,
           "Title": "Մեզ"
+        },
+        {
+          "ID": 465278,
+          "Title": "Մարդու վերարտադրողական համակարգ"
+        },
+        {
+          "ID": 466181,
+          "Title": "Ստավրիդներ"
         },
         {
           "ID": 467133,
@@ -596,6 +696,10 @@
         {
           "ID": 472893,
           "Title": "Նարնջենի"
+        },
+        {
+          "ID": 478682,
+          "Title": "Գետնաելակ"
         },
         {
           "ID": 483808,
@@ -630,6 +734,18 @@
           "Title": "Անակոնդա"
         },
         {
+          "ID": 621586,
+          "Title": "Սկումբրիա"
+        },
+        {
+          "ID": 770481,
+          "Title": "Գետնամորի անտառային"
+        },
+        {
+          "ID": 857861,
+          "Title": "Վերարտադրողական համակարգ"
+        },
+        {
           "ID": 893342,
           "Title": "Շեկ մազեր"
         }
@@ -639,6 +755,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 7487,
+          "Title": "Կատեգորիա:Կյանք"
+        },
         {
           "ID": 13377,
           "Title": "Կատեգորիա:Անձինք"
@@ -652,12 +772,32 @@
           "Title": "Կատեգորիա:Անձնական կյանք"
         },
         {
+          "ID": 16683,
+          "Title": "Կատեգորիա:Անձինք այբբենական կարգով"
+        },
+        {
+          "ID": 93246,
+          "Title": "Կատեգորիա:Անհատականության տեսություններ"
+        },
+        {
+          "ID": 93247,
+          "Title": "Կատեգորիա:Անձ"
+        },
+        {
           "ID": 318347,
           "Title": "Կատեգորիա:Կանայք"
         },
         {
           "ID": 318357,
           "Title": "Կատեգորիա:Կին"
+        },
+        {
+          "ID": 483515,
+          "Title": "Կատեգորիա:Կենսագրական գրքեր"
+        },
+        {
+          "ID": 483516,
+          "Title": "Կատեգորիա:Կենսագրական աշխատություններ"
         },
         {
           "ID": 580187,
@@ -878,6 +1018,10 @@
       ],
       "Articles": [
         {
+          "ID": 233830,
+          "Title": "Ուրախություն"
+        },
+        {
           "ID": 480465,
           "Title": "Երջանկություն"
         },
@@ -960,6 +1104,10 @@
         {
           "ID": 25741,
           "Title": "Կատեգորիա:Իգապաշտպանություն"
+        },
+        {
+          "ID": 96047,
+          "Title": "Կատեգորիա:Միջկառավարական կազմակերպություններ"
         },
         {
           "ID": 412571,
@@ -1124,6 +1272,10 @@
           "Title": "BP"
         },
         {
+          "ID": 621798,
+          "Title": "Եւրոպական Միութիւն"
+        },
+        {
           "ID": 630363,
           "Title": "Վաշինգտոնի համալսարան"
         },
@@ -1278,6 +1430,14 @@
           "Title": "Կատեգորիա:Տեխնոլոգիաներ ըստ տեսակի"
         },
         {
+          "ID": 15226,
+          "Title": "Կատեգորիա:Համակարգիչ"
+        },
+        {
+          "ID": 15228,
+          "Title": "Կատեգորիա:Տեխնիկա"
+        },
+        {
           "ID": 15925,
           "Title": "Կատեգորիա:Ինֆորմատիկա"
         },
@@ -1288,6 +1448,10 @@
         {
           "ID": 31269,
           "Title": "Կատեգորիա:Էլեկտրոնիկա"
+        },
+        {
+          "ID": 44860,
+          "Title": "Կատեգորիա:Տվյալների բազաներ"
         },
         {
           "ID": 47192,
