--- a/nationalization/internal/languages/id.json
+++ b/nationalization/internal/languages/id.json
@@ -34,6 +34,10 @@
           "Title": "Kategori:Grup musik"
         },
         {
+          "ID": 16631,
+          "Title": "Kategori:Warna"
+        },
+        {
           "ID": 19275,
           "Title": "Kategori:Makanan"
         },
@@ -46,8 +50,20 @@
           "Title": "Kategori:Makanan dan minuman"
         },
         {
+          "ID": 140076,
+          "Title": "Kategori:Cabang olahraga"
+        },
+        {
           "ID": 288276,
           "Title": "Kategori:Masakan"
+        },
+        {
+          "ID": 549118,
+          "Title": "Kategori:Gastronomi"
+        },
+        {
+          "ID": 1760317,
+          "Title": "Kategori:Teknik memasak"
         }
       ],
       "Articles": [
@@ -96,8 +112,24 @@
           "Title": "Bir"
         },
         {
+          "ID": 34397,
+          "Title": "Seks oral"
+        },
+        {
           "ID": 35394,
           "Title": "Green Day"
+        },
+        {
+          "ID": 40002,
+          "Title": "Babi"
+        },
+        {
+          "ID": 40371,
+          "Title": "Coffea"
+        },
+        {
+          "ID": 40372,
+          "Title": "Kopi arabika"
         },
         {
           "ID": 53151,
@@ -118,6 +150,10 @@
         {
           "ID": 68978,
           "Title": "Realisme (seni rupa)"
+        },
+        {
+          "ID": 72756,
+          "Title": "Telur"
         },
         {
           "ID": 73936,
@@ -160,8 +196,20 @@
           "Title": "Sgt. Pepper's Lonely Hearts Club Band"
         },
         {
+          "ID": 131984,
+          "Title": "Grup musik"
+        },
+        {
+          "ID": 131999,
+          "Title": "Band"
+        },
+        {
           "ID": 135588,
           "Title": "Monster Loch Ness"
+        },
+        {
+          "ID": 141703,
+          "Title": "Kakao"
         },
         {
           "ID": 146929,
@@ -170,6 +218,10 @@
         {
           "ID": 147904,
           "Title": "Telur asin"
+        },
+        {
+          "ID": 151567,
+          "Title": "Babi celeng"
         },
         {
           "ID": 183803,
@@ -206,6 +258,10 @@
         {
           "ID": 282857,
           "Title": "Biskuit"
+        },
+        {
+          "ID": 283823,
+          "Title": "Rengginang"
         },
         {
           "ID": 288112,
@@ -246,6 +302,14 @@
         {
           "ID": 395197,
           "Title": "Bigfoot"
+        },
+        {
+          "ID": 493258,
+          "Title": "Kereta salju"
+        },
+        {
+          "ID": 530976,
+          "Title": "Pecorino"
         },
         {
           "ID": 548041,
@@ -298,6 +362,10 @@
         {
           "ID": 803254,
           "Title": "Rock Band"
+        },
+        {
+          "ID": 900440,
+          "Title": "Yūrei"
         },
         {
           "ID": 971679,
@@ -376,12 +444,20 @@
           "Title": "Floyd Mayweather, Jr. vs Manny Pacquiao"
         },
         {
+          "ID": 1803269,
+          "Title": "Tart"
+        },
+        {
           "ID": 1824102,
           "Title": "Kick (film 2014)"
         },
         {
           "ID": 1833423,
           "Title": "War Room (film)"
+        },
+        {
+          "ID": 1895497,
+          "Title": "Karya referensi"
         },
         {
           "ID": 2040047,
@@ -402,6 +478,10 @@
         {
           "ID": 2084896,
           "Title": "Daging cincang"
+        },
+        {
+          "ID": 2086371,
+          "Title": "Roti pipih"
         },
         {
           "ID": 2117952,
@@ -438,6 +518,10 @@
         {
           "ID": 2492422,
           "Title": "Mi minyak"
+        },
+        {
+          "ID": 2496957,
+          "Title": "Hardtack"
         },
         {
           "ID": 2498964,
@@ -496,6 +580,10 @@
           "Title": "Roti lapis bakon"
         },
         {
+          "ID": 2731727,
+          "Title": "Ale jahe"
+        },
+        {
           "ID": 2731730,
           "Title": "Bir jahe"
         },
@@ -548,8 +636,16 @@
           "Title": "Paris"
         },
         {
+          "ID": 4403,
+          "Title": "Australia"
+        },
+        {
           "ID": 4472,
           "Title": "Myanmar"
+        },
+        {
+          "ID": 10448,
+          "Title": "Manusia"
         },
         {
           "ID": 10881,
@@ -590,6 +686,10 @@
           "Title": "Kategori:Ilmu kesehatan"
         },
         {
+          "ID": 142915,
+          "Title": "Kategori:Perawatan kesehatan"
+        },
+        {
           "ID": 143677,
           "Title": "Kategori:Penyakit genetik"
         },
@@ -618,6 +718,10 @@
         {
           "ID": 528985,
           "Title": "Kategori:Pemilihan umum menurut tahun"
+        },
+        {
+          "ID": 2135807,
+          "Title": "Kategori:Sejarah menurut tempat"
         }
       ],
       "Articles": [
@@ -754,6 +858,10 @@
         {
           "ID": 1470300,
           "Title": "Kategori:Ilmu lingkungan"
+        },
+        {
+          "ID": 1769866,
+          "Title": "Kategori:Disiplin ilmu"
         }
       ],
       "Articles": [
@@ -786,8 +894,20 @@
           "Title": "Urin"
         },
         {
+          "ID": 23894,
+          "Title": "Padi"
+        },
+        {
           "ID": 30655,
           "Title": "Jeruk manis"
+        },
+        {
+          "ID": 38573,
+          "Title": "Fragaria"
+        },
+        {
+          "ID": 40129,
+          "Title": "Hidrologi"
         },
         {
           "ID": 40276,
@@ -818,6 +938,14 @@
           "Title": "Sistem otot"
         },
         {
+          "ID": 67392,
+          "Title": "Sistem reproduksi"
+        },
+        {
+          "ID": 69774,
+          "Title": "Alat kelamin"
+        },
+        {
           "ID": 75510,
           "Title": "Testis"
         },
@@ -836,6 +964,14 @@
         {
           "ID": 154416,
           "Title": "Mangga"
+        },
+        {
+          "ID": 185364,
+          "Title": "Blewah"
+        },
+        {
+          "ID": 190336,
+          "Title": "Ceplukan"
         },
         {
           "ID": 195606,
@@ -860,6 +996,10 @@
         {
           "ID": 286067,
           "Title": "Suspensi"
+        },
+        {
+          "ID": 288941,
+          "Title": "Trachurus"
         },
         {
           "ID": 341270,
@@ -922,8 +1062,16 @@
           "Title": "Anakonda hijau"
         },
         {
+          "ID": 1414743,
+          "Title": "Kembung lelaki"
+        },
+        {
           "ID": 1427687,
           "Title": "Kotoran sapi"
+        },
+        {
+          "ID": 1432520,
+          "Title": "Scomber"
         },
         {
           "ID": 1699817,
@@ -952,6 +1100,10 @@
           "Title": "Kategori:Tokoh"
         },
         {
+          "ID": 91073,
+          "Title": "Kategori:Kehidupan"
+        },
+        {
           "ID": 93800,
           "Title": "Kategori:Wanita"
         },
@@ -964,6 +1116,10 @@
           "Title": "Kategori:Karakter film"
         },
         {
+          "ID": 337600,
+          "Title": "Kategori:Biografi"
+        },
+        {
           "ID": 443765,
           "Title": "Kategori:Kehidupan pribadi"
         },
@@ -972,8 +1128,20 @@
           "Title": "Kategori:Diri"
         },
         {
+          "ID": 1960475,
+          "Title": "Kategori:Kepribadian"
+        },
+        {
           "ID": 2344821,
           "Title": "Kategori:Nama belakang"
+        },
+        {
+          "ID": 2580897,
+          "Title": "Kategori:Biografi (buku)"
+        },
+        {
+          "ID": 2580898,
+          "Title": "Kategori:Karya biografi"
         }
       ],
       "Articles": [
@@ -1194,6 +1362,10 @@
           "Title": "Keindahan"
         },
         {
+          "ID": 264957,
+          "Title": "Keyakinan dan kepercayaan"
+        },
+        {
           "ID": 431734,
           "Title": "Kebahagiaan"
         },
@@ -1254,8 +1426,16 @@
           "Title": "Kategori:Feminisme"
         },
         {
+          "ID": 1198401,
+          "Title": "Kategori:Humaniora"
+        },
+        {
           "ID": 1754030,
           "Title": "Kategori:Ilmu manusia"
+        },
+        {
+          "ID": 1769173,
+          "Title": "Kategori:Organisasi antarpemerintah"
         }
       ],
       "Articles": [
@@ -1722,8 +1902,16 @@
           "Title": "Kategori:Teknologi"
         },
         {
+          "ID": 8529,
+          "Title": "Kategori:Teknik"
+        },
+        {
           "ID": 8541,
           "Title": "Kategori:Internet"
+        },
+        {
+          "ID": 13294,
+          "Title": "Kategori:Komputer"
         },
         {
           "ID": 17194,
@@ -1742,12 +1930,20 @@
           "Title": "Kategori:Ilmu terapan"
         },
         {
+          "ID": 102304,
+          "Title": "Kategori:Basis data"
+        },
+        {
           "ID": 109712,
           "Title": "Kategori:Peralatan militer"
         },
         {
           "ID": 123950,
           "Title": "Kategori:Teknologi militer"
+        },
+        {
+          "ID": 125731,
+          "Title": "Kategori:Manajemen data"
         },
         {
           "ID": 148294,
