--- a/nationalization/internal/languages/ka.json
+++ b/nationalization/internal/languages/ka.json
@@ -14,6 +14,10 @@
           "Title": "კატეგორია:სპორტი"
         },
         {
+          "ID": 13843,
+          "Title": "კატეგორია:სპორტის სახეობები"
+        },
+        {
           "ID": 16220,
           "Title": "კატეგორია:კულტურა"
         },
@@ -28,6 +32,14 @@
         {
           "ID": 23474,
           "Title": "კატეგორია:გართობა"
+        },
+        {
+          "ID": 25536,
+          "Title": "კატეგორია:ფერები"
+        },
+        {
+          "ID": 25537,
+          "Title": "კატეგორია:ფერი"
         },
         {
           "ID": 26856,
@@ -54,8 +66,24 @@
           "Title": "კატეგორია:დასვენება"
         },
         {
+          "ID": 246015,
+          "Title": "კატეგორია:თავისუფალი დრო"
+        },
+        {
+          "ID": 372744,
+          "Title": "კატეგორია:საკვების დამზადების ტექნოლოგია"
+        },
+        {
           "ID": 379884,
           "Title": "კატეგორია:ფილმები"
+        },
+        {
+          "ID": 410503,
+          "Title": "კატეგორია:გასტრონომია"
+        },
+        {
+          "ID": 410579,
+          "Title": "კატეგორია:ფიზიკური ვარჯიში"
         },
         {
           "ID": 417323,
@@ -70,6 +98,10 @@
         {
           "ID": 1760,
           "Title": "ენციკლოპედია"
+        },
+        {
+          "ID": 8712,
+          "Title": "რეგიონალიზმი (ხელოვნება)"
         },
         {
           "ID": 13203,
@@ -92,6 +124,10 @@
           "Title": "ლედ ზეპელინი"
         },
         {
+          "ID": 35167,
+          "Title": "გარეული ღორი"
+        },
+        {
           "ID": 42546,
           "Title": "შოკოლადი"
         },
@@ -102,6 +138,14 @@
         {
           "ID": 51088,
           "Title": "AC/DC"
+        },
+        {
+          "ID": 52177,
+          "Title": "კაკაო"
+        },
+        {
+          "ID": 61475,
+          "Title": "მარხილი"
         },
         {
           "ID": 64152,
@@ -120,12 +164,20 @@
           "Title": "ნაყინი"
         },
         {
+          "ID": 76502,
+          "Title": "ორალური სექსი"
+        },
+        {
           "ID": 90174,
           "Title": "ჯელატო"
         },
         {
           "ID": 99859,
           "Title": "ანსამბლი (მუსიკა)"
+        },
+        {
+          "ID": 106970,
+          "Title": "შინაური ღორი"
         },
         {
           "ID": 108629,
@@ -164,6 +216,14 @@
           "Title": "Judas (სიმღერა)"
         },
         {
+          "ID": 182845,
+          "Title": "პეკორინო რომანო"
+        },
+        {
+          "ID": 226183,
+          "Title": "ასტურიული ვიკიპედია"
+        },
+        {
           "ID": 230734,
           "Title": "რეალობა"
         },
@@ -186,6 +246,10 @@
         {
           "ID": 395189,
           "Title": "ევროვიზიის სიმღერის კონკურსი 2018"
+        },
+        {
+          "ID": 429277,
+          "Title": "ღორი"
         }
       ]
     },
@@ -224,6 +288,10 @@
           "Title": "პარიზი"
         },
         {
+          "ID": 2881,
+          "Title": "ავსტრალია"
+        },
+        {
           "ID": 3004,
           "Title": "კუინზლენდი"
         },
@@ -232,12 +300,20 @@
           "Title": "მიანმარი"
         },
         {
+          "ID": 13712,
+          "Title": "ადამიანი"
+        },
+        {
           "ID": 21041,
           "Title": "ვენეცია"
         },
         {
           "ID": 55438,
           "Title": "კანბერა"
+        },
+        {
+          "ID": 343369,
+          "Title": "გონიერი ადამიანი"
         }
       ]
     },
@@ -260,6 +336,10 @@
         {
           "ID": 62765,
           "Title": "კატეგორია:გენეტიკური დაავადებები"
+        },
+        {
+          "ID": 344271,
+          "Title": "კატეგორია:ჯანდაცვა"
         },
         {
           "ID": 401793,
@@ -298,6 +378,10 @@
         {
           "ID": 119508,
           "Title": "კატეგორია:არჩევნები წლების მიხედვით"
+        },
+        {
+          "ID": 371658,
+          "Title": "კატეგორია:ისტორია მდებარეობის მიხედვით"
         },
         {
           "ID": 403554,
@@ -420,6 +504,10 @@
           "Title": "კატეგორია:ფაუნა კონტინენტების მიხედვით"
         },
         {
+          "ID": 376864,
+          "Title": "კატეგორია:მეცნიერების დარგები"
+        },
+        {
           "ID": 406049,
           "Title": "კატეგორია:მეცნიერებები ბუნების დაცვის შესახებ"
         },
@@ -490,8 +578,16 @@
           "Title": "მანგო"
         },
         {
+          "ID": 61468,
+          "Title": "მარწყვი"
+        },
+        {
           "ID": 90207,
           "Title": "ჩვეულებრივი პომიდორი"
+        },
+        {
+          "ID": 98021,
+          "Title": "რბილი ხორბალი"
         },
         {
           "ID": 123927,
@@ -502,8 +598,16 @@
           "Title": "ცეცხლი"
         },
         {
+          "ID": 153626,
+          "Title": "ჰიდროლოგია"
+        },
+        {
           "ID": 182693,
           "Title": "საცეცი"
+        },
+        {
+          "ID": 214186,
+          "Title": "სკუმბრიები"
         },
         {
           "ID": 214193,
@@ -512,6 +616,10 @@
         {
           "ID": 228864,
           "Title": "მირტი"
+        },
+        {
+          "ID": 236422,
+          "Title": "სტავრიდა"
         },
         {
           "ID": 248683,
@@ -544,6 +652,10 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 16248,
+          "Title": "კატეგორია:ბიოგრაფიები"
+        },
+        {
           "ID": 29815,
           "Title": "კატეგორია:ქალები"
         },
@@ -552,8 +664,16 @@
           "Title": "კატეგორია:ადამიანები"
         },
         {
+          "ID": 45228,
+          "Title": "კატეგორია:სიცოცხლე"
+        },
+        {
           "ID": 45229,
           "Title": "კატეგორია:პირადი ცხოვრება"
+        },
+        {
+          "ID": 45230,
+          "Title": "კატეგორია:პიროვნება"
         },
         {
           "ID": 45231,
@@ -566,6 +686,18 @@
         {
           "ID": 399830,
           "Title": "კატეგორია:ფილმების პერსონაჟები"
+        },
+        {
+          "ID": 417569,
+          "Title": "კატეგორია:ბიოგრაფიული ნამუშევრები"
+        },
+        {
+          "ID": 417570,
+          "Title": "კატეგორია:ბიოგრაფია"
+        },
+        {
+          "ID": 419778,
+          "Title": "კატეგორია:პიროვნული თეორიები"
         }
       ],
       "Articles": [
@@ -830,6 +962,10 @@
           "Title": "კატეგორია:უმაღლესი სასწავლებლები ქვეყნების მიხედვით"
         },
         {
+          "ID": 400852,
+          "Title": "კატეგორია:ჰუმანიტარული დისწიპლინები"
+        },
+        {
           "ID": 419100,
           "Title": "კატეგორია:კანონები"
         }
@@ -960,6 +1096,10 @@
           "Title": "ჩილეს პოლიტიკური სისტემა"
         },
         {
+          "ID": 163288,
+          "Title": "ტრასტი"
+        },
+        {
           "ID": 184036,
           "Title": "ვირჯინიის უნივერსიტეტი"
         },
@@ -1026,6 +1166,18 @@
           "Title": "კატეგორია:ინტერნეტი"
         },
         {
+          "ID": 10207,
+          "Title": "კატეგორია:კომპიუტერი"
+        },
+        {
+          "ID": 11855,
+          "Title": "კატეგორია:მონაცემთა ბაზა"
+        },
+        {
+          "ID": 16890,
+          "Title": "კატეგორია:ტექნიკა"
+        },
+        {
           "ID": 18194,
           "Title": "კატეგორია:დიზაინი"
         },
@@ -1068,6 +1220,10 @@
         {
           "ID": 351409,
           "Title": "კატეგორია:ტექნოლოგიების ისტორია"
+        },
+        {
+          "ID": 403688,
+          "Title": "კატეგორია:მონაცემთა მართვა"
         },
         {
           "ID": 412380,
