--- a/nationalization/internal/languages/ko.json
+++ b/nationalization/internal/languages/ko.json
@@ -38,6 +38,18 @@
           "Title": "분류:취미"
         },
         {
+          "ID": 41949,
+          "Title": "분류:색"
+        },
+        {
+          "ID": 41963,
+          "Title": "분류:색 이름"
+        },
+        {
+          "ID": 71635,
+          "Title": "분류:운동"
+        },
+        {
           "ID": 102146,
           "Title": "분류:영화 작품"
         },
@@ -54,12 +66,28 @@
           "Title": "분류:식품"
         },
         {
+          "ID": 534595,
+          "Title": "분류:유형별 스포츠"
+        },
+        {
           "ID": 539160,
           "Title": "분류:재료별 요리"
         },
         {
+          "ID": 550605,
+          "Title": "분류:요리학"
+        },
+        {
           "ID": 608078,
           "Title": "분류:식문화"
+        },
+        {
+          "ID": 625821,
+          "Title": "분류:조리법"
+        },
+        {
+          "ID": 822208,
+          "Title": "분류:여가"
         }
       ],
       "Articles": [
@@ -78,6 +106,10 @@
         {
           "ID": 3755,
           "Title": "맥주"
+        },
+        {
+          "ID": 8035,
+          "Title": "돼지"
         },
         {
           "ID": 11009,
@@ -132,6 +164,10 @@
           "Title": "핫도그"
         },
         {
+          "ID": 85905,
+          "Title": "밴드"
+        },
+        {
           "ID": 86973,
           "Title": "아이스크림"
         },
@@ -144,8 +180,20 @@
           "Title": "아쿠아 (밴드)"
         },
         {
+          "ID": 95649,
+          "Title": "멧돼지"
+        },
+        {
+          "ID": 95817,
+          "Title": "멧돼지속"
+        },
+        {
           "ID": 100056,
           "Title": "호그와트"
+        },
+        {
+          "ID": 106378,
+          "Title": "알"
         },
         {
           "ID": 108165,
@@ -162,6 +210,10 @@
         {
           "ID": 113139,
           "Title": "버킹엄궁"
+        },
+        {
+          "ID": 123617,
+          "Title": "구강성교"
         },
         {
           "ID": 123618,
@@ -204,6 +256,10 @@
           "Title": "사실주의"
         },
         {
+          "ID": 177970,
+          "Title": "악단"
+        },
+        {
           "ID": 188854,
           "Title": "프랑스 요리"
         },
@@ -216,12 +272,20 @@
           "Title": "록 밴드"
         },
         {
+          "ID": 214613,
+          "Title": "유령"
+        },
+        {
           "ID": 215803,
           "Title": "카르보나라"
         },
         {
           "ID": 229325,
           "Title": "타코"
+        },
+        {
+          "ID": 231470,
+          "Title": "타르트"
         },
         {
           "ID": 258279,
@@ -256,8 +320,16 @@
           "Title": "항얀벵"
         },
         {
+          "ID": 287922,
+          "Title": "썰매"
+        },
+        {
           "ID": 294662,
           "Title": "비스킷"
+        },
+        {
+          "ID": 322757,
+          "Title": "아스투리아스어 위키백과"
         },
         {
           "ID": 328181,
@@ -268,6 +340,10 @@
           "Title": "크래커"
         },
         {
+          "ID": 405762,
+          "Title": "카카오"
+        },
+        {
           "ID": 519040,
           "Title": "웨딩 케이크"
         },
@@ -276,12 +352,24 @@
           "Title": "젤라토"
         },
         {
+          "ID": 530573,
+          "Title": "커피나무속"
+        },
+        {
           "ID": 541839,
           "Title": "땅콩버터"
         },
         {
           "ID": 541845,
           "Title": "사과 소스"
+        },
+        {
+          "ID": 545480,
+          "Title": "러스크"
+        },
+        {
+          "ID": 551111,
+          "Title": "소다 크래커"
         },
         {
           "ID": 554667,
@@ -404,6 +492,10 @@
           "Title": "해리 포터의 장소 목록"
         },
         {
+          "ID": 789853,
+          "Title": "파스트르마"
+        },
+        {
           "ID": 808681,
           "Title": "저알코올 음료"
         },
@@ -432,12 +524,24 @@
           "Title": "카카오 매스"
         },
         {
+          "ID": 917706,
+          "Title": "진저 에일"
+        },
+        {
           "ID": 966848,
           "Title": "식빵"
         },
         {
+          "ID": 985493,
+          "Title": "참고서"
+        },
+        {
           "ID": 1001617,
           "Title": "필스너"
+        },
+        {
+          "ID": 1008135,
+          "Title": "하드택"
         },
         {
           "ID": 1028736,
@@ -492,8 +596,16 @@
           "Title": "초코 칩 쿠키"
         },
         {
+          "ID": 1227890,
+          "Title": "납작빵"
+        },
+        {
           "ID": 1230024,
           "Title": "코피아 페라레세"
+        },
+        {
+          "ID": 1238542,
+          "Title": "로티 (음식)"
         },
         {
           "ID": 1239495,
@@ -506,6 +618,10 @@
         {
           "ID": 1240724,
           "Title": "비엔나 빵"
+        },
+        {
+          "ID": 1241000,
+          "Title": "츠비바크"
         },
         {
           "ID": 1293765,
@@ -584,12 +700,20 @@
           "Title": "수란"
         },
         {
+          "ID": 1874303,
+          "Title": "페코리노"
+        },
+        {
           "ID": 1983302,
           "Title": "볶음국수"
         },
         {
           "ID": 2023275,
           "Title": "갈색빵"
+        },
+        {
+          "ID": 2331898,
+          "Title": "커피나무"
         }
       ]
     },
@@ -628,6 +752,14 @@
       ],
       "Articles": [
         {
+          "ID": 307,
+          "Title": "사람"
+        },
+        {
+          "ID": 1461,
+          "Title": "오스트레일리아"
+        },
+        {
           "ID": 6150,
           "Title": "피라미드"
         },
@@ -650,6 +782,10 @@
         {
           "ID": 28845,
           "Title": "캔버라"
+        },
+        {
+          "ID": 51318,
+          "Title": "호모 사피엔스"
         },
         {
           "ID": 76383,
@@ -680,6 +816,10 @@
         {
           "ID": 48996,
           "Title": "분류:건강"
+        },
+        {
+          "ID": 51958,
+          "Title": "분류:의료"
         },
         {
           "ID": 66262,
@@ -732,6 +872,10 @@
         {
           "ID": 254852,
           "Title": "분류:사건"
+        },
+        {
+          "ID": 591527,
+          "Title": "분류:장소별 역사"
         }
       ],
       "Articles": [
@@ -870,6 +1014,10 @@
           "Title": "분류:재난"
         },
         {
+          "ID": 498399,
+          "Title": "분류:분야별 과학"
+        },
+        {
           "ID": 734118,
           "Title": "분류:대륙별 동물상"
         },
@@ -892,6 +1040,10 @@
           "Title": "근육"
         },
         {
+          "ID": 23062,
+          "Title": "벼"
+        },
+        {
           "ID": 23366,
           "Title": "쌀"
         },
@@ -910,6 +1062,10 @@
         {
           "ID": 46929,
           "Title": "딸기"
+        },
+        {
+          "ID": 46930,
+          "Title": "딸기속"
         },
         {
           "ID": 47895,
@@ -984,6 +1140,10 @@
           "Title": "물의 순환"
         },
         {
+          "ID": 246758,
+          "Title": "생식 계통"
+        },
+        {
           "ID": 255492,
           "Title": "먹이 사슬"
         },
@@ -1024,6 +1184,10 @@
           "Title": "대서양고등어"
         },
         {
+          "ID": 368502,
+          "Title": "고등어속"
+        },
+        {
           "ID": 373069,
           "Title": "찹쌀"
         },
@@ -1036,8 +1200,28 @@
           "Title": "방울토마토"
         },
         {
+          "ID": 447548,
+          "Title": "수문학"
+        },
+        {
+          "ID": 502035,
+          "Title": "아나콘다 (동음이의)"
+        },
+        {
           "ID": 587531,
           "Title": "코커 스패니얼"
+        },
+        {
+          "ID": 751139,
+          "Title": "성기"
+        },
+        {
+          "ID": 759298,
+          "Title": "줄무늬고등어"
+        },
+        {
+          "ID": 802247,
+          "Title": "밀 (종)"
         },
         {
           "ID": 867255,
@@ -1052,6 +1236,14 @@
           "Title": "적모"
         },
         {
+          "ID": 1012801,
+          "Title": "금땅꽈리"
+        },
+        {
+          "ID": 1023198,
+          "Title": "고추 (성기)"
+        },
+        {
           "ID": 1089881,
           "Title": "근육계통"
         },
@@ -1062,6 +1254,10 @@
         {
           "ID": 1405270,
           "Title": "왕겨"
+        },
+        {
+          "ID": 1639403,
+          "Title": "서양호박"
         },
         {
           "ID": 1813663,
@@ -1076,8 +1272,16 @@
           "Title": "오렌지"
         },
         {
+          "ID": 1855385,
+          "Title": "쏘이"
+        },
+        {
           "ID": 1890557,
           "Title": "망고"
+        },
+        {
+          "ID": 1992963,
+          "Title": "토마티요"
         },
         {
           "ID": 2304989,
@@ -1092,6 +1296,10 @@
         {
           "ID": 15596,
           "Title": "분류:생활"
+        },
+        {
+          "ID": 34593,
+          "Title": "분류:생명"
         },
         {
           "ID": 37928,
@@ -1110,8 +1318,16 @@
           "Title": "분류:영화 등장인물"
         },
         {
+          "ID": 277505,
+          "Title": "분류:전기 문학"
+        },
+        {
           "ID": 315055,
           "Title": "분류:성씨"
+        },
+        {
+          "ID": 672300,
+          "Title": "분류:인격"
         },
         {
           "ID": 1459748,
@@ -1120,6 +1336,14 @@
         {
           "ID": 1483547,
           "Title": "분류:여자"
+        },
+        {
+          "ID": 1649334,
+          "Title": "분류:전기 책"
+        },
+        {
+          "ID": 1704021,
+          "Title": "분류:성격 이론"
         }
       ],
       "Articles": [
@@ -1352,6 +1576,10 @@
           "Title": "행복"
         },
         {
+          "ID": 146787,
+          "Title": "믿음"
+        },
+        {
           "ID": 146788,
           "Title": "신앙"
         },
@@ -1370,6 +1598,14 @@
         {
           "ID": 655492,
           "Title": "더닝-크루거 효과"
+        },
+        {
+          "ID": 998018,
+          "Title": "빌리버"
+        },
+        {
+          "ID": 1310902,
+          "Title": "HIT"
         },
         {
           "ID": 1630571,
@@ -1436,8 +1672,16 @@
           "Title": "분류:법"
         },
         {
+          "ID": 172058,
+          "Title": "분류:인문학"
+        },
+        {
           "ID": 291423,
           "Title": "분류:여성주의"
+        },
+        {
+          "ID": 667571,
+          "Title": "분류:정부간 기구"
         },
         {
           "ID": 758761,
@@ -1688,6 +1932,10 @@
         {
           "ID": 253842,
           "Title": "워싱턴 대학교 세인트루이스"
+        },
+        {
+          "ID": 261014,
+          "Title": "신탁 (법률)"
         },
         {
           "ID": 269492,
@@ -2084,6 +2332,10 @@
           "Title": "분류:공학"
         },
         {
+          "ID": 11685,
+          "Title": "분류:컴퓨터"
+        },
+        {
           "ID": 11780,
           "Title": "분류:인터넷"
         },
@@ -2100,12 +2352,20 @@
           "Title": "분류:디자인"
         },
         {
+          "ID": 33944,
+          "Title": "분류:데이터 관리"
+        },
+        {
           "ID": 42962,
           "Title": "분류:응용과학"
         },
         {
           "ID": 49576,
           "Title": "분류:군사 기술"
+        },
+        {
+          "ID": 69609,
+          "Title": "분류:데이터베이스"
         },
         {
           "ID": 83993,
