--- a/nationalization/internal/languages/lt.json
+++ b/nationalization/internal/languages/lt.json
@@ -18,6 +18,10 @@
           "Title": "Kategorija:Valgiai ir gėrimai"
         },
         {
+          "ID": 4149,
+          "Title": "Kategorija:Spalvos"
+        },
+        {
           "ID": 5603,
           "Title": "Kategorija:Kultūra"
         },
@@ -42,12 +46,28 @@
           "Title": "Kategorija:Poilsis"
         },
         {
+          "ID": 256864,
+          "Title": "Kategorija:Laisvalaikis"
+        },
+        {
           "ID": 261961,
           "Title": "Kategorija:Maistas"
         },
         {
           "ID": 282867,
           "Title": "Kategorija:Pomėgiai"
+        },
+        {
+          "ID": 282972,
+          "Title": "Kategorija:Atlikėjai"
+        },
+        {
+          "ID": 327223,
+          "Title": "Kategorija:Sportas pagal šakas"
+        },
+        {
+          "ID": 360750,
+          "Title": "Kategorija:Maisto gamybos technologija"
         },
         {
           "ID": 442911,
@@ -60,8 +80,20 @@
           "Title": "Vikipedija"
         },
         {
+          "ID": 4215,
+          "Title": "Šernas"
+        },
+        {
+          "ID": 5080,
+          "Title": "Kiaušinis"
+        },
+        {
           "ID": 5926,
           "Title": "Enciklopedija"
+        },
+        {
+          "ID": 6298,
+          "Title": "Oralinis seksas"
         },
         {
           "ID": 6311,
@@ -92,6 +124,10 @@
           "Title": "Led Zeppelin"
         },
         {
+          "ID": 17313,
+          "Title": "Kiaulė"
+        },
+        {
           "ID": 23233,
           "Title": "Duona"
         },
@@ -108,12 +144,24 @@
           "Title": "Vaiduoklis"
         },
         {
+          "ID": 60800,
+          "Title": "Žinynas"
+        },
+        {
           "ID": 73421,
           "Title": "Pica"
         },
         {
           "ID": 75136,
           "Title": "Lochneso pabaisa"
+        },
+        {
+          "ID": 81139,
+          "Title": "Tikrasis kakavmedis"
+        },
+        {
+          "ID": 88504,
+          "Title": "Kavamedis"
         },
         {
           "ID": 90503,
@@ -160,6 +208,10 @@
           "Title": "Pasta (makaronai)"
         },
         {
+          "ID": 246842,
+          "Title": "Rogės"
+        },
+        {
           "ID": 248247,
           "Title": "Sgt. Pepper's Lonely Hearts Club Band"
         },
@@ -192,8 +244,16 @@
           "Title": "Daktyla"
         },
         {
+          "ID": 383129,
+          "Title": "Ansamblis"
+        },
+        {
           "ID": 394874,
           "Title": "Judas (daina)"
+        },
+        {
+          "ID": 410702,
+          "Title": "Arabinis kavamedis"
         },
         {
           "ID": 411512,
@@ -210,6 +270,10 @@
         {
           "ID": 437532,
           "Title": "Amžiaus kiaušinis"
+        },
+        {
+          "ID": 494643,
+          "Title": "Džiūvėsis"
         },
         {
           "ID": 496045,
@@ -252,6 +316,10 @@
       ],
       "Articles": [
         {
+          "ID": 65,
+          "Title": "Australija"
+        },
+        {
           "ID": 1758,
           "Title": "Paryžius"
         },
@@ -262,6 +330,10 @@
         {
           "ID": 4500,
           "Title": "Kanbera"
+        },
+        {
+          "ID": 7189,
+          "Title": "Žmogus"
         },
         {
           "ID": 20479,
@@ -434,6 +506,10 @@
           "Title": "Sėklidė"
         },
         {
+          "ID": 4469,
+          "Title": "Dauginimosi organai"
+        },
+        {
           "ID": 6066,
           "Title": "Atramos-judėjimo sistema"
         },
@@ -458,6 +534,10 @@
           "Title": "Medvarlinės"
         },
         {
+          "ID": 10033,
+          "Title": "Lytiniai organai"
+        },
+        {
           "ID": 10795,
           "Title": "Masturbacija"
         },
@@ -472,6 +552,10 @@
         {
           "ID": 12356,
           "Title": "Tikrasis citrinmedis"
+        },
+        {
+          "ID": 14338,
+          "Title": "Žemuogė"
         },
         {
           "ID": 17225,
@@ -498,6 +582,10 @@
           "Title": "Mantija (biologija)"
         },
         {
+          "ID": 28266,
+          "Title": "Sėjamasis ryžis"
+        },
+        {
           "ID": 28269,
           "Title": "Ryžis"
         },
@@ -514,12 +602,20 @@
           "Title": "Didžiosios katės"
         },
         {
+          "ID": 38677,
+          "Title": "Hidrologija"
+        },
+        {
           "ID": 54339,
           "Title": "Apelsinas"
         },
         {
           "ID": 78242,
           "Title": "Paprastasis kukurūzas"
+        },
+        {
+          "ID": 78258,
+          "Title": "Paprastasis kvietys"
         },
         {
           "ID": 89878,
@@ -532,6 +628,10 @@
         {
           "ID": 110843,
           "Title": "Mitybos grandinė"
+        },
+        {
+          "ID": 114859,
+          "Title": "Paprastoji žemuogė"
         },
         {
           "ID": 129312,
@@ -554,8 +654,20 @@
           "Title": "Suspensija"
         },
         {
+          "ID": 212338,
+          "Title": "Paprastosios stauridės"
+        },
+        {
           "ID": 220367,
           "Title": "Kupranugariai"
+        },
+        {
+          "ID": 272822,
+          "Title": "Peruvinė dumplūnė"
+        },
+        {
+          "ID": 303585,
+          "Title": "Didysis moliūgas"
         },
         {
           "ID": 308375,
@@ -564,6 +676,10 @@
         {
           "ID": 358134,
           "Title": "Indinis mangas"
+        },
+        {
+          "ID": 358802,
+          "Title": "Raukšlėtasis melionas"
         },
         {
           "ID": 400676,
@@ -592,12 +708,20 @@
           "Title": "Kategorija:Buitis"
         },
         {
+          "ID": 96487,
+          "Title": "Kategorija:Gyvybė"
+        },
+        {
           "ID": 97292,
           "Title": "Kategorija:Pavardės"
         },
         {
           "ID": 296719,
           "Title": "Kategorija:Asmeninis gyvenimas"
+        },
+        {
+          "ID": 365736,
+          "Title": "Kategorija:Asmenybė"
         }
       ],
       "Articles": [
@@ -754,6 +878,10 @@
       ],
       "Articles": [
         {
+          "ID": 65446,
+          "Title": "Džiaugsmas"
+        },
+        {
           "ID": 168211,
           "Title": "Laimė"
         },
@@ -782,6 +910,10 @@
         {
           "ID": 1411,
           "Title": "Kategorija:Religija"
+        },
+        {
+          "ID": 291637,
+          "Title": "Kategorija:Indų religijos"
         },
         {
           "ID": 387452,
@@ -1178,8 +1310,16 @@
           "Title": "Kategorija:Elektronika"
         },
         {
+          "ID": 9641,
+          "Title": "Kategorija:Duomenų bazės"
+        },
+        {
           "ID": 21256,
           "Title": "Kategorija:Inžinerija"
+        },
+        {
+          "ID": 21387,
+          "Title": "Kategorija:Technika"
         },
         {
           "ID": 69278,
