--- a/nationalization/internal/languages/mk.json
+++ b/nationalization/internal/languages/mk.json
@@ -42,6 +42,10 @@
           "Title": "Категорија:Рекреација"
         },
         {
+          "ID": 12777,
+          "Title": "Категорија:Спортови"
+        },
+        {
           "ID": 12806,
           "Title": "Категорија:Храна и пијалаци"
         },
@@ -50,8 +54,20 @@
           "Title": "Категорија:Кујна"
         },
         {
+          "ID": 36097,
+          "Title": "Категорија:Бои"
+        },
+        {
           "ID": 46810,
           "Title": "Категорија:Исхрана"
+        },
+        {
+          "ID": 207069,
+          "Title": "Категорија:Слободно време"
+        },
+        {
+          "ID": 1091015,
+          "Title": "Категорија:Гастрономија"
         }
       ],
       "Articles": [
@@ -80,12 +96,20 @@
           "Title": "Леб"
         },
         {
+          "ID": 26793,
+          "Title": "Орален секс"
+        },
+        {
           "ID": 27814,
           "Title": "Лед зепелин"
         },
         {
           "ID": 29169,
           "Title": "Чоколадо"
+        },
+        {
+          "ID": 60450,
+          "Title": "Прирачно дело"
         },
         {
           "ID": 66082,
@@ -112,6 +136,10 @@
           "Title": "Хогвортс"
         },
         {
+          "ID": 114437,
+          "Title": "Дива свиња"
+        },
+        {
           "ID": 117307,
           "Title": "Сладолед"
         },
@@ -136,12 +164,24 @@
           "Title": "Фил"
         },
         {
+          "ID": 728906,
+          "Title": "Википедија на астурски јазик"
+        },
+        {
           "ID": 746613,
           "Title": "Green Day"
         },
         {
+          "ID": 751600,
+          "Title": "Јајце"
+        },
+        {
           "ID": 752525,
           "Title": "Путер од кикиритки"
+        },
+        {
+          "ID": 752870,
+          "Title": "Свиња"
         },
         {
           "ID": 756661,
@@ -164,6 +204,10 @@
           "Title": "Пита"
         },
         {
+          "ID": 872853,
+          "Title": "Какао"
+        },
+        {
           "ID": 873144,
           "Title": "The Wanted"
         },
@@ -178,6 +222,10 @@
         {
           "ID": 1037786,
           "Title": "Фелацио"
+        },
+        {
+          "ID": 1037894,
+          "Title": "Кафе (растение)"
         },
         {
           "ID": 1063228,
@@ -268,6 +316,14 @@
       ],
       "Articles": [
         {
+          "ID": 1323,
+          "Title": "Човек"
+        },
+        {
+          "ID": 2250,
+          "Title": "Австралија"
+        },
+        {
           "ID": 2264,
           "Title": "Канбера"
         },
@@ -316,6 +372,10 @@
         {
           "ID": 55238,
           "Title": "Категорија:Здравствени науки"
+        },
+        {
+          "ID": 1041777,
+          "Title": "Категорија:Здравствена заштита"
         },
         {
           "ID": 1117428,
@@ -452,6 +512,10 @@
           "Title": "Категорија:Фауна по континент"
         },
         {
+          "ID": 38457,
+          "Title": "Категорија:Научни дисциплини"
+        },
+        {
           "ID": 193425,
           "Title": "Категорија:Катастрофи"
         },
@@ -480,6 +544,10 @@
         {
           "ID": 9534,
           "Title": "Ланец на исхрана"
+        },
+        {
+          "ID": 15603,
+          "Title": "Шумска јагода"
         },
         {
           "ID": 17677,
@@ -550,8 +618,24 @@
           "Title": "Јагода"
         },
         {
+          "ID": 1064162,
+          "Title": "Хидрологија"
+        },
+        {
+          "ID": 1092920,
+          "Title": "Репродуктивен систем"
+        },
+        {
           "ID": 1097658,
           "Title": "Скуша"
+        },
+        {
+          "ID": 1097664,
+          "Title": "Скуша (род)"
+        },
+        {
+          "ID": 1098198,
+          "Title": "Диња"
         },
         {
           "ID": 1101346,
@@ -580,6 +664,10 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 6016,
+          "Title": "Категорија:Живот"
+        },
+        {
           "ID": 6593,
           "Title": "Категорија:Луѓе"
         },
@@ -592,8 +680,20 @@
           "Title": "Категорија:Презимиња"
         },
         {
+          "ID": 19680,
+          "Title": "Категорија:Биографија"
+        },
+        {
           "ID": 37075,
           "Title": "Категорија:Жени"
+        },
+        {
+          "ID": 59573,
+          "Title": "Категорија:Теории на личноста"
+        },
+        {
+          "ID": 59575,
+          "Title": "Категорија:Личност"
         },
         {
           "ID": 1062312,
@@ -856,6 +956,14 @@
         {
           "ID": 100936,
           "Title": "Категорија:Закони"
+        },
+        {
+          "ID": 1127524,
+          "Title": "Категорија:Меѓувладини организации"
+        },
+        {
+          "ID": 1150204,
+          "Title": "Категорија:Хуманитарни науки"
         }
       ],
       "Articles": [
@@ -998,12 +1106,24 @@
           "Title": "Категорија:Видови технологии"
         },
         {
+          "ID": 65414,
+          "Title": "Категорија:Бази на податоци"
+        },
+        {
           "ID": 177622,
           "Title": "Категорија:Историја на технологијата"
         },
         {
           "ID": 422140,
           "Title": "Категорија:Сообраќај"
+        },
+        {
+          "ID": 731591,
+          "Title": "Категорија:Сметачи"
+        },
+        {
+          "ID": 738282,
+          "Title": "Категорија:Управување со податоци"
         },
         {
           "ID": 1106518,
