--- a/nationalization/internal/languages/ml.json
+++ b/nationalization/internal/languages/ml.json
@@ -26,12 +26,20 @@
           "Title": "വർഗ്ഗം:ചലച്ചിത്രങ്ങൾ"
         },
         {
+          "ID": 118010,
+          "Title": "വർഗ്ഗം:നിറങ്ങൾ"
+        },
+        {
           "ID": 160219,
           "Title": "വർഗ്ഗം:വിനോദങ്ങൾ"
         },
         {
           "ID": 172887,
           "Title": "വർഗ്ഗം:സംഗീത സംഘങ്ങൾ"
+        },
+        {
+          "ID": 338093,
+          "Title": "വർഗ്ഗം:ശാരീരിക വ്യായാമം"
         },
         {
           "ID": 339066,
@@ -60,6 +68,10 @@
           "Title": "കാപ്പി (പാനീയം)"
         },
         {
+          "ID": 21943,
+          "Title": "കൊക്കോ"
+        },
+        {
           "ID": 24683,
           "Title": "ബിയർ"
         },
@@ -68,8 +80,16 @@
           "Title": "വദനസുരതം"
         },
         {
+          "ID": 28791,
+          "Title": "മുട്ട"
+        },
+        {
           "ID": 38537,
           "Title": "റൊട്ടി"
+        },
+        {
+          "ID": 41558,
+          "Title": "പന്നി"
         },
         {
           "ID": 42756,
@@ -96,12 +116,24 @@
           "Title": "ബിസ്കറ്റ്"
         },
         {
+          "ID": 158249,
+          "Title": "കാട്ടുപന്നി"
+        },
+        {
           "ID": 159051,
           "Title": "ഐസ്‌ക്രീം"
         },
         {
           "ID": 160455,
           "Title": "യാഥാർത്ഥ്യം"
+        },
+        {
+          "ID": 168336,
+          "Title": "വളർത്തു പന്നി"
+        },
+        {
+          "ID": 171379,
+          "Title": "കോഫി അറബിക"
         },
         {
           "ID": 198175,
@@ -118,6 +150,10 @@
         {
           "ID": 232587,
           "Title": "കേക്ക്"
+        },
+        {
+          "ID": 251390,
+          "Title": "കാപ്പി"
         },
         {
           "ID": 255321,
@@ -191,6 +227,14 @@
         }
       ],
       "Articles": [
+        {
+          "ID": 2309,
+          "Title": "ഓസ്ട്രേലിയ"
+        },
+        {
+          "ID": 11774,
+          "Title": "മനുഷ്യൻ"
+        },
         {
           "ID": 16345,
           "Title": "മ്യാൻമാർ"
@@ -394,6 +438,14 @@
           "Title": "അരി"
         },
         {
+          "ID": 14936,
+          "Title": "അയല"
+        },
+        {
+          "ID": 14962,
+          "Title": "മത്തൻ"
+        },
+        {
           "ID": 17528,
           "Title": "തക്കാളി"
         },
@@ -438,6 +490,10 @@
           "Title": "വൃഷണം"
         },
         {
+          "ID": 85943,
+          "Title": "പ്രത്യുത്പാദനേന്ദ്രിയ വ്യൂഹം"
+        },
+        {
           "ID": 88982,
           "Title": "മായൻ കലണ്ടർ"
         },
@@ -458,6 +514,10 @@
           "Title": "നൈജീരിയൻ ഡ്വാർഫ് ഗോട്ട്"
         },
         {
+          "ID": 142434,
+          "Title": "ഹൈഡ്രോളജി"
+        },
+        {
           "ID": 144211,
           "Title": "മരത്തവള"
         },
@@ -468,6 +528,10 @@
         {
           "ID": 176891,
           "Title": "തയ്ക്കുമ്പളം"
+        },
+        {
+          "ID": 194204,
+          "Title": "പ്രത്യുൽപ്പാദനാവയവം"
         },
         {
           "ID": 203587,
@@ -484,6 +548,18 @@
         {
           "ID": 245990,
           "Title": "കോളിഫ്ലവർ"
+        },
+        {
+          "ID": 251053,
+          "Title": "മലതക്കാളിക്കീര"
+        },
+        {
+          "ID": 268124,
+          "Title": "നെല്ല്"
+        },
+        {
+          "ID": 277416,
+          "Title": "ഷമാം"
         },
         {
           "ID": 346638,
@@ -508,8 +584,24 @@
           "Title": "വർഗ്ഗം:വ്യക്തികൾ"
         },
         {
+          "ID": 207215,
+          "Title": "വർഗ്ഗം:ജീവചരിത്രഗ്രന്ഥങ്ങൾ"
+        },
+        {
           "ID": 275926,
           "Title": "വർഗ്ഗം:സ്ത്രീകൾ"
+        },
+        {
+          "ID": 287898,
+          "Title": "വർഗ്ഗം:ജീവൻ"
+        },
+        {
+          "ID": 341458,
+          "Title": "വർഗ്ഗം:ജീവചരിത്രപരമായ സൃഷ്ടികൾ"
+        },
+        {
+          "ID": 363928,
+          "Title": "വർഗ്ഗം:ജീവചരിത്രം (സാഹിത്യരൂപം)"
         },
         {
           "ID": 371157,
@@ -950,6 +1042,14 @@
         {
           "ID": 456602,
           "Title": "റൈസ് യൂണിവേഴ്സിറ്റി"
+        },
+        {
+          "ID": 463717,
+          "Title": "ഗ്ലാസ്ഗോ സർവ്വകലാശാല"
+        },
+        {
+          "ID": 463928,
+          "Title": "സെന്റ് ആൻഡ്രൂസ് യൂണിവേഴ്സിറ്റി"
         }
       ]
     },
@@ -980,6 +1080,10 @@
         {
           "ID": 73886,
           "Title": "വർഗ്ഗം:കമ്പ്യൂട്ടിങ്ങ്‌"
+        },
+        {
+          "ID": 146221,
+          "Title": "വർഗ്ഗം:ഡാറ്റാബേസ്"
         },
         {
           "ID": 192684,
