--- a/nationalization/internal/languages/mn.json
+++ b/nationalization/internal/languages/mn.json
@@ -26,8 +26,16 @@
           "Title": "Ангилал:Хоол хүнс"
         },
         {
+          "ID": 38080,
+          "Title": "Ангилал:Өнгө"
+        },
+        {
           "ID": 38870,
           "Title": "Ангилал:Хобби"
+        },
+        {
+          "ID": 54662,
+          "Title": "Ангилал:Спортын төрөл"
         },
         {
           "ID": 55793,
@@ -40,6 +48,10 @@
         {
           "ID": 55845,
           "Title": "Ангилал:Зоог (хоол болон унд)"
+        },
+        {
+          "ID": 57448,
+          "Title": "Ангилал:Чөлөөт цаг"
         },
         {
           "ID": 59051,
@@ -68,12 +80,20 @@
           "Title": "Нэвтэрхий толь"
         },
         {
+          "ID": 11144,
+          "Title": "Чарга"
+        },
+        {
           "ID": 11602,
           "Title": "Пицца"
         },
         {
           "ID": 13243,
           "Title": "Шоколад"
+        },
+        {
+          "ID": 13432,
+          "Title": "Өндөг"
         },
         {
           "ID": 13483,
@@ -86,6 +106,18 @@
         {
           "ID": 25370,
           "Title": "Хотол бялуу"
+        },
+        {
+          "ID": 27963,
+          "Title": "Тэжээвэр гахай"
+        },
+        {
+          "ID": 36956,
+          "Title": "Зэрлэг гахай"
+        },
+        {
+          "ID": 55549,
+          "Title": "Какао"
         },
         {
           "ID": 70205,
@@ -123,6 +155,14 @@
         }
       ],
       "Articles": [
+        {
+          "ID": 4551,
+          "Title": "Австрали"
+        },
+        {
+          "ID": 6983,
+          "Title": "Хүн"
+        },
         {
           "ID": 8335,
           "Title": "Канберра"
@@ -170,6 +210,10 @@
           "Title": "Ангилал:Анагаах ухаан мэргэжлийн салбараар"
         },
         {
+          "ID": 63281,
+          "Title": "Ангилал:Эрүүл мэндийн систем"
+        },
+        {
           "ID": 66690,
           "Title": "Ангилал:Генетикийн эмгэг"
         },
@@ -194,6 +238,10 @@
         {
           "ID": 59596,
           "Title": "Ангилал:Түүх, улс орноор"
+        },
+        {
+          "ID": 59597,
+          "Title": "Ангилал:Түүх орон зайн агуулгаар"
         },
         {
           "ID": 69699,
@@ -284,6 +332,10 @@
           "Title": "Ангилал:Амьтан судлал"
         },
         {
+          "ID": 53767,
+          "Title": "Ангилал:Шинжлэх ухаан мэргэжлийн салбараар"
+        },
+        {
           "ID": 54599,
           "Title": "Ангилал:Гамшиг"
         },
@@ -322,6 +374,10 @@
           "Title": "Улаан буудай"
         },
         {
+          "ID": 14002,
+          "Title": "Гүзээлзгэнэ"
+        },
+        {
           "ID": 14003,
           "Title": "Цэцэрлэгийн гүзээлзгэнэ"
         },
@@ -344,6 +400,10 @@
         {
           "ID": 27586,
           "Title": "Булчин"
+        },
+        {
+          "ID": 31214,
+          "Title": "Гидрологи"
         }
       ]
     },
@@ -354,6 +414,10 @@
         {
           "ID": 1882,
           "Title": "Ангилал:Амьдрал"
+        },
+        {
+          "ID": 3635,
+          "Title": "Ангилал:Хүмүүс"
         },
         {
           "ID": 3657,
@@ -370,6 +434,14 @@
         {
           "ID": 39601,
           "Title": "Ангилал:Эмэгтэйчүүд"
+        },
+        {
+          "ID": 58272,
+          "Title": "Ангилал:Намтар"
+        },
+        {
+          "ID": 73169,
+          "Title": "Ангилал:Хүний тухай бүтээл"
         }
       ],
       "Articles": [
@@ -526,6 +598,10 @@
           "Title": "Ангилал:Нийгмийн шинжлэх ухаан"
         },
         {
+          "ID": 3620,
+          "Title": "Ангилал:Хүмүүнлэгийн шинжлэх ухаан"
+        },
+        {
           "ID": 3621,
           "Title": "Ангилал:Хүн судлалын шинжлэх ухаан"
         },
@@ -618,6 +694,10 @@
           "Title": "Ангилал:Электроник"
         },
         {
+          "ID": 5906,
+          "Title": "Ангилал:Компьютер"
+        },
+        {
           "ID": 8869,
           "Title": "Ангилал:Тээвэр"
         },
@@ -632,6 +712,14 @@
         {
           "ID": 23298,
           "Title": "Ангилал:Дизайн"
+        },
+        {
+          "ID": 40619,
+          "Title": "Ангилал:Өгөгдлийн сан"
+        },
+        {
+          "ID": 48281,
+          "Title": "Ангилал:Техник"
         },
         {
           "ID": 52303,
@@ -652,6 +740,10 @@
         {
           "ID": 58929,
           "Title": "Ангилал:Зэвсэгт хүчний хэрэглэл"
+        },
+        {
+          "ID": 65537,
+          "Title": "Ангилал:Өгөгдлийн сангууд"
         }
       ],
       "Articles": [
