--- a/nationalization/internal/languages/ms.json
+++ b/nationalization/internal/languages/ms.json
@@ -34,12 +34,24 @@
           "Title": "Kategori:Hiburan"
         },
         {
+          "ID": 80237,
+          "Title": "Kategori:Teknik masakan"
+        },
+        {
           "ID": 82291,
           "Title": "Kategori:Rekreasi"
         },
         {
+          "ID": 118689,
+          "Title": "Kategori:Warna"
+        },
+        {
           "ID": 138814,
           "Title": "Kategori:Hobi"
+        },
+        {
+          "ID": 162896,
+          "Title": "Kategori:Sukan mengikut jenis"
         },
         {
           "ID": 162902,
@@ -48,12 +60,20 @@
         {
           "ID": 632033,
           "Title": "Kategori:Nutrisi"
+        },
+        {
+          "ID": 921800,
+          "Title": "Kategori:Santai"
         }
       ],
       "Articles": [
         {
           "ID": 1339,
           "Title": "Kopi"
+        },
+        {
+          "ID": 1340,
+          "Title": "Koko"
         },
         {
           "ID": 4951,
@@ -66,6 +86,10 @@
         {
           "ID": 11329,
           "Title": "Bir"
+        },
+        {
+          "ID": 12266,
+          "Title": "Babi Hutan"
         },
         {
           "ID": 13948,
@@ -88,6 +112,10 @@
           "Title": "Senarai Tempat siri Harry Potter"
         },
         {
+          "ID": 24121,
+          "Title": "Babi"
+        },
+        {
           "ID": 33832,
           "Title": "Piza"
         },
@@ -96,12 +124,20 @@
           "Title": "Telur masin"
         },
         {
+          "ID": 41768,
+          "Title": "Seks oral"
+        },
+        {
           "ID": 41811,
           "Title": "Biskut nasib"
         },
         {
           "ID": 57464,
           "Title": "Realiti"
+        },
+        {
+          "ID": 58118,
+          "Title": "Telur"
         },
         {
           "ID": 58123,
@@ -288,6 +324,14 @@
           "Title": "Daging babi"
         },
         {
+          "ID": 922626,
+          "Title": "Kereta luncur salji"
+        },
+        {
+          "ID": 937832,
+          "Title": "Roti rata"
+        },
+        {
           "ID": 941308,
           "Title": "Kek kahwin"
         },
@@ -348,8 +392,16 @@
           "Title": "Piramid"
         },
         {
+          "ID": 1992,
+          "Title": "Australia"
+        },
+        {
           "ID": 2943,
           "Title": "Myanmar"
+        },
+        {
+          "ID": 6887,
+          "Title": "Manusia"
         },
         {
           "ID": 12100,
@@ -396,6 +448,10 @@
         {
           "ID": 230521,
           "Title": "Kategori:Pekerjaan penjagaan kesihatan"
+        },
+        {
+          "ID": 662829,
+          "Title": "Kategori:Perawatan kesihatan"
         }
       ]
     },
@@ -418,6 +474,10 @@
         {
           "ID": 82177,
           "Title": "Kategori:Peristiwa"
+        },
+        {
+          "ID": 163855,
+          "Title": "Kategori:Sejarah mengikut lokasi"
         },
         {
           "ID": 274230,
@@ -520,6 +580,10 @@
           "Title": "Kategori:Bencana"
         },
         {
+          "ID": 76161,
+          "Title": "Kategori:Disiplin saintifik"
+        },
+        {
           "ID": 84676,
           "Title": "Kategori:Bahan kimia"
         },
@@ -552,6 +616,10 @@
         {
           "ID": 119,
           "Title": "Tomato"
+        },
+        {
+          "ID": 123,
+          "Title": "Padi"
         },
         {
           "ID": 174,
@@ -598,8 +666,16 @@
           "Title": "Percambahan"
         },
         {
+          "ID": 73551,
+          "Title": "Hidrologi"
+        },
+        {
           "ID": 91368,
           "Title": "Otot"
+        },
+        {
+          "ID": 92901,
+          "Title": "Pokok Strawberi"
         },
         {
           "ID": 95667,
@@ -650,6 +726,14 @@
           "Title": "Labah-labah serigala"
         },
         {
+          "ID": 284899,
+          "Title": "Ikan Kembung"
+        },
+        {
+          "ID": 284902,
+          "Title": "Ikan Pelaling"
+        },
+        {
           "ID": 291162,
           "Title": "Zakar manusia"
         },
@@ -660,6 +744,10 @@
         {
           "ID": 417497,
           "Title": "Takwim Maya"
+        },
+        {
+          "ID": 433487,
+          "Title": "Organ pembiakan"
         },
         {
           "ID": 721043,
@@ -694,6 +782,10 @@
         {
           "ID": 17551,
           "Title": "Kategori:Orang"
+        },
+        {
+          "ID": 28559,
+          "Title": "Kategori:Biografi"
         },
         {
           "ID": 76137,
@@ -870,6 +962,10 @@
       ],
       "Articles": [
         {
+          "ID": 13653,
+          "Title": "Kepercayaan"
+        },
+        {
           "ID": 41144,
           "Title": "Kebahagiaan"
         },
@@ -944,6 +1040,10 @@
         {
           "ID": 165020,
           "Title": "Kategori:Universiti dan kolej mengikut negara"
+        },
+        {
+          "ID": 165923,
+          "Title": "Kategori:Pertubuhan antara pemerintahan"
         }
       ],
       "Articles": [
@@ -1096,6 +1196,10 @@
           "Title": "Universiti St Andrews"
         },
         {
+          "ID": 285861,
+          "Title": "Undang-undang amanah"
+        },
+        {
           "ID": 320786,
           "Title": "Perang Dunia Ketiga"
         },
@@ -1194,6 +1298,10 @@
           "Title": "Kategori:Kejuruteraan"
         },
         {
+          "ID": 28806,
+          "Title": "Kategori:Komputer"
+        },
+        {
           "ID": 30627,
           "Title": "Kategori:Elektronik"
         },
@@ -1214,8 +1322,16 @@
           "Title": "Kategori:Reka bentuk"
         },
         {
+          "ID": 82336,
+          "Title": "Kategori:Pengurusan data"
+        },
+        {
           "ID": 82490,
           "Title": "Kategori:Sejarah teknologi"
+        },
+        {
+          "ID": 115722,
+          "Title": "Kategori:Pangkalan data"
         },
         {
           "ID": 153953,
