--- a/nationalization/internal/languages/nl.json
+++ b/nationalization/internal/languages/nl.json
@@ -14,12 +14,20 @@
           "Title": "Categorie:Sport"
         },
         {
+          "ID": 64029,
+          "Title": "Categorie:Kleur"
+        },
+        {
           "ID": 66068,
           "Title": "Categorie:Cultuur"
         },
         {
           "ID": 66072,
           "Title": "Categorie:Voeding"
+        },
+        {
+          "ID": 67269,
+          "Title": "Categorie:Lichaamsbeweging"
         },
         {
           "ID": 68304,
@@ -34,6 +42,14 @@
           "Title": "Categorie:Amusement"
         },
         {
+          "ID": 116261,
+          "Title": "Categorie:Kooktechniek"
+        },
+        {
+          "ID": 197208,
+          "Title": "Categorie:Vrije tijd"
+        },
+        {
           "ID": 464694,
           "Title": "Categorie:Voedselbereiding"
         },
@@ -42,8 +58,16 @@
           "Title": "Categorie:Voedsel"
         },
         {
+          "ID": 1833678,
+          "Title": "Categorie:Gastronomie"
+        },
+        {
           "ID": 2310977,
           "Title": "Categorie:Muziekgroep"
+        },
+        {
+          "ID": 4917634,
+          "Title": "Categorie:Sport naar type"
         },
         {
           "ID": 5059228,
@@ -76,6 +100,10 @@
           "Title": "Muziekensemble"
         },
         {
+          "ID": 9424,
+          "Title": "Orale seks"
+        },
+        {
           "ID": 10251,
           "Title": "Buckingham Palace"
         },
@@ -100,8 +128,16 @@
           "Title": "Ei (voeding)"
         },
         {
+          "ID": 19198,
+          "Title": "Ei (dier)"
+        },
+        {
           "ID": 29963,
           "Title": "The World Factbook"
+        },
+        {
+          "ID": 33518,
+          "Title": "Band"
         },
         {
           "ID": 34065,
@@ -140,6 +176,10 @@
           "Title": "Aqua (danceact)"
         },
         {
+          "ID": 56712,
+          "Title": "Cacaoboom"
+        },
+        {
           "ID": 59799,
           "Title": "Led Zeppelin"
         },
@@ -164,6 +204,10 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 85908,
+          "Title": "Koffieplant"
+        },
+        {
           "ID": 96474,
           "Title": "Gehakt"
         },
@@ -178,6 +222,10 @@
         {
           "ID": 101842,
           "Title": "Saus"
+        },
+        {
+          "ID": 111358,
+          "Title": "Slee"
         },
         {
           "ID": 114791,
@@ -216,6 +264,10 @@
           "Title": "Realisme (filosofie)"
         },
         {
+          "ID": 200496,
+          "Title": "Roti (gerecht)"
+        },
+        {
           "ID": 206672,
           "Title": "Kaakje"
         },
@@ -244,6 +296,10 @@
           "Title": "Dinosaur Jr."
         },
         {
+          "ID": 259679,
+          "Title": "Scheepsbeschuit"
+        },
+        {
           "ID": 259993,
           "Title": "Hotdog"
         },
@@ -268,8 +324,16 @@
           "Title": "Werkelijkheid"
         },
         {
+          "ID": 306476,
+          "Title": "Naslagwerk"
+        },
+        {
           "ID": 308032,
           "Title": "Mordred"
+        },
+        {
+          "ID": 311257,
+          "Title": "Echte zwijnen"
         },
         {
           "ID": 311302,
@@ -282,6 +346,10 @@
         {
           "ID": 368778,
           "Title": "Alcoholvrij bier"
+        },
+        {
+          "ID": 398248,
+          "Title": "Muziekgroep"
         },
         {
           "ID": 415364,
@@ -328,6 +396,14 @@
           "Title": "Tijgerbrood"
         },
         {
+          "ID": 709405,
+          "Title": "Pastırma"
+        },
+        {
+          "ID": 852744,
+          "Title": "Pecorino"
+        },
+        {
           "ID": 982818,
           "Title": "Lijst van locaties in Harry Potter"
         },
@@ -342,6 +418,14 @@
         {
           "ID": 1242428,
           "Title": "Realisme (literatuur)"
+        },
+        {
+          "ID": 1254536,
+          "Title": "Gemberbier"
+        },
+        {
+          "ID": 1329106,
+          "Title": "Varken (tam)"
         },
         {
           "ID": 1355719,
@@ -368,12 +452,20 @@
           "Title": "Sucker Punch"
         },
         {
+          "ID": 1718046,
+          "Title": "Wild zwijn"
+        },
+        {
           "ID": 1777592,
           "Title": "Gelukskoekje"
         },
         {
           "ID": 1857902,
           "Title": "Gekookt ei"
+        },
+        {
+          "ID": 1910451,
+          "Title": "Yurei"
         },
         {
           "ID": 1966703,
@@ -528,6 +620,10 @@
           "Title": "Myanmar"
         },
         {
+          "ID": 26972,
+          "Title": "Australië (land)"
+        },
+        {
           "ID": 29418,
           "Title": "Queensland"
         },
@@ -542,6 +638,10 @@
         {
           "ID": 1032238,
           "Title": "Carlsbad (New Mexico)"
+        },
+        {
+          "ID": 1434816,
+          "Title": "Mens"
         }
       ]
     },
@@ -552,6 +652,10 @@
         {
           "ID": 63397,
           "Title": "Categorie:Geneeskunde"
+        },
+        {
+          "ID": 67421,
+          "Title": "Categorie:Gezondheidszorg"
         },
         {
           "ID": 80097,
@@ -710,6 +814,10 @@
           "Title": "Categorie:Scheikunde"
         },
         {
+          "ID": 63433,
+          "Title": "Categorie:Exacte wetenschap"
+        },
+        {
           "ID": 63456,
           "Title": "Categorie:Chemische stof"
         },
@@ -740,6 +848,10 @@
       ],
       "Articles": [
         {
+          "ID": 3341,
+          "Title": "Aziatische rijst"
+        },
+        {
           "ID": 8209,
           "Title": "Teelbal"
         },
@@ -748,8 +860,16 @@
           "Title": "Masturbatie"
         },
         {
+          "ID": 9440,
+          "Title": "Geslachtsorgaan"
+        },
+        {
           "ID": 15086,
           "Title": "Urine"
+        },
+        {
+          "ID": 18314,
+          "Title": "Hydrologie"
         },
         {
           "ID": 19128,
@@ -758,6 +878,10 @@
         {
           "ID": 20224,
           "Title": "Eland"
+        },
+        {
+          "ID": 22875,
+          "Title": "Goudbes"
         },
         {
           "ID": 27828,
@@ -792,12 +916,20 @@
           "Title": "Ananas"
         },
         {
+          "ID": 52122,
+          "Title": "Aardbei"
+        },
+        {
           "ID": 53351,
           "Title": "Kieming"
         },
         {
           "ID": 67545,
           "Title": "Vuur"
+        },
+        {
+          "ID": 70810,
+          "Title": "Bosaardbei"
         },
         {
           "ID": 70871,
@@ -814,6 +946,14 @@
         {
           "ID": 99010,
           "Title": "Suspensie (scheikunde)"
+        },
+        {
+          "ID": 118327,
+          "Title": "Aartje"
+        },
+        {
+          "ID": 118357,
+          "Title": "Gewone tarwe"
         },
         {
           "ID": 119853,
@@ -834,6 +974,10 @@
         {
           "ID": 148999,
           "Title": "Limoen"
+        },
+        {
+          "ID": 153035,
+          "Title": "Mirte"
         },
         {
           "ID": 184352,
@@ -864,8 +1008,16 @@
           "Title": "Bewegingsapparaat"
         },
         {
+          "ID": 359989,
+          "Title": "Tomatillo"
+        },
+        {
           "ID": 387550,
           "Title": "Mango (soort)"
+        },
+        {
+          "ID": 398458,
+          "Title": "Reuzenpompoen"
         },
         {
           "ID": 459676,
@@ -880,6 +1032,14 @@
           "Title": "Rood haar"
         },
         {
+          "ID": 739283,
+          "Title": "Indische makreel"
+        },
+        {
+          "ID": 1073489,
+          "Title": "Anaconda"
+        },
+        {
           "ID": 1205785,
           "Title": "Kroonkafje"
         },
@@ -890,6 +1050,14 @@
         {
           "ID": 1434814,
           "Title": "Penis"
+        },
+        {
+          "ID": 1559907,
+          "Title": "Meloen"
+        },
+        {
+          "ID": 1568912,
+          "Title": "Voortplantingssysteem"
         },
         {
           "ID": 1966416,
@@ -920,6 +1088,14 @@
           "Title": "Kerstomaat"
         },
         {
+          "ID": 2435279,
+          "Title": "Scomber"
+        },
+        {
+          "ID": 2435538,
+          "Title": "Trachurus"
+        },
+        {
           "ID": 2440310,
           "Title": "Diplocrepis puniceus"
         },
@@ -948,6 +1124,10 @@
           "Title": "Pantherinae"
         },
         {
+          "ID": 4272553,
+          "Title": "Cantaloupe"
+        },
+        {
           "ID": 4606955,
           "Title": "Menselijk spierstelsel"
         },
@@ -964,6 +1144,10 @@
         {
           "ID": 69517,
           "Title": "Categorie:Achternaam"
+        },
+        {
+          "ID": 171555,
+          "Title": "Categorie:Biografie"
         },
         {
           "ID": 738070,
@@ -1132,6 +1316,10 @@
           "Title": "Paul Wight"
         },
         {
+          "ID": 538618,
+          "Title": "Rupsje Nooitgenoeg"
+        },
+        {
           "ID": 1465387,
           "Title": "The Big Bang Theory (televisieserie)"
         },
@@ -1212,6 +1400,14 @@
           "Title": "Schoonheid"
         },
         {
+          "ID": 109338,
+          "Title": "Hit"
+        },
+        {
+          "ID": 122515,
+          "Title": "Vreugde"
+        },
+        {
           "ID": 675678,
           "Title": "Feit"
         },
@@ -1222,6 +1418,14 @@
         {
           "ID": 2124290,
           "Title": "Vertrouwen"
+        },
+        {
+          "ID": 2839636,
+          "Title": "Alegria"
+        },
+        {
+          "ID": 4406310,
+          "Title": "Believer"
         },
         {
           "ID": 4947708,
@@ -1286,6 +1490,14 @@
         {
           "ID": 176685,
           "Title": "Categorie:Mens en maatschappij"
+        },
+        {
+          "ID": 428560,
+          "Title": "Categorie:Geesteswetenschappen"
+        },
+        {
+          "ID": 690868,
+          "Title": "Categorie:Intergouvernementele organisatie"
         },
         {
           "ID": 842971,
@@ -1868,12 +2080,20 @@
           "Title": "Categorie:Informatica"
         },
         {
+          "ID": 63366,
+          "Title": "Categorie:Techniek"
+        },
+        {
           "ID": 63436,
           "Title": "Categorie:Elektronica"
         },
         {
           "ID": 63440,
           "Title": "Categorie:Internet"
+        },
+        {
+          "ID": 63635,
+          "Title": "Categorie:Vervoer"
         },
         {
           "ID": 80542,
@@ -1884,12 +2104,28 @@
           "Title": "Categorie:Toegepaste wetenschap"
         },
         {
+          "ID": 85026,
+          "Title": "Categorie:Computer"
+        },
+        {
+          "ID": 90015,
+          "Title": "Categorie:Databaseserver"
+        },
+        {
+          "ID": 204243,
+          "Title": "Categorie:Dataopslag"
+        },
+        {
           "ID": 563863,
           "Title": "Categorie:Geschiedenis van de techniek"
         },
         {
           "ID": 1840514,
           "Title": "Categorie:Vormgeving"
+        },
+        {
+          "ID": 2095177,
+          "Title": "Categorie:Database"
         },
         {
           "ID": 2193054,
