--- a/nationalization/internal/languages/ru.json
+++ b/nationalization/internal/languages/ru.json
@@ -10,6 +10,10 @@
           "Title": "Категория:Искусство"
         },
         {
+          "ID": 8036,
+          "Title": "Категория:Виды спорта"
+        },
+        {
           "ID": 8037,
           "Title": "Категория:Спорт"
         },
@@ -42,6 +46,14 @@
           "Title": "Категория:Кухня"
         },
         {
+          "ID": 16054,
+          "Title": "Категория:Цвет"
+        },
+        {
+          "ID": 72045,
+          "Title": "Категория:Цвета"
+        },
+        {
           "ID": 90533,
           "Title": "Категория:Музыкальные коллективы"
         },
@@ -62,8 +74,32 @@
           "Title": "Категория:Культура питания"
         },
         {
+          "ID": 787059,
+          "Title": "Категория:Технология приготовления пищи"
+        },
+        {
           "ID": 2182434,
           "Title": "Категория:Блюда"
+        },
+        {
+          "ID": 2182505,
+          "Title": "Категория:Пищевые продукты"
+        },
+        {
+          "ID": 2600447,
+          "Title": "Категория:Исполнители музыкальных произведений"
+        },
+        {
+          "ID": 3921508,
+          "Title": "Категория:Свободное время"
+        },
+        {
+          "ID": 4212759,
+          "Title": "Категория:Гастрономия"
+        },
+        {
+          "ID": 5217698,
+          "Title": "Категория:Физические упражнения"
         }
       ],
       "Articles": [
@@ -74,6 +110,10 @@
         {
           "ID": 1127,
           "Title": "Энциклопедия"
+        },
+        {
+          "ID": 1846,
+          "Title": "Оральный секс"
         },
         {
           "ID": 9585,
@@ -100,6 +140,10 @@
           "Title": "Целибат"
         },
         {
+          "ID": 43639,
+          "Title": "Кофе (род)"
+        },
+        {
           "ID": 43910,
           "Title": "Кофе"
         },
@@ -114,6 +158,10 @@
         {
           "ID": 50633,
           "Title": "Пицца"
+        },
+        {
+          "ID": 53975,
+          "Title": "Реализм (живопись)"
         },
         {
           "ID": 55347,
@@ -140,6 +188,10 @@
           "Title": "Green Day"
         },
         {
+          "ID": 126264,
+          "Title": "Действительность"
+        },
+        {
           "ID": 127592,
           "Title": "Музыкальный коллектив"
         },
@@ -154,6 +206,10 @@
         {
           "ID": 132403,
           "Title": "Мороженое"
+        },
+        {
+          "ID": 133059,
+          "Title": "Домашняя свинья"
         },
         {
           "ID": 138462,
@@ -172,12 +228,24 @@
           "Title": "Макаронные изделия"
         },
         {
+          "ID": 171929,
+          "Title": "Кабан"
+        },
+        {
+          "ID": 174569,
+          "Title": "Какао"
+        },
+        {
           "ID": 189140,
           "Title": "Английское пиво"
         },
         {
           "ID": 198013,
           "Title": "Привидение"
+        },
+        {
+          "ID": 205216,
+          "Title": "Бастурма"
         },
         {
           "ID": 226386,
@@ -190,6 +258,14 @@
         {
           "ID": 226392,
           "Title": "Реализм (литература)"
+        },
+        {
+          "ID": 230410,
+          "Title": "Сани"
+        },
+        {
+          "ID": 233235,
+          "Title": "Сухари"
         },
         {
           "ID": 273507,
@@ -220,12 +296,28 @@
           "Title": "Мордред"
         },
         {
+          "ID": 351651,
+          "Title": "Кабаны"
+        },
+        {
           "ID": 357284,
           "Title": "Свинина"
         },
         {
+          "ID": 370563,
+          "Title": "Рисовая каша"
+        },
+        {
           "ID": 401084,
           "Title": "Фарш"
+        },
+        {
+          "ID": 423856,
+          "Title": "Имбирный эль"
+        },
+        {
+          "ID": 438419,
+          "Title": "Яйцо"
         },
         {
           "ID": 448035,
@@ -260,6 +352,10 @@
           "Title": "Пирожное"
         },
         {
+          "ID": 707087,
+          "Title": "Юрэй"
+        },
+        {
           "ID": 747123,
           "Title": "Рисующие руки"
         },
@@ -280,6 +376,10 @@
           "Title": "Тако"
         },
         {
+          "ID": 965643,
+          "Title": "Музыкальный ансамбль"
+        },
+        {
           "ID": 1052321,
           "Title": "Паста, Джудитта"
         },
@@ -288,8 +388,16 @@
           "Title": "Арахисовая паста"
         },
         {
+          "ID": 1169696,
+          "Title": "Тарт"
+        },
+        {
           "ID": 1294859,
           "Title": "Бисквит"
+        },
+        {
+          "ID": 1338890,
+          "Title": "Справочник"
         },
         {
           "ID": 1346584,
@@ -328,6 +436,10 @@
           "Title": "Хлебная закваска"
         },
         {
+          "ID": 2112718,
+          "Title": "Кофе аравийский"
+        },
+        {
           "ID": 2189198,
           "Title": "Свадебный торт"
         },
@@ -338,6 +450,10 @@
         {
           "ID": 2215930,
           "Title": "M\u0026M’s"
+        },
+        {
+          "ID": 2267276,
+          "Title": "Лепёшка"
         },
         {
           "ID": 2278596,
@@ -364,6 +480,10 @@
           "Title": "Робот (фильм)"
         },
         {
+          "ID": 3031257,
+          "Title": "Бигфут (значения)"
+        },
+        {
           "ID": 3134727,
           "Title": "Dinosaur Jr."
         },
@@ -378,6 +498,10 @@
         {
           "ID": 3390912,
           "Title": "Содовый хлеб"
+        },
+        {
+          "ID": 3436700,
+          "Title": "Пекорино"
         },
         {
           "ID": 3584196,
@@ -398,6 +522,10 @@
         {
           "ID": 4235778,
           "Title": "Мякишевый хлеб"
+        },
+        {
+          "ID": 4653204,
+          "Title": "Опресноки"
         },
         {
           "ID": 4688360,
@@ -422,6 +550,10 @@
         {
           "ID": 4954608,
           "Title": "Джелато"
+        },
+        {
+          "ID": 5103914,
+          "Title": "Галеты"
         },
         {
           "ID": 5176701,
@@ -484,8 +616,16 @@
           "Title": "Mendiant"
         },
         {
+          "ID": 6705589,
+          "Title": "Астурийская Википедия"
+        },
+        {
           "ID": 6722929,
           "Title": "Пикей"
+        },
+        {
+          "ID": 6730475,
+          "Title": "Пекорино Романо"
         },
         {
           "ID": 6733136,
@@ -572,6 +712,10 @@
           "Title": "Венеция"
         },
         {
+          "ID": 1121,
+          "Title": "Австралия"
+        },
+        {
           "ID": 2845,
           "Title": "Мьянма"
         },
@@ -592,8 +736,16 @@
           "Title": "Пирамида (архитектура)"
         },
         {
+          "ID": 1070145,
+          "Title": "Человек"
+        },
+        {
           "ID": 1653472,
           "Title": "Карлсбад (Нью-Мексико)"
+        },
+        {
+          "ID": 2744732,
+          "Title": "Человек разумный"
         }
       ]
     },
@@ -616,6 +768,10 @@
         {
           "ID": 131997,
           "Title": "Категория:Наследственные болезни"
+        },
+        {
+          "ID": 237028,
+          "Title": "Категория:Здравоохранение"
         },
         {
           "ID": 436393,
@@ -662,6 +818,10 @@
           "Title": "Категория:Выборы по годам"
         },
         {
+          "ID": 4289304,
+          "Title": "Категория:История по местонахождению"
+        },
+        {
           "ID": 7155888,
           "Title": "Категория:Культурные мероприятия"
         },
@@ -694,6 +854,10 @@
         {
           "ID": 1095699,
           "Title": "Трамп, Дональд"
+        },
+        {
+          "ID": 1305145,
+          "Title": "Список древнеримских единиц"
         },
         {
           "ID": 1980523,
@@ -824,6 +988,10 @@
         {
           "ID": 6974337,
           "Title": "Категория:Химические соединения"
+        },
+        {
+          "ID": 7010293,
+          "Title": "Категория:Научные дисциплины"
         }
       ],
       "Articles": [
@@ -864,6 +1032,10 @@
           "Title": "Лось"
         },
         {
+          "ID": 56468,
+          "Title": "Репродуктивная система"
+        },
+        {
           "ID": 56475,
           "Title": "Мышечная система"
         },
@@ -874,6 +1046,10 @@
         {
           "ID": 75788,
           "Title": "Скумбрии"
+        },
+        {
+          "ID": 89293,
+          "Title": "Рис"
         },
         {
           "ID": 89597,
@@ -900,6 +1076,10 @@
           "Title": "Финиковая пальма"
         },
         {
+          "ID": 174792,
+          "Title": "Физалис овощной"
+        },
+        {
           "ID": 177709,
           "Title": "Дыня"
         },
@@ -908,12 +1088,24 @@
           "Title": "Мышцы"
         },
         {
+          "ID": 184416,
+          "Title": "Гидрология"
+        },
+        {
           "ID": 206096,
           "Title": "Мантия моллюсков"
         },
         {
+          "ID": 271979,
+          "Title": "Земляника"
+        },
+        {
           "ID": 272011,
           "Title": "Земляника ананасная"
+        },
+        {
+          "ID": 284957,
+          "Title": "Хуй"
         },
         {
           "ID": 289773,
@@ -952,6 +1144,10 @@
           "Title": "Опорно-двигательная система"
         },
         {
+          "ID": 793917,
+          "Title": "Анаконда (значения)"
+        },
+        {
           "ID": 882007,
           "Title": "Цветная капуста"
         },
@@ -972,8 +1168,24 @@
           "Title": "Круговорот воды в природе"
         },
         {
+          "ID": 1110023,
+          "Title": "Мирт обыкновенный"
+        },
+        {
           "ID": 1282361,
           "Title": "Первичная сукцессия"
+        },
+        {
+          "ID": 1297218,
+          "Title": "Физалис перуанский"
+        },
+        {
+          "ID": 1332679,
+          "Title": "Колосок"
+        },
+        {
+          "ID": 1672068,
+          "Title": "Канталупа (растение)"
         },
         {
           "ID": 1714366,
@@ -988,8 +1200,16 @@
           "Title": "Атлантическая скумбрия"
         },
         {
+          "ID": 1816494,
+          "Title": "Репродуктивная система человека"
+        },
+        {
           "ID": 1874050,
           "Title": "Можжевельник ладанный"
+        },
+        {
+          "ID": 1917161,
+          "Title": "Рис посевной"
         },
         {
           "ID": 2090095,
@@ -1002,6 +1222,10 @@
         {
           "ID": 2413749,
           "Title": "Пенис у животных"
+        },
+        {
+          "ID": 2424186,
+          "Title": "Земляника лесная"
         },
         {
           "ID": 2483445,
@@ -1036,6 +1260,14 @@
           "Title": "Преимущественные ветры"
         },
         {
+          "ID": 3131461,
+          "Title": "Тыква гигантская"
+        },
+        {
+          "ID": 3408108,
+          "Title": "Ставриды"
+        },
+        {
           "ID": 3683860,
           "Title": "Ель Энгельмана"
         },
@@ -1046,6 +1278,10 @@
         {
           "ID": 3942480,
           "Title": "Белый тигр"
+        },
+        {
+          "ID": 4022940,
+          "Title": "Пшеница мягкая"
         },
         {
           "ID": 4233135,
@@ -1082,6 +1318,10 @@
         {
           "ID": 7453227,
           "Title": "Сосна островная"
+        },
+        {
+          "ID": 7672105,
+          "Title": "Южноазиатская тропическая скумбрия"
         }
       ]
     },
@@ -1089,6 +1329,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 16884,
+          "Title": "Категория:Жизнь"
+        },
         {
           "ID": 20276,
           "Title": "Категория:Персонажи фильмов"
@@ -1098,8 +1342,16 @@
           "Title": "Категория:Быт"
         },
         {
+          "ID": 51005,
+          "Title": "Категория:Персоналии по алфавиту"
+        },
+        {
           "ID": 54337,
           "Title": "Категория:Фамилии"
+        },
+        {
+          "ID": 194657,
+          "Title": "Категория:Личность"
         },
         {
           "ID": 201758,
@@ -1116,6 +1368,22 @@
         {
           "ID": 304943,
           "Title": "Категория:Люди"
+        },
+        {
+          "ID": 1521416,
+          "Title": "Категория:Биографы"
+        },
+        {
+          "ID": 1528424,
+          "Title": "Категория:Психология личности"
+        },
+        {
+          "ID": 2492947,
+          "Title": "Категория:Биографии"
+        },
+        {
+          "ID": 7707912,
+          "Title": "Категория:Биография (жанр)"
         }
       ],
       "Articles": [
@@ -1296,6 +1564,10 @@
           "Title": "Брейвик, Андерс Беринг"
         },
         {
+          "ID": 3484724,
+          "Title": "Очень голодная гусеница"
+        },
+        {
           "ID": 3507608,
           "Title": "Росс, Боб"
         },
@@ -1400,8 +1672,20 @@
           "Title": "Счастье"
         },
         {
+          "ID": 238100,
+          "Title": "Хит"
+        },
+        {
+          "ID": 1259154,
+          "Title": "Радость"
+        },
+        {
           "ID": 2094148,
           "Title": "Эффект Даннинга — Крюгера"
+        },
+        {
+          "ID": 4219400,
+          "Title": "Алегрия"
         },
         {
           "ID": 6196345,
@@ -1486,6 +1770,10 @@
         {
           "ID": 3420041,
           "Title": "Категория:Законы"
+        },
+        {
+          "ID": 4550692,
+          "Title": "Категория:Международные межправительственные организации"
         }
       ],
       "Articles": [
@@ -1632,6 +1920,10 @@
         {
           "ID": 386994,
           "Title": "Тартуский университет"
+        },
+        {
+          "ID": 393724,
+          "Title": "Траст"
         },
         {
           "ID": 401541,
@@ -2268,6 +2560,10 @@
           "Title": "Категория:Электроника"
         },
         {
+          "ID": 10275,
+          "Title": "Категория:Базы данных"
+        },
+        {
           "ID": 11755,
           "Title": "Категория:Дизайн"
         },
@@ -2288,6 +2584,10 @@
           "Title": "Категория:История технологий"
         },
         {
+          "ID": 402009,
+          "Title": "Категория:Управление данными"
+        },
+        {
           "ID": 1473094,
           "Title": "Категория:Военные технологии"
         },
@@ -2298,6 +2598,10 @@
         {
           "ID": 1543711,
           "Title": "Категория:Хронология технологий"
+        },
+        {
+          "ID": 2619013,
+          "Title": "Категория:Компьютеры"
         },
         {
           "ID": 2751372,
