--- a/nationalization/internal/languages/sco.json
+++ b/nationalization/internal/languages/sco.json
@@ -14,12 +14,32 @@
           "Title": "Category:Habbies"
         },
         {
+          "ID": 6481,
+          "Title": "Category:Airt"
+        },
+        {
+          "ID": 7859,
+          "Title": "Category:Colours"
+        },
+        {
           "ID": 14414,
           "Title": "Category:Muisical groups"
         },
         {
+          "ID": 21005,
+          "Title": "Category:Sports bi teep"
+        },
+        {
           "ID": 68993,
           "Title": "Category:Fuids"
+        },
+        {
+          "ID": 70247,
+          "Title": "Category:Colour"
+        },
+        {
+          "ID": 70412,
+          "Title": "Category:Leisur"
         },
         {
           "ID": 70413,
@@ -124,6 +144,26 @@
           "Title": "Ice cream"
         },
         {
+          "ID": 64796,
+          "Title": "Coffea"
+        },
+        {
+          "ID": 65185,
+          "Title": "Theobroma cacao"
+        },
+        {
+          "ID": 81611,
+          "Title": "Domestic pig"
+        },
+        {
+          "ID": 81614,
+          "Title": "Wild boar"
+        },
+        {
+          "ID": 81617,
+          "Title": "Pig"
+        },
+        {
           "ID": 82577,
           "Title": "Pasta"
         },
@@ -148,6 +188,10 @@
           "Title": "Realism (airts)"
         },
         {
+          "ID": 133845,
+          "Title": "Egg"
+        },
+        {
           "ID": 135758,
           "Title": "Chicken tikka masala"
         },
@@ -158,6 +202,10 @@
         {
           "ID": 143090,
           "Title": "Taco"
+        },
+        {
+          "ID": 143735,
+          "Title": "Oral sex"
         },
         {
           "ID": 149265,
@@ -190,6 +238,10 @@
         {
           "ID": 163338,
           "Title": "Eurovision Sang Contest 2017"
+        },
+        {
+          "ID": 171909,
+          "Title": "Tairt"
         },
         {
           "ID": 179469,
@@ -232,8 +284,16 @@
           "Title": "Paris"
         },
         {
+          "ID": 4567,
+          "Title": "Australie"
+        },
+        {
           "ID": 4572,
           "Title": "Canberra"
+        },
+        {
+          "ID": 8944,
+          "Title": "Human"
         },
         {
           "ID": 10934,
@@ -288,6 +348,10 @@
         {
           "ID": 204089,
           "Title": "Category:Halthcare thrifts"
+        },
+        {
+          "ID": 204091,
+          "Title": "Category:Heal care"
         }
       ]
     },
@@ -298,6 +362,10 @@
         {
           "ID": 18725,
           "Title": "Category:History bi kintra"
+        },
+        {
+          "ID": 18726,
+          "Title": "Category:History bi location"
         },
         {
           "ID": 19420,
@@ -420,6 +488,10 @@
           "Title": "Category:Naitural sciences"
         },
         {
+          "ID": 67758,
+          "Title": "Category:Scienteefic disciplines"
+        },
+        {
           "ID": 70313,
           "Title": "Category:Fauna bi continent"
         },
@@ -462,6 +534,10 @@
           "Title": "Flamingo"
         },
         {
+          "ID": 62416,
+          "Title": "Hydrology"
+        },
+        {
           "ID": 62633,
           "Title": "Lemon"
         },
@@ -476,6 +552,10 @@
         {
           "ID": 64877,
           "Title": "Watter cycle"
+        },
+        {
+          "ID": 66761,
+          "Title": "Fragaria vesca"
         },
         {
           "ID": 74520,
@@ -500,6 +580,14 @@
         {
           "ID": 126524,
           "Title": "Suspension (chemistry)"
+        },
+        {
+          "ID": 133456,
+          "Title": "Reproductive seestem"
+        },
+        {
+          "ID": 133459,
+          "Title": "Sex organ"
         },
         {
           "ID": 133535,
@@ -566,6 +654,10 @@
         {
           "ID": 47716,
           "Title": "Category:Weemen"
+        },
+        {
+          "ID": 70416,
+          "Title": "Category:Life"
         },
         {
           "ID": 88491,
@@ -766,6 +858,10 @@
           "Title": "Faith"
         },
         {
+          "ID": 89597,
+          "Title": "Belief"
+        },
+        {
           "ID": 94621,
           "Title": "Happiness"
         },
@@ -830,6 +926,10 @@
           "Title": "Category:Society"
         },
         {
+          "ID": 70418,
+          "Title": "Category:Humanities"
+        },
+        {
           "ID": 70419,
           "Title": "Category:Social sciences"
         },
@@ -840,6 +940,10 @@
         {
           "ID": 146996,
           "Title": "Category:Feminism"
+        },
+        {
+          "ID": 201973,
+          "Title": "Category:Intergovrenmental organisations"
         },
         {
           "ID": 202004,
@@ -1062,6 +1166,10 @@
           "Title": "Category:Transport"
         },
         {
+          "ID": 6379,
+          "Title": "Category:Computers"
+        },
+        {
           "ID": 6419,
           "Title": "Category:Ingineerin"
         },
@@ -1104,6 +1212,10 @@
         {
           "ID": 162048,
           "Title": "Category:History o technology"
+        },
+        {
+          "ID": 203289,
+          "Title": "Category:Data management"
         }
       ],
       "Articles": [
