--- a/nationalization/internal/languages/sh.json
+++ b/nationalization/internal/languages/sh.json
@@ -26,6 +26,10 @@
           "Title": "Kategorija:Kultura"
         },
         {
+          "ID": 46980,
+          "Title": "Kategorija:Boje"
+        },
+        {
           "ID": 47004,
           "Title": "Kategorija:Hrana"
         },
@@ -42,6 +46,10 @@
           "Title": "Kategorija:Hobi"
         },
         {
+          "ID": 81184,
+          "Title": "Kategorija:Sportovi"
+        },
+        {
           "ID": 128626,
           "Title": "Kategorija:Zabava"
         },
@@ -50,8 +58,20 @@
           "Title": "Kategorija:Rekreacija"
         },
         {
+          "ID": 157219,
+          "Title": "Kategorija:Dokolica"
+        },
+        {
           "ID": 170652,
           "Title": "Kategorija:Kuhinja"
+        },
+        {
+          "ID": 1477842,
+          "Title": "Kategorija:Gastronomija"
+        },
+        {
+          "ID": 4029194,
+          "Title": "Kategorija:Vježbanje"
         }
       ],
       "Articles": [
@@ -78,6 +98,10 @@
         {
           "ID": 2864,
           "Title": "Kava"
+        },
+        {
+          "ID": 3711,
+          "Title": "Svinja"
         },
         {
           "ID": 25101,
@@ -108,12 +132,28 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 47563,
+          "Title": "Jaje"
+        },
+        {
+          "ID": 59618,
+          "Title": "Divlja svinja"
+        },
+        {
+          "ID": 60146,
+          "Title": "Oralni seks"
+        },
+        {
           "ID": 66945,
           "Title": "Stvarnost"
         },
         {
           "ID": 67808,
           "Title": "Realizam"
+        },
+        {
+          "ID": 70547,
+          "Title": "Kakaovac"
         },
         {
           "ID": 77957,
@@ -184,12 +224,20 @@
           "Title": "Bigfoot"
         },
         {
+          "ID": 252119,
+          "Title": "Sanjke"
+        },
+        {
           "ID": 256627,
           "Title": "Giuditta Pasta"
         },
         {
           "ID": 1228480,
           "Title": "The World Factbook"
+        },
+        {
+          "ID": 1947379,
+          "Title": "Domaća svinja"
         },
         {
           "ID": 3552166,
@@ -210,6 +258,10 @@
         {
           "ID": 4052996,
           "Title": "Pita"
+        },
+        {
+          "ID": 4515722,
+          "Title": "Band (razvrstavanje)"
         },
         {
           "ID": 4537463,
@@ -264,8 +316,16 @@
           "Title": "Pariz"
         },
         {
+          "ID": 3147,
+          "Title": "Australija"
+        },
+        {
           "ID": 4581,
           "Title": "Canberra"
+        },
+        {
+          "ID": 4745,
+          "Title": "Čovjek"
         },
         {
           "ID": 5535,
@@ -300,6 +360,10 @@
         {
           "ID": 66125,
           "Title": "Kategorija:Medicinske specijalnosti"
+        },
+        {
+          "ID": 87653,
+          "Title": "Kategorija:Zdravstvo"
         },
         {
           "ID": 158893,
@@ -440,6 +504,10 @@
           "Title": "Kategorija:Zoologija"
         },
         {
+          "ID": 13173,
+          "Title": "Kategorija:Znanost"
+        },
+        {
           "ID": 18608,
           "Title": "Kategorija:Nauka"
         },
@@ -490,6 +558,10 @@
           "Title": "Pšenica"
         },
         {
+          "ID": 3581,
+          "Title": "Reproduktivni sistem"
+        },
+        {
           "ID": 3583,
           "Title": "Penis"
         },
@@ -502,12 +574,20 @@
           "Title": "Vatra"
         },
         {
+          "ID": 15087,
+          "Title": "Hidrologija"
+        },
+        {
           "ID": 15708,
           "Title": "Majanski kalendar"
         },
         {
           "ID": 22684,
           "Title": "Mišićni sistem"
+        },
+        {
+          "ID": 30316,
+          "Title": "Kurac"
         },
         {
           "ID": 33012,
@@ -526,6 +606,10 @@
           "Title": "Mokraća"
         },
         {
+          "ID": 59629,
+          "Title": "Jagoda"
+        },
+        {
           "ID": 60365,
           "Title": "Mišići"
         },
@@ -540,6 +624,14 @@
         {
           "ID": 67828,
           "Title": "Skuša"
+        },
+        {
+          "ID": 100924,
+          "Title": "Spolni organi"
+        },
+        {
+          "ID": 122483,
+          "Title": "Šumska jagoda"
         },
         {
           "ID": 156082,
@@ -560,6 +652,10 @@
         {
           "ID": 256675,
           "Title": "Ananas"
+        },
+        {
+          "ID": 1194663,
+          "Title": "Mirta"
         },
         {
           "ID": 1337019,
@@ -600,6 +696,14 @@
           "Title": "Kategorija:Prezimena"
         },
         {
+          "ID": 95395,
+          "Title": "Kategorija:Biografske knjige"
+        },
+        {
+          "ID": 98574,
+          "Title": "Kategorija:Život"
+        },
+        {
           "ID": 157220,
           "Title": "Kategorija:Svakodnevica"
         },
@@ -614,6 +718,14 @@
         {
           "ID": 259718,
           "Title": "Kategorija:Filmski likovi"
+        },
+        {
+          "ID": 3554549,
+          "Title": "Kategorija:Biografija"
+        },
+        {
+          "ID": 3554550,
+          "Title": "Kategorija:Biografska djela"
         }
       ],
       "Articles": [
@@ -818,6 +930,10 @@
           "Title": "Sreća"
         },
         {
+          "ID": 77866,
+          "Title": "Vjerovanje"
+        },
+        {
           "ID": 106733,
           "Title": "Vjera"
         },
@@ -828,6 +944,10 @@
         {
           "ID": 1285147,
           "Title": "Činjenica"
+        },
+        {
+          "ID": 1588263,
+          "Title": "Hit (razvrstavanje)"
         },
         {
           "ID": 4617904,
@@ -1246,6 +1366,10 @@
           "Title": "Kategorija:Internet"
         },
         {
+          "ID": 26906,
+          "Title": "Kategorija:Tehnika"
+        },
+        {
           "ID": 46561,
           "Title": "Kategorija:Tehnologija"
         },
@@ -1256,6 +1380,18 @@
         {
           "ID": 82550,
           "Title": "Kategorija:Računanje"
+        },
+        {
+          "ID": 222788,
+          "Title": "Kategorija:Upravljanje podacima"
+        },
+        {
+          "ID": 237870,
+          "Title": "Kategorija:Računari"
+        },
+        {
+          "ID": 265710,
+          "Title": "Kategorija:Baza podataka"
         },
         {
           "ID": 624193,
