--- a/nationalization/internal/languages/sr.json
+++ b/nationalization/internal/languages/sr.json
@@ -6,6 +6,10 @@
       "Title": "Culture and the arts",
       "Categories": [
         {
+          "ID": 8871,
+          "Title": "Категорија:Спортови"
+        },
+        {
           "ID": 12521,
           "Title": "Категорија:Уметност"
         },
@@ -42,6 +46,10 @@
           "Title": "Категорија:Филмови"
         },
         {
+          "ID": 31520,
+          "Title": "Категорија:Боје"
+        },
+        {
           "ID": 76565,
           "Title": "Категорија:Рекреација"
         },
@@ -52,6 +60,14 @@
         {
           "ID": 118706,
           "Title": "Категорија:Храна и пиће"
+        },
+        {
+          "ID": 446915,
+          "Title": "Категорија:Gastronomija"
+        },
+        {
+          "ID": 583684,
+          "Title": "Категорија:Вежбање"
         }
       ],
       "Articles": [
@@ -80,6 +96,10 @@
           "Title": "Кафа"
         },
         {
+          "ID": 20069,
+          "Title": "Какаовац"
+        },
+        {
           "ID": 25362,
           "Title": "Хогвортс"
         },
@@ -88,16 +108,32 @@
           "Title": "Чоколада"
         },
         {
+          "ID": 34353,
+          "Title": "Свиња"
+        },
+        {
           "ID": 42350,
           "Title": "Хлеб"
+        },
+        {
+          "ID": 61879,
+          "Title": "Музички састав"
         },
         {
           "ID": 64333,
           "Title": "Realizam (filozofija)"
         },
         {
+          "ID": 66050,
+          "Title": "Орални секс"
+        },
+        {
           "ID": 75449,
           "Title": "Чудовиште из Лох Неса"
+        },
+        {
+          "ID": 81401,
+          "Title": "Азима"
         },
         {
           "ID": 81819,
@@ -108,8 +144,20 @@
           "Title": "Лед зепелин"
         },
         {
+          "ID": 115432,
+          "Title": "Divlja svinja"
+        },
+        {
+          "ID": 116458,
+          "Title": "Кафа (биљка)"
+        },
+        {
           "ID": 116636,
           "Title": "AC/DC"
+        },
+        {
+          "ID": 119424,
+          "Title": "Јаје"
         },
         {
           "ID": 133894,
@@ -148,6 +196,10 @@
           "Title": "Бакингамска палата"
         },
         {
+          "ID": 216773,
+          "Title": "Домаћа свиња"
+        },
+        {
           "ID": 219693,
           "Title": "Списак места у Харију Потеру"
         },
@@ -160,8 +212,16 @@
           "Title": "Стварност"
         },
         {
+          "ID": 395975,
+          "Title": "Википедија на астуријанском језику"
+        },
+        {
           "ID": 398498,
           "Title": "Такос"
+        },
+        {
+          "ID": 421652,
+          "Title": "Sanke"
         },
         {
           "ID": 425552,
@@ -272,8 +332,16 @@
       ],
       "Articles": [
         {
+          "ID": 969,
+          "Title": "Аустралија"
+        },
+        {
           "ID": 1949,
           "Title": "Канбера"
+        },
+        {
+          "ID": 2240,
+          "Title": "Човек"
         },
         {
           "ID": 6045,
@@ -294,6 +362,10 @@
         {
           "ID": 144640,
           "Title": "Квинсленд"
+        },
+        {
+          "ID": 186920,
+          "Title": "Razuman čovek"
         },
         {
           "ID": 770496,
@@ -320,6 +392,10 @@
         {
           "ID": 83220,
           "Title": "Категорија:Хигијена"
+        },
+        {
+          "ID": 185431,
+          "Title": "Категорија:Здравство"
         },
         {
           "ID": 460963,
@@ -494,6 +570,10 @@
           "Title": "Наранџа"
         },
         {
+          "ID": 33418,
+          "Title": "Хидрологија"
+        },
+        {
           "ID": 33802,
           "Title": "Кукуруз"
         },
@@ -550,6 +630,14 @@
           "Title": "Ananas comosus"
         },
         {
+          "ID": 153430,
+          "Title": "Репродуктивни систем"
+        },
+        {
+          "ID": 155149,
+          "Title": "Јагода"
+        },
+        {
           "ID": 158213,
           "Title": "Зелена анаконда"
         },
@@ -560,6 +648,10 @@
         {
           "ID": 177576,
           "Title": "Пшеница"
+        },
+        {
+          "ID": 218792,
+          "Title": "Kurac"
         },
         {
           "ID": 241967,
@@ -582,8 +674,16 @@
           "Title": "Мајански календар"
         },
         {
+          "ID": 586270,
+          "Title": "Шумска јагода"
+        },
+        {
           "ID": 623363,
           "Title": "Лимета"
+        },
+        {
+          "ID": 905591,
+          "Title": "Полни орган"
         },
         {
           "ID": 1333744,
@@ -608,6 +708,14 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 7115,
+          "Title": "Категорија:Биографије"
+        },
+        {
+          "ID": 19973,
+          "Title": "Категорија:Живот"
+        },
+        {
           "ID": 22517,
           "Title": "Категорија:Људи"
         },
@@ -620,6 +728,10 @@
           "Title": "Категорија:Лични живот"
         },
         {
+          "ID": 76441,
+          "Title": "Категорија:Личност"
+        },
+        {
           "ID": 76460,
           "Title": "Категорија:Сопство"
         },
@@ -628,8 +740,16 @@
           "Title": "Категорија:Жене"
         },
         {
+          "ID": 137062,
+          "Title": "Категорија:Теорије личности"
+        },
+        {
           "ID": 306830,
           "Title": "Категорија:Филмски ликови"
+        },
+        {
+          "ID": 4003825,
+          "Title": "Категорија:Биографије (књижевна врста)"
         }
       ],
       "Articles": [
@@ -834,6 +954,10 @@
           "Title": "Вера"
         },
         {
+          "ID": 115202,
+          "Title": "Веровање"
+        },
+        {
           "ID": 140628,
           "Title": "Срећа"
         },
@@ -844,6 +968,10 @@
         {
           "ID": 619986,
           "Title": "Daning—Krugerov efekt"
+        },
+        {
+          "ID": 791945,
+          "Title": "Хит"
         },
         {
           "ID": 932674,
@@ -908,6 +1036,10 @@
         {
           "ID": 691904,
           "Title": "Категорија:Закони"
+        },
+        {
+          "ID": 1575924,
+          "Title": "Категорија:Хуманистика"
         },
         {
           "ID": 3889312,
@@ -1134,6 +1266,10 @@
           "Title": "Категорија:Интернет"
         },
         {
+          "ID": 19554,
+          "Title": "Категорија:Рачунари"
+        },
+        {
           "ID": 19965,
           "Title": "Категорија:Технологија"
         },
@@ -1158,8 +1294,16 @@
           "Title": "Категорија:Рачунање"
         },
         {
+          "ID": 168508,
+          "Title": "Категорија:База података"
+        },
+        {
           "ID": 456214,
           "Title": "Категорија:Технологија по типу"
+        },
+        {
+          "ID": 474146,
+          "Title": "Категорија:Управљање подацима"
         }
       ],
       "Articles": [
