--- a/nationalization/internal/languages/th.json
+++ b/nationalization/internal/languages/th.json
@@ -38,6 +38,14 @@
           "Title": "หมวดหมู่:นันทนาการ"
         },
         {
+          "ID": 13835,
+          "Title": "หมวดหมู่:สี"
+        },
+        {
+          "ID": 17901,
+          "Title": "หมวดหมู่:เทคนิคการทำอาหาร"
+        },
+        {
           "ID": 19467,
           "Title": "หมวดหมู่:โภชนาการ"
         },
@@ -46,12 +54,32 @@
           "Title": "หมวดหมู่:กลุ่มดนตรี"
         },
         {
+          "ID": 82080,
+          "Title": "หมวดหมู่:กีฬาแบ่งตามประเภท"
+        },
+        {
           "ID": 230770,
           "Title": "หมวดหมู่:การครัว"
         },
         {
+          "ID": 334793,
+          "Title": "หมวดหมู่:การออกกำลังกาย"
+        },
+        {
+          "ID": 498377,
+          "Title": "หมวดหมู่:ผลิตภัณฑ์อาหาร"
+        },
+        {
+          "ID": 507096,
+          "Title": "หมวดหมู่:วิทยาการทำอาหาร"
+        },
+        {
           "ID": 563462,
           "Title": "หมวดหมู่:อาหารแบ่งตามส่วนประกอบหลัก"
+        },
+        {
+          "ID": 868649,
+          "Title": "หมวดหมู่:รงคศาสตร์"
         }
       ],
       "Articles": [
@@ -74,6 +102,10 @@
         {
           "ID": 5802,
           "Title": "เบียร์"
+        },
+        {
+          "ID": 8582,
+          "Title": "หมู"
         },
         {
           "ID": 8808,
@@ -102,6 +134,10 @@
         {
           "ID": 44937,
           "Title": "ไข่ต้ม"
+        },
+        {
+          "ID": 46277,
+          "Title": "โรตี"
         },
         {
           "ID": 46817,
@@ -144,6 +180,14 @@
           "Title": "พาสตา"
         },
         {
+          "ID": 112705,
+          "Title": "หมูป่า"
+        },
+        {
+          "ID": 132035,
+          "Title": "วิกิพีเดียภาษาอัสตูเรียส"
+        },
+        {
           "ID": 155810,
           "Title": "พระราชวังบักกิงแฮม"
         },
@@ -170,6 +214,10 @@
         {
           "ID": 216551,
           "Title": "ข้าวผัด"
+        },
+        {
+          "ID": 218871,
+          "Title": "การร่วมเพศทางปาก"
         },
         {
           "ID": 219152,
@@ -264,6 +312,10 @@
           "Title": "เดอะวอนเทด"
         },
         {
+          "ID": 596064,
+          "Title": "สกุลกาแฟ"
+        },
+        {
           "ID": 610865,
           "Title": "สัจนิยม (ปรัชญา)"
         },
@@ -336,8 +388,16 @@
           "Title": "น้ำปรุงรส"
         },
         {
+          "ID": 889805,
+          "Title": "โกโก้"
+        },
+        {
           "ID": 909407,
           "Title": "คุกกี้เสี่ยงทาย"
+        },
+        {
+          "ID": 924164,
+          "Title": "งานอ้างอิง"
         },
         {
           "ID": 932134,
@@ -412,6 +472,14 @@
           "Title": "ประเทศพม่า"
         },
         {
+          "ID": 2274,
+          "Title": "ประเทศออสเตรเลีย"
+        },
+        {
+          "ID": 5920,
+          "Title": "มนุษย์"
+        },
+        {
           "ID": 5951,
           "Title": "ปารีส"
         },
@@ -464,6 +532,10 @@
         {
           "ID": 433771,
           "Title": "หมวดหมู่:บุคลากรทางบริการสุขภาพ"
+        },
+        {
+          "ID": 433773,
+          "Title": "หมวดหมู่:บริการสุขภาพ"
         }
       ]
     },
@@ -486,6 +558,10 @@
         {
           "ID": 349534,
           "Title": "หมวดหมู่:การเลือกตั้งแบ่งตามปี"
+        },
+        {
+          "ID": 538439,
+          "Title": "หมวดหมู่:ประวัติศาสตร์แบ่งตามที่ตั้ง"
         }
       ],
       "Articles": [
@@ -624,6 +700,10 @@
           "Title": "หมวดหมู่:ภัยพิบัติ"
         },
         {
+          "ID": 243619,
+          "Title": "หมวดหมู่:สาขาวิชาวิทยาศาสตร์"
+        },
+        {
           "ID": 243744,
           "Title": "หมวดหมู่:วิทยาศาสตร์กายภาพ"
         },
@@ -654,6 +734,10 @@
           "Title": "ข้าว"
         },
         {
+          "ID": 25167,
+          "Title": "ควย"
+        },
+        {
           "ID": 27178,
           "Title": "ไฟ"
         },
@@ -672,6 +756,10 @@
         {
           "ID": 38305,
           "Title": "การสำเร็จความใคร่ด้วยตนเอง"
+        },
+        {
+          "ID": 38417,
+          "Title": "อวัยวะเพศ"
         },
         {
           "ID": 39688,
@@ -738,8 +826,28 @@
           "Title": "มะเขือเทศราชินี"
         },
         {
+          "ID": 253636,
+          "Title": "ปลาลัง"
+        },
+        {
+          "ID": 285134,
+          "Title": "อุทกวิทยา"
+        },
+        {
+          "ID": 310319,
+          "Title": "โทงเทงฝรั่ง"
+        },
+        {
+          "ID": 358325,
+          "Title": "แคนตาลูป"
+        },
+        {
           "ID": 360406,
           "Title": "แตงไทย"
+        },
+        {
+          "ID": 383235,
+          "Title": "ระบบสืบพันธุ์"
         },
         {
           "ID": 396098,
@@ -766,6 +874,10 @@
           "Title": "สกุลฟีนิกซ์"
         },
         {
+          "ID": 540797,
+          "Title": "ปลาซาบะ"
+        },
+        {
           "ID": 683155,
           "Title": "นกบูบี"
         },
@@ -784,6 +896,10 @@
         {
           "ID": 810384,
           "Title": "องคชาตของมนุษย์"
+        },
+        {
+          "ID": 831919,
+          "Title": "เมอร์เทิล"
         },
         {
           "ID": 856053,
@@ -806,6 +922,14 @@
         {
           "ID": 1889,
           "Title": "หมวดหมู่:บุคคล"
+        },
+        {
+          "ID": 19473,
+          "Title": "หมวดหมู่:ชีวิต"
+        },
+        {
+          "ID": 20511,
+          "Title": "หมวดหมู่:ชีวประวัติ"
         },
         {
           "ID": 45138,
@@ -1022,6 +1146,10 @@
           "Title": "ความงาม"
         },
         {
+          "ID": 33526,
+          "Title": "ความเชื่อ"
+        },
+        {
           "ID": 208253,
           "Title": "ความสุข"
         },
@@ -1084,6 +1212,14 @@
         {
           "ID": 11505,
           "Title": "หมวดหมู่:สิทธิ"
+        },
+        {
+          "ID": 229023,
+          "Title": "หมวดหมู่:มนุษยศาสตร์"
+        },
+        {
+          "ID": 416082,
+          "Title": "หมวดหมู่:องค์การระหว่างรัฐบาล"
         }
       ],
       "Articles": [
@@ -1466,6 +1602,10 @@
           "Title": "หมวดหมู่:วิทยาการคอมพิวเตอร์"
         },
         {
+          "ID": 4269,
+          "Title": "หมวดหมู่:คอมพิวเตอร์"
+        },
+        {
           "ID": 5169,
           "Title": "หมวดหมู่:เทคโนโลยี"
         },
@@ -1492,6 +1632,14 @@
         {
           "ID": 18100,
           "Title": "หมวดหมู่:ยุทโธปกรณ์"
+        },
+        {
+          "ID": 19572,
+          "Title": "หมวดหมู่:ฐานข้อมูล"
+        },
+        {
+          "ID": 83019,
+          "Title": "หมวดหมู่:การจัดการข้อมูล"
         },
         {
           "ID": 85724,
