--- a/nationalization/internal/languages/tr.json
+++ b/nationalization/internal/languages/tr.json
@@ -42,12 +42,32 @@
           "Title": "Kategori:Yemek içmek"
         },
         {
+          "ID": 16469,
+          "Title": "Kategori:Renkler"
+        },
+        {
           "ID": 25373,
           "Title": "Kategori:Beslenme"
         },
         {
           "ID": 66194,
           "Title": "Kategori:Yemekler"
+        },
+        {
+          "ID": 67768,
+          "Title": "Kategori:Renk"
+        },
+        {
+          "ID": 78372,
+          "Title": "Kategori:Sporlar"
+        },
+        {
+          "ID": 83733,
+          "Title": "Kategori:Gastronomi"
+        },
+        {
+          "ID": 134636,
+          "Title": "Kategori:Egzersiz"
         },
         {
           "ID": 444017,
@@ -60,6 +80,14 @@
         {
           "ID": 1016374,
           "Title": "Kategori:Rekreasyon"
+        },
+        {
+          "ID": 1016420,
+          "Title": "Kategori:Serbest zaman"
+        },
+        {
+          "ID": 2167128,
+          "Title": "Kategori:Pişirme yöntemleri"
         }
       ],
       "Articles": [
@@ -96,6 +124,14 @@
           "Title": "Çikolata"
         },
         {
+          "ID": 24184,
+          "Title": "Peksimet"
+        },
+        {
+          "ID": 26916,
+          "Title": "Kakao"
+        },
+        {
           "ID": 40333,
           "Title": "Hogwarts"
         },
@@ -108,12 +144,28 @@
           "Title": "Makarna"
         },
         {
+          "ID": 61745,
+          "Title": "Domuz"
+        },
+        {
+          "ID": 68977,
+          "Title": "Bando"
+        },
+        {
           "ID": 70807,
           "Title": "Gerçeklik"
         },
         {
           "ID": 71036,
           "Title": "Çizen Eller"
+        },
+        {
+          "ID": 79608,
+          "Title": "Pastırma"
+        },
+        {
+          "ID": 84661,
+          "Title": "Yaban domuzu"
         },
         {
           "ID": 84715,
@@ -216,6 +268,14 @@
           "Title": "Nokul"
         },
         {
+          "ID": 551077,
+          "Title": "Yumurta (biyoloji)"
+        },
+        {
+          "ID": 580725,
+          "Title": "Asturyasça Vikipedi"
+        },
+        {
           "ID": 685939,
           "Title": "Mordred"
         },
@@ -248,6 +308,10 @@
           "Title": "The Wanted"
         },
         {
+          "ID": 1451205,
+          "Title": "Etimek"
+        },
+        {
           "ID": 1472409,
           "Title": "Taco"
         },
@@ -260,12 +324,20 @@
           "Title": "Loch Ness Canavarı"
         },
         {
+          "ID": 1533825,
+          "Title": "Kızak"
+        },
+        {
           "ID": 1544270,
           "Title": "Roma dondurması"
         },
         {
           "ID": 1567084,
           "Title": "Felsefi gerçekçilik"
+        },
+        {
+          "ID": 1586335,
+          "Title": "Zencefil gazozu"
         },
         {
           "ID": 1601856,
@@ -280,6 +352,10 @@
           "Title": "Flappy Bird"
         },
         {
+          "ID": 1749070,
+          "Title": "Yassı ekmek"
+        },
+        {
           "ID": 1796537,
           "Title": "PK (film)"
         },
@@ -290,6 +366,10 @@
         {
           "ID": 2114239,
           "Title": "Muzlu ekmek"
+        },
+        {
+          "ID": 2129759,
+          "Title": "Evcil domuz"
         },
         {
           "ID": 2199370,
@@ -330,6 +410,10 @@
         {
           "ID": 2220368,
           "Title": "Light bira"
+        },
+        {
+          "ID": 2261114,
+          "Title": "Yūrei"
         },
         {
           "ID": 2268818,
@@ -436,6 +520,10 @@
       ],
       "Articles": [
         {
+          "ID": 4375,
+          "Title": "Avustralya"
+        },
+        {
           "ID": 5062,
           "Title": "Paris"
         },
@@ -446,6 +534,10 @@
         {
           "ID": 28844,
           "Title": "Myanmar"
+        },
+        {
+          "ID": 38391,
+          "Title": "İnsan"
         },
         {
           "ID": 51109,
@@ -500,6 +592,10 @@
         {
           "ID": 953879,
           "Title": "Kategori:Tıbbi meslekler"
+        },
+        {
+          "ID": 1501432,
+          "Title": "Kategori:Sağlık hizmetleri"
         }
       ],
       "Articles": [
@@ -528,6 +624,10 @@
         {
           "ID": 621084,
           "Title": "Kategori:Olaylar"
+        },
+        {
+          "ID": 716104,
+          "Title": "Kategori:Yerlerine göre tarih"
         },
         {
           "ID": 885487,
@@ -674,6 +774,10 @@
           "Title": "Kategori:Doğa bilimleri"
         },
         {
+          "ID": 370041,
+          "Title": "Kategori:Bilim dalları"
+        },
+        {
           "ID": 439481,
           "Title": "Kategori:Kıtalarına göre fauna"
         },
@@ -704,8 +808,20 @@
           "Title": "İnsan penisi"
         },
         {
+          "ID": 11463,
+          "Title": "İstavrit"
+        },
+        {
           "ID": 12087,
           "Title": "Domates"
+        },
+        {
+          "ID": 13338,
+          "Title": "Su bilimi"
+        },
+        {
+          "ID": 15696,
+          "Title": "Çilek"
         },
         {
           "ID": 23019,
@@ -748,6 +864,10 @@
           "Title": "Kas sistemi"
         },
         {
+          "ID": 76948,
+          "Title": "Üreme sistemi"
+        },
+        {
           "ID": 114433,
           "Title": "Ananas"
         },
@@ -768,12 +888,20 @@
           "Title": "Deve"
         },
         {
+          "ID": 179275,
+          "Title": "Cinsel organlar"
+        },
+        {
           "ID": 206689,
           "Title": "Çimlenme"
         },
         {
           "ID": 207481,
           "Title": "Sığın"
+        },
+        {
+          "ID": 237266,
+          "Title": "Helvacı kabağı"
         },
         {
           "ID": 279823,
@@ -824,6 +952,10 @@
           "Title": "Lycosidae"
         },
         {
+          "ID": 1277235,
+          "Title": "Altın çilek"
+        },
+        {
           "ID": 1357968,
           "Title": "Beyaz kaplan"
         },
@@ -846,6 +978,10 @@
         {
           "ID": 1768421,
           "Title": "Sula"
+        },
+        {
+          "ID": 2110907,
+          "Title": "Fragaria vesca"
         },
         {
           "ID": 2124364,
@@ -886,6 +1022,22 @@
           "Title": "Kategori:Kişiler"
         },
         {
+          "ID": 12529,
+          "Title": "Kategori:Yaşam"
+        },
+        {
+          "ID": 27293,
+          "Title": "Kategori:Biyografik kitaplar"
+        },
+        {
+          "ID": 64819,
+          "Title": "Kategori:Biyografi"
+        },
+        {
+          "ID": 92259,
+          "Title": "Kategori:Kişilik"
+        },
+        {
           "ID": 221485,
           "Title": "Kategori:Soyadları"
         },
@@ -900,6 +1052,14 @@
         {
           "ID": 1016425,
           "Title": "Kategori:Kişisel hayat"
+        },
+        {
+          "ID": 1702554,
+          "Title": "Kategori:Biyografik eserler"
+        },
+        {
+          "ID": 1737764,
+          "Title": "Kategori:Kişilik psikolojisi"
         }
       ],
       "Articles": [
@@ -1076,6 +1236,10 @@
           "Title": "Carl Friedrich Abel"
         },
         {
+          "ID": 1580987,
+          "Title": "Aç Tırtıl"
+        },
+        {
           "ID": 2048069,
           "Title": "Ted Cruz"
         },
@@ -1132,12 +1296,24 @@
           "Title": "İman"
         },
         {
+          "ID": 58481,
+          "Title": "İnanç"
+        },
+        {
           "ID": 122228,
           "Title": "Güzellik"
         },
         {
           "ID": 209156,
           "Title": "Mutluluk"
+        },
+        {
+          "ID": 654160,
+          "Title": "Sevinç"
+        },
+        {
+          "ID": 870959,
+          "Title": "Hit"
         },
         {
           "ID": 1453200,
@@ -1222,6 +1398,10 @@
         {
           "ID": 80649,
           "Title": "Kategori:Haklar"
+        },
+        {
+          "ID": 639882,
+          "Title": "Kategori:Beşeri bilimler"
         },
         {
           "ID": 885474,
@@ -1502,6 +1682,10 @@
           "Title": "Plymouth Üniversitesi"
         },
         {
+          "ID": 1005138,
+          "Title": "Tröst hukuku"
+        },
+        {
           "ID": 1005142,
           "Title": "Trust"
         },
@@ -1680,6 +1864,10 @@
       "Title": "Technology and applied sciences",
       "Categories": [
         {
+          "ID": 3494,
+          "Title": "Kategori:Bilgisayar"
+        },
+        {
           "ID": 6300,
           "Title": "Kategori:Teknoloji"
         },
@@ -1712,6 +1900,10 @@
           "Title": "Kategori:Tasarım"
         },
         {
+          "ID": 520720,
+          "Title": "Kategori:Veri yönetimi"
+        },
+        {
           "ID": 769813,
           "Title": "Kategori:Tiplerine göre teknoloji"
         },
@@ -1730,6 +1922,10 @@
         {
           "ID": 1457921,
           "Title": "Kategori:Teknoloji kronolojileri"
+        },
+        {
+          "ID": 2175344,
+          "Title": "Kategori:Veri tabanları"
         },
         {
           "ID": 2218427,
