--- a/nationalization/internal/languages/uk.json
+++ b/nationalization/internal/languages/uk.json
@@ -22,6 +22,10 @@
           "Title": "Категорія:Спорт"
         },
         {
+          "ID": 21459,
+          "Title": "Категорія:Види спорту"
+        },
+        {
           "ID": 22923,
           "Title": "Категорія:Фільми"
         },
@@ -30,8 +34,20 @@
           "Title": "Категорія:Захоплення"
         },
         {
+          "ID": 29052,
+          "Title": "Категорія:Харчові продукти"
+        },
+        {
           "ID": 41624,
           "Title": "Категорія:Кухня"
+        },
+        {
+          "ID": 50235,
+          "Title": "Категорія:Колір"
+        },
+        {
+          "ID": 50470,
+          "Title": "Категорія:Кольори"
         },
         {
           "ID": 52820,
@@ -46,12 +62,20 @@
           "Title": "Категорія:Музичні колективи"
         },
         {
+          "ID": 258217,
+          "Title": "Категорія:Дозвілля"
+        },
+        {
           "ID": 264148,
           "Title": "Категорія:Страви"
         },
         {
           "ID": 881991,
           "Title": "Категорія:Театральні вистави"
+        },
+        {
+          "ID": 1493233,
+          "Title": "Категорія:Гастрономія"
         },
         {
           "ID": 1526138,
@@ -100,6 +124,18 @@
           "Title": "Пиво"
         },
         {
+          "ID": 24080,
+          "Title": "Свиня дика"
+        },
+        {
+          "ID": 24082,
+          "Title": "Свиня свійська"
+        },
+        {
+          "ID": 26601,
+          "Title": "Яйце"
+        },
+        {
           "ID": 28498,
           "Title": "Led Zeppelin"
         },
@@ -144,12 +180,28 @@
           "Title": "AC/DC"
         },
         {
+          "ID": 71010,
+          "Title": "Какао"
+        },
+        {
           "ID": 104535,
           "Title": "Доброчесність"
         },
         {
+          "ID": 126027,
+          "Title": "Оральний секс"
+        },
+        {
+          "ID": 157021,
+          "Title": "Кава аравійська"
+        },
+        {
           "ID": 157187,
           "Title": "Рок-гурт"
+        },
+        {
+          "ID": 211304,
+          "Title": "Корж (хлібопродукт)"
         },
         {
           "ID": 212812,
@@ -158,6 +210,14 @@
         {
           "ID": 218779,
           "Title": "Sgt. Pepper's Lonely Hearts Club Band"
+        },
+        {
+          "ID": 258237,
+          "Title": "Кавове дерево"
+        },
+        {
+          "ID": 266468,
+          "Title": "Дійсність"
         },
         {
           "ID": 266469,
@@ -170,6 +230,10 @@
         {
           "ID": 300910,
           "Title": "Фарш"
+        },
+        {
+          "ID": 308626,
+          "Title": "Свиня (рід)"
         },
         {
           "ID": 350984,
@@ -208,8 +272,20 @@
           "Title": "Свинина"
         },
         {
+          "ID": 420612,
+          "Title": "Довідник"
+        },
+        {
+          "ID": 424964,
+          "Title": "Музичний колектив"
+        },
+        {
           "ID": 424965,
           "Title": "Музичний ансамбль"
+        },
+        {
+          "ID": 436642,
+          "Title": "Галета"
         },
         {
           "ID": 470964,
@@ -246,6 +322,10 @@
         {
           "ID": 699331,
           "Title": "Реалізм (філософія)"
+        },
+        {
+          "ID": 714153,
+          "Title": "Сани"
         },
         {
           "ID": 751143,
@@ -332,6 +412,10 @@
           "Title": "Безалкогольне пиво"
         },
         {
+          "ID": 1646539,
+          "Title": "Бастурма"
+        },
+        {
           "ID": 1660441,
           "Title": "Flappy bird"
         },
@@ -344,8 +428,16 @@
           "Title": "Pinus cembroides"
         },
         {
+          "ID": 1788449,
+          "Title": "Сухарі"
+        },
+        {
           "ID": 1792758,
           "Title": "Карбонара"
+        },
+        {
+          "ID": 1792760,
+          "Title": "Пекоріно"
         },
         {
           "ID": 1801002,
@@ -370,6 +462,10 @@
         {
           "ID": 1810644,
           "Title": "Б'єр-де-Гард"
+        },
+        {
+          "ID": 1873378,
+          "Title": "Тарт"
         },
         {
           "ID": 1883747,
@@ -404,12 +500,20 @@
           "Title": "Еспаньйол (соус)"
         },
         {
+          "ID": 2157830,
+          "Title": "Астурійська Вікіпедія"
+        },
+        {
           "ID": 2168081,
           "Title": "Пісенний конкурс Євробачення 2017"
         },
         {
           "ID": 2200961,
           "Title": "Пісенний конкурс Євробачення 2018"
+        },
+        {
+          "ID": 2256340,
+          "Title": "Реалізм (живопис)"
         },
         {
           "ID": 2289043,
@@ -430,6 +534,10 @@
         {
           "ID": 2768966,
           "Title": "Курка тікка масала"
+        },
+        {
+          "ID": 2773185,
+          "Title": "Пекоріно Романо"
         },
         {
           "ID": 2889233,
@@ -484,8 +592,16 @@
       ],
       "Articles": [
         {
+          "ID": 652,
+          "Title": "Людина розумна"
+        },
+        {
           "ID": 3765,
           "Title": "Париж"
+        },
+        {
+          "ID": 10144,
+          "Title": "Австралія"
         },
         {
           "ID": 10161,
@@ -506,6 +622,10 @@
         {
           "ID": 108574,
           "Title": "Канберра"
+        },
+        {
+          "ID": 171025,
+          "Title": "Людина"
         },
         {
           "ID": 1849202,
@@ -540,6 +660,10 @@
         {
           "ID": 274579,
           "Title": "Категорія:Спадкові захворювання"
+        },
+        {
+          "ID": 558886,
+          "Title": "Категорія:Охорона здоров'я"
         },
         {
           "ID": 1314000,
@@ -718,6 +842,10 @@
           "Title": "Категорія:Фізичні науки"
         },
         {
+          "ID": 1062211,
+          "Title": "Категорія:Наукові дисципліни"
+        },
+        {
           "ID": 1276430,
           "Title": "Категорія:Фауна за континентом"
         },
@@ -732,12 +860,24 @@
       ],
       "Articles": [
         {
+          "ID": 10990,
+          "Title": "Гідрологія"
+        },
+        {
           "ID": 11092,
           "Title": "Кругообіг води"
         },
         {
           "ID": 19876,
           "Title": "Скумбрія атлантична"
+        },
+        {
+          "ID": 20442,
+          "Title": "Ставрида"
+        },
+        {
+          "ID": 21186,
+          "Title": "Суниці"
         },
         {
           "ID": 22008,
@@ -752,12 +892,28 @@
           "Title": "Ананас"
         },
         {
+          "ID": 24752,
+          "Title": "Рис посівний"
+        },
+        {
+          "ID": 24822,
+          "Title": "Репродуктивна система"
+        },
+        {
           "ID": 24938,
           "Title": "Верблюд"
         },
         {
           "ID": 26291,
           "Title": "Пеніс"
+        },
+        {
+          "ID": 27648,
+          "Title": "Суниці лісові"
+        },
+        {
+          "ID": 33825,
+          "Title": "Статеві органи"
         },
         {
           "ID": 35287,
@@ -848,6 +1004,10 @@
           "Title": "Сеча"
         },
         {
+          "ID": 433221,
+          "Title": "Мирт звичайний"
+        },
+        {
           "ID": 549502,
           "Title": "Сім'яні залози"
         },
@@ -872,12 +1032,20 @@
           "Title": "Переважаючі вітри"
         },
         {
+          "ID": 791317,
+          "Title": "Канталуп"
+        },
+        {
           "ID": 969434,
           "Title": "Лось звичайний"
         },
         {
           "ID": 973617,
           "Title": "Вишеньки (помідори)"
+        },
+        {
+          "ID": 977492,
+          "Title": "Скумбрія"
         },
         {
           "ID": 993623,
@@ -944,8 +1112,16 @@
           "Title": "Проростання насіння"
         },
         {
+          "ID": 1944994,
+          "Title": "Анаконда (значення)"
+        },
+        {
           "ID": 1948965,
           "Title": "Материнка турецька"
+        },
+        {
+          "ID": 1955431,
+          "Title": "Пшениця м'яка"
         },
         {
           "ID": 2056455,
@@ -954,6 +1130,14 @@
         {
           "ID": 2057163,
           "Title": "Пирій наповнений"
+        },
+        {
+          "ID": 2161984,
+          "Title": "Томатільйо"
+        },
+        {
+          "ID": 2162506,
+          "Title": "Фізаліс перуанський"
         },
         {
           "ID": 2324444,
@@ -990,12 +1174,24 @@
           "Title": "Категорія:Персоналії"
         },
         {
+          "ID": 14392,
+          "Title": "Категорія:Психологія особистості"
+        },
+        {
           "ID": 41462,
           "Title": "Категорія:Побут"
         },
         {
+          "ID": 52817,
+          "Title": "Категорія:Особистість"
+        },
+        {
           "ID": 52818,
           "Title": "Категорія:Особисте життя"
+        },
+        {
+          "ID": 52843,
+          "Title": "Категорія:Життя"
         },
         {
           "ID": 59539,
@@ -1006,8 +1202,16 @@
           "Title": "Категорія:Прізвища"
         },
         {
+          "ID": 105167,
+          "Title": "Категорія:Персоналії за алфавітом"
+        },
+        {
           "ID": 160057,
           "Title": "Категорія:Персонажі фільмів"
+        },
+        {
+          "ID": 1440881,
+          "Title": "Категорія:Біографії"
         },
         {
           "ID": 1564515,
@@ -1252,8 +1456,20 @@
       ],
       "Articles": [
         {
+          "ID": 10726,
+          "Title": "Віра"
+        },
+        {
           "ID": 15445,
           "Title": "Факт"
+        },
+        {
+          "ID": 80481,
+          "Title": "Хіт"
+        },
+        {
+          "ID": 174713,
+          "Title": "Радість"
         },
         {
           "ID": 199765,
@@ -1274,6 +1490,10 @@
         {
           "ID": 670277,
           "Title": "Віра (релігійна)"
+        },
+        {
+          "ID": 1911749,
+          "Title": "Хіт (значення)"
         },
         {
           "ID": 3013163,
@@ -1750,6 +1970,10 @@
           "Title": "Гетеборзький університет"
         },
         {
+          "ID": 1532804,
+          "Title": "Довірча власність"
+        },
+        {
           "ID": 1589910,
           "Title": "Вірджинський університет"
         },
@@ -1936,6 +2160,10 @@
           "Title": "Категорія:Інформатика"
         },
         {
+          "ID": 13462,
+          "Title": "Категорія:Техніка"
+        },
+        {
           "ID": 13463,
           "Title": "Категорія:Транспорт"
         },
@@ -1950,6 +2178,10 @@
         {
           "ID": 16456,
           "Title": "Категорія:Військова техніка"
+        },
+        {
+          "ID": 20575,
+          "Title": "Категорія:Бази даних"
         },
         {
           "ID": 29277,
@@ -1972,6 +2204,10 @@
           "Title": "Категорія:Обчислювальна техніка"
         },
         {
+          "ID": 266117,
+          "Title": "Категорія:Комп'ютер"
+        },
+        {
           "ID": 438062,
           "Title": "Категорія:Технології за типом"
         },
@@ -1986,6 +2222,10 @@
         {
           "ID": 2077433,
           "Title": "Категорія:Хронологія технологій"
+        },
+        {
+          "ID": 2257912,
+          "Title": "Категорія:Управління даними"
         }
       ],
       "Articles": [
