--- a/nationalization/internal/languages/ur.json
+++ b/nationalization/internal/languages/ur.json
@@ -22,8 +22,16 @@
           "Title": "زمرہ:ثقافت"
         },
         {
+          "ID": 17806,
+          "Title": "زمرہ:رنگ"
+        },
+        {
           "ID": 34465,
           "Title": "زمرہ:فنیات"
+        },
+        {
+          "ID": 35136,
+          "Title": "زمرہ:فرصت"
         },
         {
           "ID": 36702,
@@ -38,8 +46,16 @@
           "Title": "زمرہ:غذائیت"
         },
         {
+          "ID": 37039,
+          "Title": "زمرہ:ورزش"
+        },
+        {
           "ID": 50327,
           "Title": "زمرہ:فلمیں"
+        },
+        {
+          "ID": 60946,
+          "Title": "زمرہ:کھیل بلحاظ قسم"
         },
         {
           "ID": 61184,
@@ -54,12 +70,24 @@
           "Title": "زمرہ:غذائی ثقافت"
         },
         {
+          "ID": 73730,
+          "Title": "زمرہ:خوش خوراکی"
+        },
+        {
           "ID": 554448,
           "Title": "زمرہ:تیار غذائیں بلحاظ بنیادی جزو"
         },
         {
           "ID": 783799,
           "Title": "زمرہ:موسیقی کے طائفے"
+        },
+        {
+          "ID": 816124,
+          "Title": "زمرہ:کھیلیں بلحاظ قسم"
+        },
+        {
+          "ID": 829683,
+          "Title": "زمرہ:غذائیں"
         }
       ],
       "Articles": [
@@ -74,6 +102,10 @@
         {
           "ID": 35053,
           "Title": "بیکن"
+        },
+        {
+          "ID": 37055,
+          "Title": "سؤر"
         },
         {
           "ID": 41416,
@@ -94,6 +126,10 @@
         {
           "ID": 62880,
           "Title": "آئس کریم"
+        },
+        {
+          "ID": 68093,
+          "Title": "روٹی"
         },
         {
           "ID": 70988,
@@ -120,8 +156,20 @@
           "Title": "قہوہ"
         },
         {
+          "ID": 108055,
+          "Title": "کوکو درخت"
+        },
+        {
+          "ID": 119008,
+          "Title": "دہنی جماع"
+        },
+        {
           "ID": 237830,
           "Title": "انڈا (خوراک)"
+        },
+        {
+          "ID": 265691,
+          "Title": "حوالہ جاتی مواد"
         },
         {
           "ID": 268154,
@@ -136,8 +184,16 @@
           "Title": "ویکیپیڈیا"
         },
         {
+          "ID": 517387,
+          "Title": "انڈا"
+        },
+        {
           "ID": 713030,
           "Title": "پیزا"
+        },
+        {
+          "ID": 713032,
+          "Title": "مسطح روٹی"
         },
         {
           "ID": 767115,
@@ -196,8 +252,16 @@
       ],
       "Articles": [
         {
+          "ID": 2372,
+          "Title": "آسٹریلیا"
+        },
+        {
           "ID": 11206,
           "Title": "پیرس"
+        },
+        {
+          "ID": 17671,
+          "Title": "انسان"
         },
         {
           "ID": 23268,
@@ -218,6 +282,10 @@
         {
           "ID": 114426,
           "Title": "کوئنزلینڈ"
+        },
+        {
+          "ID": 342936,
+          "Title": "باشعور آدمی"
         },
         {
           "ID": 410098,
@@ -246,6 +314,10 @@
           "Title": "زمرہ:صحت"
         },
         {
+          "ID": 70177,
+          "Title": "زمرہ:نگہداشت صحت"
+        },
+        {
           "ID": 74518,
           "Title": "زمرہ:ذاتی نگہداشت"
         },
@@ -270,6 +342,10 @@
         {
           "ID": 34864,
           "Title": "زمرہ:واقعات"
+        },
+        {
+          "ID": 53493,
+          "Title": "زمرہ:تاریخ بلحاظ مقام"
         },
         {
           "ID": 266150,
@@ -376,6 +452,10 @@
           "Title": "زمرہ:حیوانیات"
         },
         {
+          "ID": 7250,
+          "Title": "زمرہ:علمی اختصاصات"
+        },
+        {
           "ID": 14045,
           "Title": "زمرہ:علوم فطریہ"
         },
@@ -414,12 +494,20 @@
           "Title": "آم"
         },
         {
+          "ID": 18826,
+          "Title": "تولیدی نظام"
+        },
+        {
           "ID": 22975,
           "Title": "اونٹ"
         },
         {
           "ID": 30694,
           "Title": "آبی چکر"
+        },
+        {
+          "ID": 30845,
+          "Title": "مائیات"
         },
         {
           "ID": 31652,
@@ -500,8 +588,16 @@
       "Title": "People and self",
       "Categories": [
         {
+          "ID": 2146,
+          "Title": "زمرہ:سوانح حیات"
+        },
+        {
           "ID": 4176,
           "Title": "زمرہ:شخصیات"
+        },
+        {
+          "ID": 4354,
+          "Title": "زمرہ:حیات"
         },
         {
           "ID": 7630,
@@ -518,6 +614,18 @@
         {
           "ID": 70929,
           "Title": "زمرہ:خواتین"
+        },
+        {
+          "ID": 73989,
+          "Title": "زمرہ:شخصیت"
+        },
+        {
+          "ID": 352954,
+          "Title": "زمرہ:سوانح نگاریاں (کتب)"
+        },
+        {
+          "ID": 727817,
+          "Title": "زمرہ:سوانحی کاوشیں"
         }
       ],
       "Articles": [
@@ -750,12 +858,20 @@
           "Title": "زمرہ:عالمی تنظیمیں"
         },
         {
+          "ID": 10316,
+          "Title": "زمرہ:بشریات"
+        },
+        {
           "ID": 37215,
           "Title": "زمرہ:حقوق"
         },
         {
           "ID": 54101,
           "Title": "زمرہ:نسوانیت"
+        },
+        {
+          "ID": 67864,
+          "Title": "زمرہ:بین الحکومتی تنظیمیں"
         },
         {
           "ID": 550209,
@@ -1245,7 +1361,7 @@
         },
         {
           "ID": 752701,
-          "Title": "جامعہ ہارورڈ"
+          "Title": "ہارورڈ یونیورسٹی"
         },
         {
           "ID": 761077,
@@ -1318,12 +1434,24 @@
           "Title": "زمرہ:اطلاقی علوم"
         },
         {
+          "ID": 67315,
+          "Title": "زمرہ:ڈیٹابیس"
+        },
+        {
           "ID": 68264,
           "Title": "زمرہ:ٹیکنالوجی کی تاریخ"
         },
         {
           "ID": 83783,
           "Title": "زمرہ:خطوط الوقت طرزیات"
+        },
+        {
+          "ID": 96493,
+          "Title": "زمرہ:کمپیوٹر"
+        },
+        {
+          "ID": 96765,
+          "Title": "زمرہ:نظامت معطیات"
         },
         {
           "ID": 265927,
