--- a/nationalization/internal/languages/zh.json
+++ b/nationalization/internal/languages/zh.json
@@ -30,12 +30,24 @@
           "Title": "Category:营养学"
         },
         {
+          "ID": 65447,
+          "Title": "Category:颜色"
+        },
+        {
           "ID": 66054,
           "Title": "Category:嗜好"
         },
         {
           "ID": 66265,
           "Title": "Category:飲食"
+        },
+        {
+          "ID": 72465,
+          "Title": "Category:烹调方法"
+        },
+        {
+          "ID": 75848,
+          "Title": "Category:休閒"
         },
         {
           "ID": 146791,
@@ -46,8 +58,24 @@
           "Title": "Category:電影作品"
         },
         {
+          "ID": 947954,
+          "Title": "Category:锻炼"
+        },
+        {
+          "ID": 1616915,
+          "Title": "Category:各类体育运动"
+        },
+        {
+          "ID": 1657841,
+          "Title": "Category:美食学"
+        },
+        {
           "ID": 2762316,
           "Title": "Category:饮食文化"
+        },
+        {
+          "ID": 3722541,
+          "Title": "Category:色彩"
         },
         {
           "ID": 6220950,
@@ -68,6 +96,14 @@
           "Title": "白金汉宫"
         },
         {
+          "ID": 10331,
+          "Title": "口交"
+        },
+        {
+          "ID": 20704,
+          "Title": "猪属"
+        },
+        {
           "ID": 22473,
           "Title": "水叮噹"
         },
@@ -82,6 +118,14 @@
         {
           "ID": 38843,
           "Title": "咖啡"
+        },
+        {
+          "ID": 38907,
+          "Title": "小果咖啡"
+        },
+        {
+          "ID": 39009,
+          "Title": "可可樹"
         },
         {
           "ID": 40427,
@@ -160,6 +204,18 @@
           "Title": "生啤酒"
         },
         {
+          "ID": 153894,
+          "Title": "卵"
+        },
+        {
+          "ID": 159466,
+          "Title": "工具书"
+        },
+        {
+          "ID": 159742,
+          "Title": "咖啡屬"
+        },
+        {
           "ID": 162830,
           "Title": "曲奇"
         },
@@ -182,6 +238,10 @@
         {
           "ID": 211067,
           "Title": "AC/DC"
+        },
+        {
+          "ID": 263939,
+          "Title": "家豬"
         },
         {
           "ID": 266032,
@@ -232,6 +292,10 @@
           "Title": "芋角"
         },
         {
+          "ID": 399362,
+          "Title": "幽灵"
+        },
+        {
           "ID": 402042,
           "Title": "腐皮卷"
         },
@@ -250,6 +314,10 @@
         {
           "ID": 435595,
           "Title": "西式餡餅"
+        },
+        {
+          "ID": 435602,
+          "Title": "撻"
         },
         {
           "ID": 446796,
@@ -274,6 +342,14 @@
         {
           "ID": 501966,
           "Title": "實在論"
+        },
+        {
+          "ID": 546743,
+          "Title": "義大利綿羊乾酪"
+        },
+        {
+          "ID": 547202,
+          "Title": "野豬"
         },
         {
           "ID": 548840,
@@ -302,6 +378,10 @@
         {
           "ID": 721190,
           "Title": "大腳怪"
+        },
+        {
+          "ID": 752668,
+          "Title": "Band"
         },
         {
           "ID": 792024,
@@ -350,6 +430,10 @@
         {
           "ID": 1231784,
           "Title": "幸运饼干"
+        },
+        {
+          "ID": 1321264,
+          "Title": "压缩饼干"
         },
         {
           "ID": 1343841,
@@ -480,6 +564,10 @@
           "Title": "番茄湯"
         },
         {
+          "ID": 5181976,
+          "Title": "皮羅格"
+        },
+        {
           "ID": 5182398,
           "Title": "蘋果醬"
         },
@@ -498,6 +586,14 @@
         {
           "ID": 5428859,
           "Title": "螃蟹蘸酱"
+        },
+        {
+          "ID": 5505116,
+          "Title": "薑汁汽水"
+        },
+        {
+          "ID": 5574758,
+          "Title": "雪橇"
         },
         {
           "ID": 5644348,
@@ -554,6 +650,10 @@
         {
           "ID": 6345419,
           "Title": "夏威夷披萨"
+        },
+        {
+          "ID": 6463090,
+          "Title": "Mix-in"
         }
       ]
     },
@@ -596,12 +696,20 @@
       ],
       "Articles": [
         {
+          "ID": 1930,
+          "Title": "澳大利亚"
+        },
+        {
           "ID": 2740,
           "Title": "巴黎"
         },
         {
           "ID": 26508,
           "Title": "缅甸"
+        },
+        {
+          "ID": 37075,
+          "Title": "人"
         },
         {
           "ID": 65646,
@@ -622,6 +730,10 @@
         {
           "ID": 815231,
           "Title": "金字塔"
+        },
+        {
+          "ID": 1129233,
+          "Title": "智人"
         }
       ]
     },
@@ -652,6 +764,10 @@
         {
           "ID": 269634,
           "Title": "Category:健康照護職業"
+        },
+        {
+          "ID": 358696,
+          "Title": "Category:健康照護"
         },
         {
           "ID": 1645188,
@@ -688,6 +804,10 @@
         {
           "ID": 792152,
           "Title": "Category:事件"
+        },
+        {
+          "ID": 1246097,
+          "Title": "Category:依位置劃分的歷史"
         },
         {
           "ID": 1266522,
@@ -850,11 +970,19 @@
           "Title": "Category:各大洲動物"
         },
         {
+          "ID": 1244753,
+          "Title": "Category:科學學科"
+        },
+        {
           "ID": 1563381,
           "Title": "Category:物理科学"
         }
       ],
       "Articles": [
+        {
+          "ID": 89,
+          "Title": "水文学"
+        },
         {
           "ID": 10861,
           "Title": "自慰"
@@ -912,6 +1040,10 @@
           "Title": "悬浊液"
         },
         {
+          "ID": 84256,
+          "Title": "生殖器"
+        },
+        {
           "ID": 99706,
           "Title": "狼蛛科"
         },
@@ -952,6 +1084,10 @@
           "Title": "火烈鸟"
         },
         {
+          "ID": 172194,
+          "Title": "灯笼果"
+        },
+        {
           "ID": 190564,
           "Title": "肌肉"
         },
@@ -968,6 +1104,10 @@
           "Title": "花椰菜"
         },
         {
+          "ID": 230536,
+          "Title": "水稻"
+        },
+        {
           "ID": 279860,
           "Title": "鯖魚"
         },
@@ -976,8 +1116,16 @@
           "Title": "食物鏈"
         },
         {
+          "ID": 333023,
+          "Title": "草莓属"
+        },
+        {
           "ID": 364221,
           "Title": "瑪雅曆"
+        },
+        {
+          "ID": 384675,
+          "Title": "生殖系统"
         },
         {
           "ID": 389669,
@@ -1032,6 +1180,10 @@
           "Title": "思茅松"
         },
         {
+          "ID": 1032127,
+          "Title": "羽鳃鲐"
+        },
+        {
           "ID": 1115294,
           "Title": "松鴉屬"
         },
@@ -1042,6 +1194,14 @@
         {
           "ID": 1430987,
           "Title": "牛糞"
+        },
+        {
+          "ID": 1525414,
+          "Title": "黏果酸漿"
+        },
+        {
+          "ID": 1573171,
+          "Title": "屌"
         },
         {
           "ID": 1823398,
@@ -1056,8 +1216,20 @@
           "Title": "新西蘭喉盤魚"
         },
         {
+          "ID": 3198263,
+          "Title": "野草莓"
+        },
+        {
           "ID": 3278218,
           "Title": "脆轴偃麦草"
+        },
+        {
+          "ID": 3279014,
+          "Title": "普通小麦"
+        },
+        {
+          "ID": 3279062,
+          "Title": "香桃木"
         },
         {
           "ID": 3315383,
@@ -1114,8 +1286,16 @@
           "Title": "Category:姓氏"
         },
         {
+          "ID": 80938,
+          "Title": "Category:传记"
+        },
+        {
           "ID": 103291,
           "Title": "Category:女性"
+        },
+        {
+          "ID": 306825,
+          "Title": "Category:傳記作家"
         },
         {
           "ID": 338830,
@@ -1124,6 +1304,14 @@
         {
           "ID": 458987,
           "Title": "Category:生活"
+        },
+        {
+          "ID": 498737,
+          "Title": "Category:性格"
+        },
+        {
+          "ID": 770007,
+          "Title": "Category:生命"
         },
         {
           "ID": 1244713,
@@ -1380,8 +1568,20 @@
           "Title": "信任"
         },
         {
+          "ID": 258484,
+          "Title": "信徒"
+        },
+        {
           "ID": 313841,
           "Title": "信念"
+        },
+        {
+          "ID": 336385,
+          "Title": "快樂"
+        },
+        {
+          "ID": 729767,
+          "Title": "HIT"
         },
         {
           "ID": 1365643,
@@ -1444,12 +1644,20 @@
           "Title": "Category:国际组织"
         },
         {
+          "ID": 52341,
+          "Title": "Category:法律"
+        },
+        {
           "ID": 54908,
           "Title": "Category:女性主義"
         },
         {
           "ID": 58103,
           "Title": "Category:權利"
+        },
+        {
+          "ID": 258453,
+          "Title": "Category:人文學科"
         },
         {
           "ID": 414585,
@@ -1470,6 +1678,10 @@
         {
           "ID": 4272746,
           "Title": "Category:人文科學"
+        },
+        {
+          "ID": 5092207,
+          "Title": "Category:政府间国际组织"
         }
       ],
       "Articles": [
@@ -2326,6 +2538,10 @@
           "Title": "于默奥大学"
         },
         {
+          "ID": 6060521,
+          "Title": "信託 (法律)"
+        },
+        {
           "ID": 6121532,
           "Title": "荷兰数学和计算机科学研究学会"
         },
@@ -2340,6 +2556,10 @@
       "Title": "Technology and applied sciences",
       "Categories": [
         {
+          "ID": 42336,
+          "Title": "Category:工程技术"
+        },
+        {
           "ID": 44301,
           "Title": "Category:交通"
         },
@@ -2352,8 +2572,16 @@
           "Title": "Category:電子學"
         },
         {
+          "ID": 78031,
+          "Title": "Category:数据库"
+        },
+        {
           "ID": 144375,
           "Title": "Category:军事装备"
+        },
+        {
+          "ID": 161344,
+          "Title": "Category:数据管理"
         },
         {
           "ID": 190816,
@@ -2370,6 +2598,10 @@
         {
           "ID": 326428,
           "Title": "Category:应用科学"
+        },
+        {
+          "ID": 450347,
+          "Title": "Category:電腦"
         },
         {
           "ID": 455423,
