--- a/nationalization/internal/languages/az.json
+++ b/nationalization/internal/languages/az.json
@@ -30,12 +30,32 @@
           "Title": "Kateqoriya:Mətbəx"
         },
         {
+          "ID": 29541,
+          "Title": "Kateqoriya:Rənglər"
+        },
+        {
+          "ID": 38734,
+          "Title": "Kateqoriya:Rəng"
+        },
+        {
           "ID": 43950,
           "Title": "Kateqoriya:Musiqi qrupları"
         },
         {
+          "ID": 54625,
+          "Title": "Kateqoriya:Qida məhsulları"
+        },
+        {
+          "ID": 95321,
+          "Title": "Kateqoriya:İdman növləri"
+        },
+        {
           "ID": 96380,
           "Title": "Kateqoriya:Xörəklər"
+        },
+        {
+          "ID": 107212,
+          "Title": "Kateqoriya:Asudə vaxt"
         },
         {
           "ID": 125731,
@@ -84,6 +104,10 @@
           "Title": "Qəhvə"
         },
         {
+          "ID": 66783,
+          "Title": "Ərəb qəhvəsi"
+        },
+        {
           "ID": 70736,
           "Title": "Pivə"
         },
@@ -124,12 +148,20 @@
           "Title": "Sous"
         },
         {
+          "ID": 101278,
+          "Title": "Çöldonuzu"
+        },
+        {
           "ID": 104947,
           "Title": "Green Day"
         },
         {
           "ID": 107244,
           "Title": "Südlü kakao"
+        },
+        {
+          "ID": 111653,
+          "Title": "Donuz"
         },
         {
           "ID": 112990,
@@ -142,6 +174,10 @@
         {
           "ID": 133996,
           "Title": "Led Zeppelin"
+        },
+        {
+          "ID": 143243,
+          "Title": "Qəhvə ağacı"
         },
         {
           "ID": 153869,
@@ -236,6 +272,14 @@
           "Title": "Donuz əti"
         },
         {
+          "ID": 528575,
+          "Title": "Oral seks"
+        },
+        {
+          "ID": 535698,
+          "Title": "Basdırma"
+        },
+        {
           "ID": 535855,
           "Title": "Miçiqan salatı"
         },
@@ -262,6 +306,10 @@
         {
           "ID": 537713,
           "Title": "Riz qras"
+        },
+        {
+          "ID": 538024,
+          "Title": "Tart"
         },
         {
           "ID": 538072,
@@ -312,12 +360,20 @@
           "Title": "Paris"
         },
         {
+          "ID": 7068,
+          "Title": "İnsan"
+        },
+        {
           "ID": 52278,
           "Title": "Myanma"
         },
         {
           "ID": 60547,
           "Title": "Venesiya"
+        },
+        {
+          "ID": 102033,
+          "Title": "Avstraliya"
         },
         {
           "ID": 176547,
@@ -344,6 +400,10 @@
         {
           "ID": 101127,
           "Title": "Kateqoriya:İrsi xəstəliklər"
+        },
+        {
+          "ID": 106966,
+          "Title": "Kateqoriya:Səhiyyə"
         },
         {
           "ID": 106967,
@@ -382,6 +442,10 @@
         {
           "ID": 299204,
           "Title": "Kateqoriya:Mədəni həyat"
+        },
+        {
+          "ID": 397390,
+          "Title": "Kateqoriya:Yerlərinə görə tarix"
         }
       ],
       "Articles": [
@@ -488,6 +552,10 @@
           "Title": "Kateqoriya:Qitələrə görə fauna"
         },
         {
+          "ID": 273233,
+          "Title": "Kateqoriya:Qruplara görə elmlər"
+        },
+        {
           "ID": 507179,
           "Title": "Kateqoriya:Kimyəvi birləşmələr"
         }
@@ -504,6 +572,10 @@
         {
           "ID": 53785,
           "Title": "Pomidor"
+        },
+        {
+          "ID": 66762,
+          "Title": "Çiyələk"
         },
         {
           "ID": 66804,
@@ -554,6 +626,10 @@
           "Title": "Böyük pişiklər"
         },
         {
+          "ID": 112565,
+          "Title": "Meşə çiyələyi"
+        },
+        {
           "ID": 118955,
           "Title": "Sığın"
         },
@@ -562,8 +638,24 @@
           "Title": "Bağ çiyələyi"
         },
         {
+          "ID": 140921,
+          "Title": "Hidrologiya"
+        },
+        {
           "ID": 141801,
           "Title": "Mərsin"
+        },
+        {
+          "ID": 141802,
+          "Title": "Adi mərsin"
+        },
+        {
+          "ID": 143540,
+          "Title": "İri balqabaq"
+        },
+        {
+          "ID": 143939,
+          "Title": "Yumşaq buğda"
         },
         {
           "ID": 150413,
@@ -576,6 +668,14 @@
         {
           "ID": 158729,
           "Title": "Fragaria × vescana"
+        },
+        {
+          "ID": 159970,
+          "Title": "Peru yergilası"
+        },
+        {
+          "ID": 159971,
+          "Title": "Physalis philadelphica"
         },
         {
           "ID": 160366,
@@ -598,8 +698,16 @@
           "Title": "Xaya"
         },
         {
+          "ID": 317591,
+          "Title": "Cinsiyyət üzvləri (insan)"
+        },
+        {
           "ID": 332916,
           "Title": "Su dövranı"
+        },
+        {
+          "ID": 402868,
+          "Title": "Çəltik"
         },
         {
           "ID": 432619,
@@ -608,6 +716,10 @@
         {
           "ID": 454942,
           "Title": "Engelman küknarı"
+        },
+        {
+          "ID": 477002,
+          "Title": "Skumbriyalar"
         },
         {
           "ID": 487530,
@@ -636,6 +748,10 @@
           "Title": "Kateqoriya:Şəxslər"
         },
         {
+          "ID": 27923,
+          "Title": "Kateqoriya:Həyat"
+        },
+        {
           "ID": 36869,
           "Title": "Kateqoriya:Qadın"
         },
@@ -648,6 +764,14 @@
           "Title": "Kateqoriya:Soyadlar"
         },
         {
+          "ID": 116468,
+          "Title": "Kateqoriya:Şəxsiyyət"
+        },
+        {
+          "ID": 120399,
+          "Title": "Kateqoriya:Əlifba sırasına görə şəxslər"
+        },
+        {
           "ID": 151520,
           "Title": "Kateqoriya:Qadınlar"
         },
@@ -656,8 +780,16 @@
           "Title": "Kateqoriya:Film personajları"
         },
         {
+          "ID": 437415,
+          "Title": "Kateqoriya:Bioqrafik əsərlər"
+        },
+        {
           "ID": 437479,
           "Title": "Kateqoriya:Mənlik"
+        },
+        {
+          "ID": 464133,
+          "Title": "Kateqoriya:Şəxsiyyət nəzəriyyələri"
         }
       ],
       "Articles": [
@@ -862,8 +994,16 @@
           "Title": "Gözəllik"
         },
         {
+          "ID": 109829,
+          "Title": "Hit"
+        },
+        {
           "ID": 117628,
           "Title": "Fakt"
+        },
+        {
+          "ID": 404732,
+          "Title": "İnanc"
         },
         {
           "ID": 444990,
@@ -1346,6 +1486,10 @@
           "Title": "Kateqoriya:Hərbi texnika"
         },
         {
+          "ID": 63747,
+          "Title": "Kateqoriya:Texnika"
+        },
+        {
           "ID": 69920,
           "Title": "Kateqoriya:Nəqliyyat"
         },
@@ -1374,8 +1518,16 @@
           "Title": "Kateqoriya:Növünə görə texnologiyalar"
         },
         {
+          "ID": 371206,
+          "Title": "Kateqoriya:Kompüter"
+        },
+        {
           "ID": 451411,
           "Title": "Kateqoriya:Texnologiya tarixi"
+        },
+        {
+          "ID": 509142,
+          "Title": "Kateqoriya:Verilənlərin idarəedilməsi"
         }
       ],
       "Articles": [
