--- a/nationalization/internal/languages/ja.json
+++ b/nationalization/internal/languages/ja.json
@@ -30,6 +30,10 @@
           "Title": "Category:スポーツ"
         },
         {
+          "ID": 149763,
+          "Title": "Category:スポーツ競技"
+        },
+        {
           "ID": 166498,
           "Title": "Category:娯楽"
         },
@@ -42,12 +46,28 @@
           "Title": "Category:芸術"
         },
         {
+          "ID": 232866,
+          "Title": "Category:色"
+        },
+        {
+          "ID": 244895,
+          "Title": "Category:色名"
+        },
+        {
           "ID": 285365,
           "Title": "Category:趣味"
         },
         {
           "ID": 429268,
           "Title": "Category:レクリエーション"
+        },
+        {
+          "ID": 925337,
+          "Title": "Category:レジャー"
+        },
+        {
+          "ID": 1233296,
+          "Title": "Category:調理法"
         },
         {
           "ID": 2044747,
@@ -60,12 +80,20 @@
         {
           "ID": 3536599,
           "Title": "Category:食材別の料理"
+        },
+        {
+          "ID": 3572486,
+          "Title": "Category:フィットネス"
         }
       ],
       "Articles": [
         {
           "ID": 1155,
           "Title": "百科事典"
+        },
+        {
+          "ID": 2401,
+          "Title": "バンド"
         },
         {
           "ID": 4599,
@@ -112,12 +140,20 @@
           "Title": "パン"
         },
         {
+          "ID": 22962,
+          "Title": "卵"
+        },
+        {
           "ID": 23170,
           "Title": "ビスケット"
         },
         {
           "ID": 23935,
           "Title": "豚肉"
+        },
+        {
+          "ID": 25666,
+          "Title": "オーラルセックス"
         },
         {
           "ID": 25683,
@@ -152,6 +188,10 @@
           "Title": "フェラチオ"
         },
         {
+          "ID": 46739,
+          "Title": "カカオ"
+        },
+        {
           "ID": 50494,
           "Title": "目玉焼き"
         },
@@ -162,6 +202,14 @@
         {
           "ID": 55784,
           "Title": "バッキンガム宮殿"
+        },
+        {
+          "ID": 60456,
+          "Title": "幽霊"
+        },
+        {
+          "ID": 61393,
+          "Title": "イノシシ"
         },
         {
           "ID": 62915,
@@ -182,6 +230,10 @@
         {
           "ID": 74062,
           "Title": "生ビール"
+        },
+        {
+          "ID": 75354,
+          "Title": "ペコリーノ・ロマーノ"
         },
         {
           "ID": 81076,
@@ -208,12 +260,24 @@
           "Title": "スポンジケーキ"
         },
         {
+          "ID": 138737,
+          "Title": "タルト (洋菓子)"
+        },
+        {
+          "ID": 144881,
+          "Title": "コーヒーノキ"
+        },
+        {
           "ID": 151555,
           "Title": "スコッチエッグ"
         },
         {
           "ID": 153416,
           "Title": "ストリートダンス"
+        },
+        {
+          "ID": 153572,
+          "Title": "ラスク"
         },
         {
           "ID": 155063,
@@ -226,6 +290,10 @@
         {
           "ID": 179020,
           "Title": "パイ"
+        },
+        {
+          "ID": 181082,
+          "Title": "そり"
         },
         {
           "ID": 195988,
@@ -262,6 +330,10 @@
         {
           "ID": 304311,
           "Title": "現実"
+        },
+        {
+          "ID": 324335,
+          "Title": "堅パン"
         },
         {
           "ID": 364417,
@@ -332,6 +404,10 @@
           "Title": "勉強法"
         },
         {
+          "ID": 728366,
+          "Title": "ペコリーノ"
+        },
+        {
           "ID": 774278,
           "Title": "アキレス腱固め"
         },
@@ -400,6 +476,10 @@
           "Title": "チョコレート"
         },
         {
+          "ID": 1741182,
+          "Title": "ロティ"
+        },
+        {
           "ID": 1828737,
           "Title": "チョコチップ"
         },
@@ -414,6 +494,10 @@
         {
           "ID": 1928036,
           "Title": "サーロ"
+        },
+        {
+          "ID": 1931329,
+          "Title": "ブタ"
         },
         {
           "ID": 1965494,
@@ -438,6 +522,10 @@
         {
           "ID": 2166087,
           "Title": "ソーダブレッド"
+        },
+        {
+          "ID": 2199692,
+          "Title": "イノシシ属"
         },
         {
           "ID": 2250324,
@@ -480,6 +568,18 @@
           "Title": "ジュディッタ・パスタ"
         },
         {
+          "ID": 2726991,
+          "Title": "アラビカコーヒーノキ"
+        },
+        {
+          "ID": 2728821,
+          "Title": "参考図書"
+        },
+        {
+          "ID": 2748285,
+          "Title": "フラットブレッド"
+        },
+        {
           "ID": 2757538,
           "Title": "ピーテパルト"
         },
@@ -494,6 +594,10 @@
         {
           "ID": 2896498,
           "Title": "プッ仔コー"
+        },
+        {
+          "ID": 2956170,
+          "Title": "ピローク"
         },
         {
           "ID": 3017976,
@@ -632,6 +736,10 @@
           "Title": "ピラミッド"
         },
         {
+          "ID": 61601,
+          "Title": "ホモ・サピエンス"
+        },
+        {
           "ID": 81430,
           "Title": "キャンベラ"
         },
@@ -642,6 +750,14 @@
         {
           "ID": 439509,
           "Title": "界限街"
+        },
+        {
+          "ID": 560366,
+          "Title": "ヒト"
+        },
+        {
+          "ID": 1119369,
+          "Title": "オーストラリア"
         },
         {
           "ID": 1171820,
@@ -657,6 +773,10 @@
       "ID": 2147483639,
       "Title": "Health and fitness",
       "Categories": [
+        {
+          "ID": 103822,
+          "Title": "Category:医療"
+        },
         {
           "ID": 104171,
           "Title": "Category:医学"
@@ -858,6 +978,10 @@
           "Title": "Category:環境学"
         },
         {
+          "ID": 2905261,
+          "Title": "Category:科学的専門分野"
+        },
+        {
           "ID": 3275366,
           "Title": "Category:化合物"
         },
@@ -888,6 +1012,10 @@
           "Title": "米"
         },
         {
+          "ID": 7807,
+          "Title": "イネ"
+        },
+        {
           "ID": 8797,
           "Title": "コムギ"
         },
@@ -898,6 +1026,10 @@
         {
           "ID": 12978,
           "Title": "火"
+        },
+        {
+          "ID": 15455,
+          "Title": "性器"
         },
         {
           "ID": 23371,
@@ -960,8 +1092,16 @@
           "Title": "ライム"
         },
         {
+          "ID": 149112,
+          "Title": "水文学"
+        },
+        {
           "ID": 150667,
           "Title": "運動ニューロン"
+        },
+        {
+          "ID": 201179,
+          "Title": "小穂"
         },
         {
           "ID": 202025,
@@ -1016,6 +1156,10 @@
           "Title": "発芽"
         },
         {
+          "ID": 519567,
+          "Title": "ギンバイカ"
+        },
+        {
           "ID": 613792,
           "Title": "オナニー"
         },
@@ -1034,6 +1178,18 @@
         {
           "ID": 734955,
           "Title": "水循環"
+        },
+        {
+          "ID": 758450,
+          "Title": "アナコンダ (曖昧さ回避)"
+        },
+        {
+          "ID": 955112,
+          "Title": "グルクマ"
+        },
+        {
+          "ID": 982126,
+          "Title": "青魚"
         },
         {
           "ID": 1063903,
@@ -1056,12 +1212,44 @@
           "Title": "触腕"
         },
         {
+          "ID": 1529792,
+          "Title": "おちんちん"
+        },
+        {
+          "ID": 1982767,
+          "Title": "生殖器"
+        },
+        {
+          "ID": 2004429,
+          "Title": "オランダイチゴ属"
+        },
+        {
+          "ID": 2081000,
+          "Title": "トマティーヨ"
+        },
+        {
           "ID": 2153780,
           "Title": "ハネデューメロン"
         },
         {
+          "ID": 2155094,
+          "Title": "カンタロープ"
+        },
+        {
+          "ID": 2561790,
+          "Title": "パンコムギ"
+        },
+        {
+          "ID": 2901714,
+          "Title": "サバ属"
+        },
+        {
           "ID": 2905859,
           "Title": "カツオドリ属"
+        },
+        {
+          "ID": 3717134,
+          "Title": "ブドウホオズキ"
         },
         {
           "ID": 3846503,
@@ -1088,6 +1276,18 @@
         {
           "ID": 472831,
           "Title": "Category:女性"
+        },
+        {
+          "ID": 1576804,
+          "Title": "Category:伝記"
+        },
+        {
+          "ID": 1939580,
+          "Title": "Category:人格"
+        },
+        {
+          "ID": 2017580,
+          "Title": "Category:生命"
         },
         {
           "ID": 2904417,
@@ -1240,6 +1440,10 @@
           "Title": "フランシス・マリオン (軍人)"
         },
         {
+          "ID": 1002688,
+          "Title": "はらぺこあおむし"
+        },
+        {
           "ID": 1058358,
           "Title": "ジークムント・フロイト"
         },
@@ -1344,12 +1548,20 @@
           "Title": "信仰"
         },
         {
+          "ID": 10622,
+          "Title": "信者"
+        },
+        {
           "ID": 26826,
           "Title": "美"
         },
         {
           "ID": 332976,
           "Title": "幸福"
+        },
+        {
+          "ID": 385557,
+          "Title": "HIT"
         },
         {
           "ID": 617895,
@@ -1362,6 +1574,14 @@
         {
           "ID": 1281666,
           "Title": "自信"
+        },
+        {
+          "ID": 1425022,
+          "Title": "信念"
+        },
+        {
+          "ID": 2559253,
+          "Title": "ビリーヴァー"
         },
         {
           "ID": 2771747,
@@ -1418,6 +1638,10 @@
         {
           "ID": 104050,
           "Title": "Category:社会科学"
+        },
+        {
+          "ID": 104128,
+          "Title": "Category:人文科学"
         },
         {
           "ID": 126597,
@@ -1532,6 +1756,10 @@
         {
           "ID": 54541,
           "Title": "公立大学"
+        },
+        {
+          "ID": 61077,
+          "Title": "ソーシャルワーカー"
         },
         {
           "ID": 67842,
@@ -1788,6 +2016,10 @@
         {
           "ID": 538265,
           "Title": "ウプサラ大学"
+        },
+        {
+          "ID": 555020,
+          "Title": "信託"
         },
         {
           "ID": 563725,
@@ -2160,6 +2392,10 @@
           "Title": "Category:工学"
         },
         {
+          "ID": 105049,
+          "Title": "Category:データベース"
+        },
+        {
           "ID": 105248,
           "Title": "Category:コンピュータ"
         },
@@ -2172,6 +2408,10 @@
           "Title": "Category:交通"
         },
         {
+          "ID": 136415,
+          "Title": "Category:情報工学"
+        },
+        {
           "ID": 139641,
           "Title": "Category:技術"
         },
@@ -2182,6 +2422,10 @@
         {
           "ID": 158057,
           "Title": "Category:兵器"
+        },
+        {
+          "ID": 243620,
+          "Title": "Category:パーソナルコンピュータ"
         },
         {
           "ID": 244125,
@@ -2198,6 +2442,10 @@
         {
           "ID": 1991448,
           "Title": "Category:応用科学"
+        },
+        {
+          "ID": 2907732,
+          "Title": "Category:データ管理"
         },
         {
           "ID": 3326095,
