--- a/nationalization/internal/languages/nn.json
+++ b/nationalization/internal/languages/nn.json
@@ -10,6 +10,10 @@
           "Title": "Kategori:Kultur"
         },
         {
+          "ID": 1947,
+          "Title": "Kategori:Idrettar"
+        },
+        {
           "ID": 1954,
           "Title": "Kategori:Mat"
         },
@@ -22,8 +26,16 @@
           "Title": "Kategori:Underhaldning"
         },
         {
+          "ID": 6665,
+          "Title": "Kategori:Farger"
+        },
+        {
           "ID": 8452,
           "Title": "Kategori:Rekreasjon"
+        },
+        {
+          "ID": 8453,
+          "Title": "Kategori:Fritid"
         },
         {
           "ID": 29372,
@@ -42,12 +54,20 @@
           "Title": "Kategori:Ernæring"
         },
         {
+          "ID": 129514,
+          "Title": "Kategori:Trening"
+        },
+        {
           "ID": 148777,
           "Title": "Kategori:Idrett"
         },
         {
           "ID": 204582,
           "Title": "Kategori:Hobbyar"
+        },
+        {
+          "ID": 265591,
+          "Title": "Kategori:Farge"
         },
         {
           "ID": 291645,
@@ -64,8 +84,16 @@
           "Title": "Wikipedia"
         },
         {
+          "ID": 3005,
+          "Title": "Roti"
+        },
+        {
           "ID": 3205,
           "Title": "Kaffi"
+        },
+        {
+          "ID": 5846,
+          "Title": "Oppslagsverk"
         },
         {
           "ID": 6145,
@@ -86,6 +114,10 @@
         {
           "ID": 9800,
           "Title": "Sjokolade"
+        },
+        {
+          "ID": 12523,
+          "Title": "Egg"
         },
         {
           "ID": 17752,
@@ -124,8 +156,16 @@
           "Title": "Green Day"
         },
         {
+          "ID": 49614,
+          "Title": "Kaffiplante"
+        },
+        {
           "ID": 52259,
           "Title": "Pasta"
+        },
+        {
+          "ID": 54158,
+          "Title": "Gris"
         },
         {
           "ID": 58158,
@@ -142,6 +182,10 @@
         {
           "ID": 64347,
           "Title": "AC/DC"
+        },
+        {
+          "ID": 65737,
+          "Title": "Villsvin"
         },
         {
           "ID": 79770,
@@ -168,8 +212,16 @@
           "Title": "Surdeig"
         },
         {
+          "ID": 127954,
+          "Title": "Usyra brød"
+        },
+        {
           "ID": 134117,
           "Title": "Røyndom"
+        },
+        {
+          "ID": 153030,
+          "Title": "Kakaotre"
         },
         {
           "ID": 158836,
@@ -260,8 +312,16 @@
           "Title": "Paris"
         },
         {
+          "ID": 9724,
+          "Title": "Australia"
+        },
+        {
           "ID": 15552,
           "Title": "Myanmar"
+        },
+        {
+          "ID": 15910,
+          "Title": "Menneske"
         },
         {
           "ID": 22868,
@@ -296,6 +356,10 @@
         {
           "ID": 10297,
           "Title": "Kategori:Helse"
+        },
+        {
+          "ID": 29109,
+          "Title": "Kategori:Helsevesen"
         },
         {
           "ID": 32158,
@@ -342,6 +406,10 @@
         {
           "ID": 75805,
           "Title": "Kategori:Historie etter land"
+        },
+        {
+          "ID": 201856,
+          "Title": "Kategori:Historie etter område"
         },
         {
           "ID": 323075,
@@ -462,6 +530,10 @@
         {
           "ID": 238889,
           "Title": "Kategori:Dyr etter verdsdel"
+        },
+        {
+          "ID": 291724,
+          "Title": "Kategori:Vitskaplege fag"
         }
       ],
       "Articles": [
@@ -490,6 +562,10 @@
           "Title": "Mais"
         },
         {
+          "ID": 21306,
+          "Title": "Jordbærslekta"
+        },
+        {
           "ID": 22521,
           "Title": "Blomkål"
         },
@@ -504,6 +580,10 @@
         {
           "ID": 32460,
           "Title": "Muskel"
+        },
+        {
+          "ID": 41236,
+          "Title": "Kjønnsorgan"
         },
         {
           "ID": 41252,
@@ -558,12 +638,24 @@
           "Title": "Mango"
         },
         {
+          "ID": 160380,
+          "Title": "Markjordbær"
+        },
+        {
+          "ID": 174653,
+          "Title": "Forplantingssystem"
+        },
+        {
           "ID": 186697,
           "Title": "Skrikjer"
         },
         {
           "ID": 191367,
           "Title": "Hagejordbær"
+        },
+        {
+          "ID": 194842,
+          "Title": "Hydrologi"
         },
         {
           "ID": 257949,
@@ -578,8 +670,16 @@
           "Title": "Grunnfarge"
         },
         {
+          "ID": 298734,
+          "Title": "Kantalupp"
+        },
+        {
           "ID": 330334,
           "Title": "Edderkoppapar"
+        },
+        {
+          "ID": 341035,
+          "Title": "Myrt"
         },
         {
           "ID": 341500,
@@ -600,6 +700,10 @@
           "Title": "Kategori:Slektsnamn"
         },
         {
+          "ID": 28686,
+          "Title": "Kategori:Liv"
+        },
+        {
           "ID": 29652,
           "Title": "Kategori:Kvinner"
         },
@@ -608,8 +712,16 @@
           "Title": "Kategori:Sjølvet"
         },
         {
+          "ID": 68653,
+          "Title": "Kategori:Personlegdom"
+        },
+        {
           "ID": 163121,
           "Title": "Kategori:Folk"
+        },
+        {
+          "ID": 230574,
+          "Title": "Kategori:Biografiar"
         },
         {
           "ID": 296642,
@@ -798,8 +910,16 @@
           "Title": "Lukke"
         },
         {
+          "ID": 85548,
+          "Title": "Tru"
+        },
+        {
           "ID": 134099,
           "Title": "Venleik"
+        },
+        {
+          "ID": 203855,
+          "Title": "Glede"
         },
         {
           "ID": 338113,
@@ -864,6 +984,10 @@
         {
           "ID": 119037,
           "Title": "Kategori:Feminisme"
+        },
+        {
+          "ID": 276863,
+          "Title": "Kategori:Mellomstatlege organisasjonar"
         },
         {
           "ID": 334642,
@@ -1062,6 +1186,10 @@
           "Title": "Kategori:Teknologi"
         },
         {
+          "ID": 6205,
+          "Title": "Kategori:Datamaskinar"
+        },
+        {
           "ID": 22270,
           "Title": "Kategori:Elektronikk"
         },
@@ -1078,12 +1206,24 @@
           "Title": "Kategori:Ingeniørfag"
         },
         {
+          "ID": 70136,
+          "Title": "Kategori:Teknikk"
+        },
+        {
           "ID": 127532,
           "Title": "Kategori:Militærteknologi"
         },
         {
           "ID": 140636,
           "Title": "Kategori:Teknologihistorie"
+        },
+        {
+          "ID": 169725,
+          "Title": "Kategori:Databasar"
+        },
+        {
+          "ID": 169726,
+          "Title": "Kategori:Dataadministrasjon"
         },
         {
           "ID": 195114,
