--- a/nationalization/internal/languages/sk.json
+++ b/nationalization/internal/languages/sk.json
@@ -26,12 +26,24 @@
           "Title": "Kategória:Kultúra"
         },
         {
+          "ID": 13759,
+          "Title": "Kategória:Farby"
+        },
+        {
           "ID": 23296,
           "Title": "Kategória:Jedlá"
         },
         {
+          "ID": 30677,
+          "Title": "Kategória:Voľný čas"
+        },
+        {
           "ID": 52360,
           "Title": "Kategória:Hobby"
+        },
+        {
+          "ID": 58155,
+          "Title": "Kategória:Farba"
         },
         {
           "ID": 61724,
@@ -48,6 +60,22 @@
         {
           "ID": 198628,
           "Title": "Kategória:Rekreácia"
+        },
+        {
+          "ID": 244346,
+          "Title": "Kategória:Gastronómia"
+        },
+        {
+          "ID": 287022,
+          "Title": "Kategória:Príprava jedál"
+        },
+        {
+          "ID": 342978,
+          "Title": "Kategória:Šport podľa typu"
+        },
+        {
+          "ID": 343426,
+          "Title": "Kategória:Telesné cvičenie"
         }
       ],
       "Articles": [
@@ -80,6 +108,10 @@
           "Title": "Celibát"
         },
         {
+          "ID": 46642,
+          "Title": "Kávovník"
+        },
+        {
           "ID": 48946,
           "Title": "Chlieb"
         },
@@ -108,6 +140,10 @@
           "Title": "Cudnosť"
         },
         {
+          "ID": 99910,
+          "Title": "Príručková publikácia"
+        },
+        {
           "ID": 100438,
           "Title": "Realizmus"
         },
@@ -128,12 +164,36 @@
           "Title": "Duch (prízrak)"
         },
         {
+          "ID": 140325,
+          "Title": "Sviňa domáca"
+        },
+        {
+          "ID": 142474,
+          "Title": "Sus (rod)"
+        },
+        {
+          "ID": 142479,
+          "Title": "Diviak lesný"
+        },
+        {
+          "ID": 143438,
+          "Title": "Hudobná skupina"
+        },
+        {
           "ID": 166506,
           "Title": "Cestovina"
         },
         {
           "ID": 166978,
           "Title": "Sgt. Pepper’s Lonely Hearts Club Band"
+        },
+        {
+          "ID": 168297,
+          "Title": "Kávovník arabský"
+        },
+        {
+          "ID": 177944,
+          "Title": "Orálny sex"
         },
         {
           "ID": 187532,
@@ -176,6 +236,10 @@
           "Title": "Miesta v Harrym Potterovi"
         },
         {
+          "ID": 348123,
+          "Title": "Pecorino"
+        },
+        {
           "ID": 349339,
           "Title": "Judas"
         },
@@ -188,6 +252,10 @@
           "Title": "Bigfoot"
         },
         {
+          "ID": 376875,
+          "Title": "Kakaovník pravý"
+        },
+        {
           "ID": 383545,
           "Title": "Aqua (hudobná skupina)"
         },
@@ -198,6 +266,10 @@
         {
           "ID": 523809,
           "Title": "Kvások"
+        },
+        {
+          "ID": 566973,
+          "Title": "Vajce"
         },
         {
           "ID": 579635,
@@ -244,6 +316,10 @@
           "Title": "Mjanmarsko"
         },
         {
+          "ID": 3615,
+          "Title": "Austrália (štát)"
+        },
+        {
           "ID": 14579,
           "Title": "Pyramída"
         },
@@ -258,6 +334,10 @@
         {
           "ID": 65891,
           "Title": "Canberra"
+        },
+        {
+          "ID": 94534,
+          "Title": "Človek rozumný"
         }
       ]
     },
@@ -280,6 +360,10 @@
         {
           "ID": 19329,
           "Title": "Kategória:Hygiena"
+        },
+        {
+          "ID": 186641,
+          "Title": "Kategória:Zdravotníctvo"
         },
         {
           "ID": 218139,
@@ -306,6 +390,10 @@
         {
           "ID": 323664,
           "Title": "Kategória:Voľby podľa rokov"
+        },
+        {
+          "ID": 474450,
+          "Title": "Kategória:Dejiny podľa miesta"
         }
       ],
       "Articles": [
@@ -426,6 +514,10 @@
           "Title": "Pohybová sústava"
         },
         {
+          "ID": 20123,
+          "Title": "Rozmnožovacia sústava"
+        },
+        {
           "ID": 29129,
           "Title": "Pšenica"
         },
@@ -458,12 +550,20 @@
           "Title": "Oheň"
         },
         {
+          "ID": 94798,
+          "Title": "Hydrológia"
+        },
+        {
           "ID": 111624,
           "Title": "Kolobeh vody"
         },
         {
           "ID": 118480,
           "Title": "Ryža (potravina)"
+        },
+        {
+          "ID": 118510,
+          "Title": "Ryža siata"
         },
         {
           "ID": 127576,
@@ -482,6 +582,14 @@
           "Title": "Ananás pestovaný"
         },
         {
+          "ID": 221229,
+          "Title": "Jahoda obyčajná"
+        },
+        {
+          "ID": 230797,
+          "Title": "Tekvica veľkoplodá"
+        },
+        {
           "ID": 262482,
           "Title": "Rajčiak jedlý"
         },
@@ -492,6 +600,10 @@
         {
           "ID": 271228,
           "Title": "Ťava"
+        },
+        {
+          "ID": 285416,
+          "Title": "Jahoda (rod)"
         },
         {
           "ID": 302596,
@@ -514,6 +626,10 @@
           "Title": "Veľké mačky"
         },
         {
+          "ID": 456514,
+          "Title": "Klások"
+        },
+        {
           "ID": 457538,
           "Title": "Pleva (gluma)"
         },
@@ -532,6 +648,14 @@
         {
           "ID": 617774,
           "Title": "Potravinový reťazec"
+        },
+        {
+          "ID": 626623,
+          "Title": "Tomatillo"
+        },
+        {
+          "ID": 628037,
+          "Title": "Citrónovník pravý"
         }
       ]
     },
@@ -539,6 +663,10 @@
       "ID": 2147483643,
       "Title": "People and self",
       "Categories": [
+        {
+          "ID": 38339,
+          "Title": "Kategória:Biografia"
+        },
         {
           "ID": 48499,
           "Title": "Kategória:Ľudia"
@@ -548,12 +676,20 @@
           "Title": "Kategória:Priezviská"
         },
         {
+          "ID": 76654,
+          "Title": "Kategória:Život"
+        },
+        {
           "ID": 155686,
           "Title": "Kategória:Filmové postavy"
         },
         {
           "ID": 166917,
           "Title": "Kategória:Každodenný život"
+        },
+        {
+          "ID": 187871,
+          "Title": "Kategória:Osobnosť"
         },
         {
           "ID": 242896,
@@ -772,6 +908,10 @@
         {
           "ID": 103201,
           "Title": "Viera (náboženstvo)"
+        },
+        {
+          "ID": 161910,
+          "Title": "Hit"
         },
         {
           "ID": 266334,
@@ -1038,6 +1178,10 @@
           "Title": "Kategória:Doprava"
         },
         {
+          "ID": 6477,
+          "Title": "Kategória:Technika"
+        },
+        {
           "ID": 7160,
           "Title": "Kategória:Internet"
         },
@@ -1058,6 +1202,10 @@
           "Title": "Kategória:Dizajn"
         },
         {
+          "ID": 44481,
+          "Title": "Kategória:Databázy"
+        },
+        {
           "ID": 81905,
           "Title": "Kategória:Technológie"
         },
@@ -1070,8 +1218,16 @@
           "Title": "Kategória:Výpočtová technika"
         },
         {
+          "ID": 158038,
+          "Title": "Kategória:Počítače"
+        },
+        {
           "ID": 233377,
           "Title": "Kategória:Inžinierstvo"
+        },
+        {
+          "ID": 355401,
+          "Title": "Kategória:Riadenie dát"
         },
         {
           "ID": 504920,
